--- a/apk/res/values-in/strings.xml
+++ b/apk/res/values-in/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"suhu kulit"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Membaca suhu kulit"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Menulis suhu kulit"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Data ini mencakup semua catatan kesehatan yang disinkronkan dan ditambahkan ke Health Connect. Rekam medis ini mungkin tidak lengkap dan tidak menyertakan deskripsi medis dari catatan kesehatan Anda."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Semua catatan kesehatan"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"semua catatan kesehatan"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Menulis semua catatan kesehatan"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Jika Anda memberikan akses, aplikasi dapat membaca dan menulis data seperti alergi, hasil lab, vaksin, dan lainnya\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Jika Anda memberikan akses, aplikasi dapat membaca data seperti alergi, hasil lab, vaksin, dan lainnya\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tentang catatan kesehatan"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Data yang akan dibagikan mencakup"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Jika Anda mengizinkan, <xliff:g id="APP_NAME">%1$s</xliff:g> dapat membagikan catatan kesehatan Anda ke Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sinkronkan catatan kesehatan Anda dari berbagai aplikasi dan sumber untuk menyimpannya di satu tempat"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Hapus semua izin?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musik"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Lainnya"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Tanpa panduan"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> m"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> j <xliff:g id="MIN">%2$s</xliff:g> m"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> j"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integrasi sedang berlangsung"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect sedang diintegrasikan dengan sistem Android.\n\nProses ini memerlukan waktu beberapa saat selagi data dan izin ditransfer."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Jangan tutup aplikasi sampai Anda mendapatkan notifikasi bahwa proses telah selesai."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integrasi Health Connect sedang berlangsung"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Diperlukan update"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect sedang diintegrasikan dengan sistem Android sehingga Anda dapat mengaksesnya langsung dari setelan."</string>
     <string name="update_button" msgid="4544529019832009496">"Update"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Mulai update ini agar Health Connect dapat melanjutkan integrasi dengan setelan sistem Anda"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Update sekarang"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Update sistem diperlukan"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Sebelum melanjutkan, update sistem ponsel Anda."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Jika sistem ponsel telah diupdate, coba mulai ulang ponsel Anda untuk melanjutkan integrasi"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect perlu diupdate"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Sebelum melanjutkan, update aplikasi Health Connect ke versi terbaru."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Perlu lebih banyak ruang penyimpanan"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect memerlukan ruang penyimpanan ponsel sebesar <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> agar integrasi dapat dilanjutkan.\n\nKosongkan beberapa ruang penyimpanan di ponsel Anda lalu coba lagi."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Coba lagi"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Kosongkan ruang penyimpanan"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Perlu lebih banyak ruang penyimpanan"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect memerlukan ruang penyimpanan ponsel sebesar <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> untuk melanjutkan integrasi."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrasi dijeda"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikasi Health Connect ditutup saat sedang diintegrasikan dengan sistem Android.\n\nKlik lanjutkan untuk membuka kembali aplikasi dan melanjutkan transfer data dan izin."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Untuk menyimpan data Health Connect Anda, selesaikan integrasi ini dalam <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Ketuk untuk melanjutkan integrasi Health Connect dengan sistem Android. Untuk menyimpan data Anda, selesaikan proses ini dalam <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Ketuk untuk melanjutkan integrasi Health Connect dengan sistem Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Lanjutkan"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Lanjutkan integrasi Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Untuk menyimpan data Anda, selesaikan proses ini dalam <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Aplikasi perlu diupdate"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> perlu diupdate agar tetap disinkronkan dengan Health Connect. Update mungkin tidak tersedia untuk semua aplikasi."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Beberapa aplikasi perlu diupdate agar tetap disinkronkan dengan Health Connect. Update mungkin tidak tersedia untuk semua aplikasi."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integrasi Health Connect tidak selesai"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Anda akan mendapatkan notifikasi saat integrasi tersedia kembali."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Oke"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integrasi Health Connect tidak selesai"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Baca selengkapnya"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integrasi Health Connect selesai"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Buka"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Yang baru"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Sekarang Anda dapat mengakses Health Connect langsung dari setelan. Uninstal aplikasi Health Connect kapan saja untuk mengosongkan ruang penyimpanan."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Oke"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Hapus akses <xliff:g id="DATA_TYPE">%s</xliff:g> untuk semua aplikasi di smartwatch?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Tanda centang"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Tanda silang"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Saat ini, <xliff:g id="APP_NAME">%1$s</xliff:g> dapat mengakses data kebugaran dan kesehatan <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Izinkan <xliff:g id="APP_NAME">%1$s</xliff:g> mengakses data kebugaran dan kesehatan kapan saja?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> memiliki akses ke <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Kelola izin kebugaran dan kesehatan"</string>
 </resources>
