--- a/apk/res/values-ar/strings.xml
+++ b/apk/res/values-ar/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"درجة حرارة الجلد"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"قراءة بيانات درجة حرارة الجلد"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"كتابة بيانات درجة حرارة الجلد"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"يشمل ذلك جميع السجلّات الصحية التي تمت مزامنتها مع تطبيق Health Connect وإضافتها إليه. قد لا يمثّل ذلك سجلّك الطبي بالكامل ولا يتضمّن وصفًا طبيًا لسجلّاتك الصحية."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"كل السجلّات الصحية"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"كل السجلّات الصحية"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"كتابة كل السجلّات الصحية"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"إذا منحت هذا الإذن، سيتمكّن هذا التطبيق من قراءة البيانات وكتابتها، مثل البيانات المتعلّقة بالحساسية والنتائج المعملية واللقاحات وغير ذلك\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"إذا منحت هذا الإذن، سيتمكّن هذا التطبيق من قراءة البيانات، مثل البيانات المتعلّقة بالحساسية والنتائج المعملية واللقاحات وغير ذلك\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"لمحة عن السجلات الصحية"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"تشمل البيانات المراد مشاركتها ما يلي:"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"إذا منحت هذا الإذن، سيتمكّن \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" من مشاركة السجلات الصحية مع تطبيق Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"يمكنك مزامنة السجلات الصحية من مختلف التطبيقات والمصادر للاحتفاظ بها في مكان واحد"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"هل تريد إزالة كل الأذونات؟"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"موسيقى"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"غير ذلك"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"غير موجَّهة"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> د"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> ساعة و<xliff:g id="MIN">%2$s</xliff:g> دقيقة"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> س"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"جارٍ تنفيذ عملية الدمج"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"يتم دمج تطبيق Health Connect حاليًا مع نظام Android.\n\nقد تستغرق العملية بعض الوقت أثناء نقل البيانات والأذونات."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"يُرجى عدم إغلاق التطبيق حتى تتلقّى إشعارًا باكتمال العملية."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"جارٍ تنفيذ عملية دمج تطبيق Health Connect"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"مطلوب التحديث"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"يتم دمج تطبيق Health Connect حاليًا مع نظام Android لتتمكّن من الوصول إليه مباشرةً من خلال الإعدادات."</string>
     <string name="update_button" msgid="4544529019832009496">"تحديث"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"يُرجى بدء تنزيل هذا التحديث ليتمكّن تطبيق Health Connect من مواصلة عملية الدمج مع إعدادات النظام."</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"التحديث الآن"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"يجب تحديث النظام"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"قبل المتابعة، يُرجى تحديث نظام الهاتف."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"إذا سبق لك تحديث نظام الهاتف، جرِّب إعادة تشغيل الهاتف لمواصلة عملية الدمج."</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"مطلوب تحديث تطبيق Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"قبل المتابعة، يُرجى تثبيت أحدث إصدار من تطبيق Health Connect."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"مطلوب المزيد من مساحة التخزين"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"يحتاج تطبيق Health Connect إلى <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> من مساحة التخزين على هاتفك لمواصلة عملية الدمج.\n\nيُرجى إخلاء بعض المساحة على هاتفك ثم إعادة المحاولة."</string>
     <string name="try_again_button" msgid="8745496819992160789">"إعادة المحاولة"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"إخلاء بعض المساحة"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"مطلوب المزيد من مساحة التخزين"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"يحتاج تطبيق Health Connect إلى <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> من مساحة التخزين على هاتفك لمواصلة عملية الدمج."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"تم إيقاف عملية الدمج مؤقتًا"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"تم إغلاق تطبيق Health Connect أثناء تنفيذ عملية الدمج مع نظام Android.\n\nانقر على \"استئناف\" لإعادة فتح التطبيق ومواصلة عملية نقل البيانات والأذونات."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"للحفاظ على بيانات تطبيق Health Connect، يُرجى إكمال عملية الدمج هذه في غضون <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"انقر لمواصلة عملية دمج تطبيق Health Connect مع نظام Android. للحفاظ على بياناتك، يُرجى إكمال عملية الدمج هذه في غضون <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"انقر لمواصلة عملية دمج تطبيق Health Connect مع نظام Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"متابعة"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"استئناف عملية دمج تطبيق Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"للحفاظ على بياناتك، يُرجى إكمال عملية الدمج هذه في غضون <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"يجب تحديث التطبيق"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"يجب تحديث \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" لمواصلة مزامنته مع تطبيق Health Connect. وقد لا تكون التحديثات متاحة لبعض التطبيقات."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"يجب تحديث بعض التطبيقات لمواصلة مزامنتها مع تطبيق Health Connect. وقد لا تكون التحديثات متاحة لبعض التطبيقات."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"تعذّر اكتمال عملية دمج تطبيق Health Connect"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"ستتلقّى إشعارًا عند مواصلة عملية الدمج مرة أخرى."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"حسنًا"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"تعذّر اكتمال عملية دمج تطبيق Health Connect"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"مزيد من المعلومات"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"اكتملت عملية دمج تطبيق Health Connect"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"فتح"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"ما الجديد؟"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"يمكنك الآن الوصول إلى تطبيق Health Connect مباشرةً من خلال الإعدادات. ويمكنك أيضًا إلغاء تثبيت تطبيق Health Connect في أي وقت إذا أردت إخلاء مساحة تخزين."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"حسنًا"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"هل تريد إزالة إذن الوصول إلى بيانات <xliff:g id="DATA_TYPE">%s</xliff:g> لجميع التطبيقات على ساعتك؟"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"علامة اختيار"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"علامة خطأ"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"يمكن لـ \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" حاليًا الوصول إلى بيانات الصحة واللياقة البدنية <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"هل تريد السماح لـ \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" بالوصول إلى بيانات الصحة واللياقة البدنية في كل الأوقات؟"</string>
+    <string name="current_access" msgid="1457167070428176139">"لدى \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" إذن بالوصول إلى <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"إدارة أذونات الصحة واللياقة البدنية"</string>
 </resources>
