--- a/apk/res/values-az/strings.xml
+++ b/apk/res/values-az/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"dəri temperaturu"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Dəri temperaturunun oxunması"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Dəri temperaturunun yazılması"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Buraya Health Connect ilə sinxronlaşdırılan və ona əlavə edilən bütün sağlamlıq qeydləri daxildir. Bu, sağlamlıq tarixçənizi tam əhatə etməyə bilər və sağlamlıq qeydlərinizin tibbi təsvirini ehtiva etmir."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Bütün sağlamlıq qeydləri"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"bütün sağlamlıq qeydləri"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Bütün sağlamlıq qeydlərini əlavə edin"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"İcazə versəniz, tətbiq allergiya, laboratoriya nəticələri, peyvəndlər və s. kimi datanı oxuya və yaza bilər\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"İcazə versəniz, tətbiq allergiya, laboratoriya nəticələri, peyvəndlər və s. kimi datanı oxuya bilər\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sağlamlıq qeydləri haqqında"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Paylaşılacaq dataya daxildir"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"İcazə versəniz, <xliff:g id="APP_NAME">%1$s</xliff:g> sağlamlıq qeydlərini Health Connect ilə paylaşa bilər."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sağlamlıq qeydlərini bir yerdə saxlamaq üçün fərqli tətbiq və mənbələrdən sinxronlaşdırın"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Bütün icazələr silinsin?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musiqi"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Digər"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Təlimatsız"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> d"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> s <xliff:g id="MIN">%2$s</xliff:g> dəq"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> s"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"İnteqrasiya edilir"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect Android sistemi ilə inteqrasiya edilir.\n\nData və icazələrin ötürülməsi bir qədər vaxt apara bilər."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Proses tamamlanana qədər tətbiqi bağlamayın."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect inteqrasiya edilir"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Güncəllənmə lazımdır"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Ayarlardan daxil ola bilməyiniz üçün Health Connect Android sistemi ilə inteqrasiya edilir."</string>
     <string name="update_button" msgid="4544529019832009496">"Güncəlləyin"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Health Connect-in sistem ayarları ilə inteqrasiyaya davam etməsi üçün bu güncəllənməni başladın"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"İndi güncəlləyin"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Sistem güncəllənməlidir"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Davam etməzdən əvvəl telefon sistemini güncəlləyin."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Telefon sistemi güncəllənibsə, inteqrasiyaya davam etmək üçün telefonu yenidən başladın"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect güncəllənməlidir"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Davam etməzdən əvvəl Health Connect tətbiqini son versiyaya güncəlləyin."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Daha çox yer lazımdır"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"İnteqrasiyanın davam etməsi üçün Health Connect telefonda <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> yaddaş yeri tələb edir.\n\nTelefonda yer boşaldıb, yenidən cəhd edin."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Yenə sınayın"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Yer boşaldın"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Daha çox yer lazımdır"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"İnteqrasiyaya davam etmək üçün Health Connect telefonda <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> yaddaş yeri tələb edir."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"İnteqrasiyaya pauza verildi"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Android sistemi ilə inteqrasiya zamanı Health Connect bağlandı.\n\nTətbiqi yenidən açmaq üçün \"bərpa edin\" üzərinə klikləyin, data və icazələrin ötürülməsinə davam edin."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Health Connect datasını saxlamaq üçün <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ərzində tamamlayın"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connect-in Android sistemi ilə inteqrasiyasını davam etdirmək üçün toxunun. Datanı saxlamaq üçün <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ərzində tamamlayın"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connect-in Android sistemi ilə inteqrasiyasını davam etdirmək üçün toxunun."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Davam edin"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect inteqrasiyasını bərpa edin"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Datanı saxlamaq üçün <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ərzində tamamlayın"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Tətbiq güncəllənməlidir"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect ilə sinxronlaşdırmağa davam etmək üçün <xliff:g id="APP_NAME">%1$s</xliff:g> güncəllənməlidir. Bütün tətbiqlər üçün güncəllənmə əlçatan olmaya bilər."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect ilə sinxronlaşdırmağa davam etmək üçün bəzi tətbiqlər güncəllənməlidir. Bütün tətbiqlər üçün güncəllənmə əlçatan olmaya bilər."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect inteqrasiya edilmədi"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Yenidən əlçatan olduqda bildiriş alacaqsınız."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Anladım"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect inteqrasiya edilmədi"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Ətraflı oxuyun"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect inteqrasiya edildi"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Açın"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Yeniliklər"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Birbaşa ayarlardan Health Connect-ə daxil ola bilərsiniz. Yaddaş yerini artırmaq üçün Health Connect tətbiqini sistemdən silin."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Anladım"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Saatınızdakı bütün tətbiqlər üçün <xliff:g id="DATA_TYPE">%s</xliff:g> girişi silinsin?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Təsdiq işarəsi"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Çarpaz nişan"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Hazırda <xliff:g id="APP_NAME">%1$s</xliff:g> tətbiqinin fitnes və sağlamlıq datasına giriş icazəsi var (<xliff:g id="ALLOW_MODE">%2$s</xliff:g>)"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> tətbiqinə hər zaman fitnes və sağlamlıq datasına giriş icazəsi verilsin?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> tətbiqinin <xliff:g id="DATA_TYPES">%2$s</xliff:g> datasına giriş icazəsi var."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Fitnes və sağlamlıq icazələrini idarə edin"</string>
 </resources>
