--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"тэмпература скуры"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Чытанне даных пра тэмпературу скуры"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Запіс даных пра тэмпературу скуры"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Сюды ўваходзіць уся інфармацыя пра стан здароўя, сінхранізаваная і дададзеная ў праграму \"Здароўе і спорт\". Гэта не абавязкова павінна быць ваша поўная медыцынская карта, таксама яна не ўключае медыцынскае апісанне вашай інфармацыі пра стан здароўя."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Уся інфармацыя пра стан здароўя"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"уся інфармацыя пра стан здароўя"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Запісваць усю інфармацыю пра стан здароўя"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Калі вы дазволіце доступ, праграма зможа счытваць і запісваць такія даныя, як інфармацыя пра алергію і прышчэпкі, вынікі аналізаў і шмат іншага\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Калі вы дазволіце доступ, праграма зможа счытваць такія даныя, як інфармацыя пра алергію і прышчэпкі, вынікі аналізаў і шмат іншага\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Аб інфармацыі пра стан здароўя"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Даныя для абагульвання ўключаюць наступныя:"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Калі вы дазволіце доступ, праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" зможа абагульваць вашу інфармацыю пра стан здароўя з платформай \"Здароўе і спорт\"."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Сінхранізуйце інфармацыю пра стан здароўя з розных праграм і крыніц, каб яна захоўвалася ў адным месцы"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Выдаліць усе дазволы?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Музыка"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Іншае"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Без кантролю"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> хв"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> гадз <xliff:g id="MIN">%2$s</xliff:g> хв"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> гадз"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Выконваецца інтэграцыя"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Ідзе інтэграцыя праграмы \"Здароўе і спорт\" з сістэмай Android.\n\nПерадача вашых даных і дазволаў можа заняць некаторы час."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Не закрывайце праграму, пакуль не атрымаеце апавяшчэння аб завяршэнні гэтага працэсу."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Ідзе інтэграцыя праграмы \"Здароўе і спорт\""</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Патрабуецца абнаўленне"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Праграма \"Здароўе і спорт\" інтэгруецца з сістэмай Android, таму ў вас ёсць доступ да яе непасрэдна з налад."</string>
     <string name="update_button" msgid="4544529019832009496">"Абнавіць"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Запусціце гэтае абнаўленне, каб праграма \"Здароўе і спорт\" працягнула абнаўленне з наладамі вашай сістэмы"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Абнавіць"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Патрабуецца абнаўленне сістэмы"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Спачатку абнавіце сістэму свайго тэлефона."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Калі вы ўжо абнавілі сістэму свайго тэлефона, паспрабуйце перазапусціць тэлефон, каб працягнуць інтэграцыю"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Патрабуецца абнаўленне праграмы \"Здароўе і спорт\""</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Спачатку абнавіце праграму \"Здароўе і спорт\" да апошняй версіі."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Патрабуецца больш месца"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Праграме \"Здароўе і спорт\" патрабуецца <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> месца ў сховішчы тэлефона, каб працягнуць інтэграцыю.\n\nАчысціце месца на тэлефоне, а потым паўтарыце спробу."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Паўтарыць спробу"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Ачысціць месца"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Патрабуецца больш месца"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Праграме \"Здароўе і спорт\" патрабуецца <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> месца ў сховішчы тэлефона, каб працягнуць інтэграцыю."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Інтэграцыя прыпынена"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Праграма \"Здароўе і спорт\" была закрыта ў час інтэграцыі з сістэмай Android.\n\nКаб адкрыць праграму зноў і працягнуць перанос вашых даных і дазволаў, націсніце \"Узнавіць\"."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Каб захаваць свае даныя з праграмы \"Здароўе і спорт\", выканайце гэтае дзеянне за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Націсніце, каб працягнуць інтэграцыю праграмы \"Здароўе і спорт\" з сістэмай Android. Каб захаваць свае даныя, выканайце гэтае дзеянне за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Націсніце, каб працягнуць інтэграцыю праграмы \"Здароўе і спорт\" з сістэмай Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Працягнуць"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Узнавіце інтэграванне праграмы \"Здароўе і спорт\""</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Каб захаваць свае даныя, выканайце гэтае дзеянне за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Патрабуецца абнаўленне праграмы"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Каб сінхранізацыя даных з сэрвісам \"Здароўе і спорт\" не перапынілася, праграму \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" неабходна абнавіць. Абнаўленні могуць быць даступнымі не для ўсіх праграм."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Каб сінхранізацыя даных з сэрвісам \"Здароўе і спорт\" не перапынілася, некаторыя праграмы неабходна абнавіць. Абнаўленні могуць быць даступнымі не для ўсіх праграм."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Не ўдалося выканаць інтэграцыю праграмы \"Здароўе і спорт\""</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Вы атрымаеце апавяшчэнне, калі яно стане даступным зноў."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Не ўдалося выканаць інтэграцыю праграмы \"Здароўе і спорт\""</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Чытаць далей"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Інтэграцыя праграмы \"Здароўе і спорт\" завершана"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Адкрыць"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Што новага"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Цяпер у вас ёсць доступ да праграмы \"Здароўе і спорт\" непасрэдна з налад. Каб вызваліць месца ў сховішчы, яе можна выдаліць у любы час."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Забараніць усім праграмам доступ да даных \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" на гадзінніку?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Птушка"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крыжык"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"На гэты момант <xliff:g id="APP_NAME">%1$s</xliff:g> мае доступ да даных пра фізічную актыўнасць і фізічны стан <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Дазволіць праграме \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" пастаянны доступ да даных пра фізічную актыўнасць і фізічны стан?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> мае доступ да наступнай інфармацыі: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Дазволы на кіраванне данымі пра фізічную актыўнасць і фізічны стан"</string>
 </resources>
