--- a/apk/res/values-bn/strings.xml
+++ b/apk/res/values-bn/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"শরীরের তাপমাত্রার ডেটা"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"শরীরের তাপমাত্রার ডেটা দেখার অনুমতি"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"শরীরের তাপমাত্রার ডেটা এডিট করার অনুমতি"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"এটিতে সিঙ্ক করা সব স্বাস্থ্য বিষয়ক রেকর্ড ও Health Connect-এ যোগ করা ডেটা অন্তর্ভুক্ত। এটি হয়ত আপনার সম্পূর্ণ মেডিকেল রেকর্ড নয় এবং আপনার স্বাস্থ্য বিষয়ক রেকর্ডের মেডিকেল বিবরণ হয়ত অন্তর্ভুক্ত নেই।"</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"স্বাস্থ্য বিষয়ক সব রেকর্ড"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"স্বাস্থ্য বিষয়ক সব রেকর্ড"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"স্বাস্থ্য বিষয়ক সব রেকর্ড লিখুন"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"আপনি অ্যাক্সেস দিলে, অ্যাপটি অ্যালার্জি, ল্যাবের ফলাফল, ভ্যাকসিন ও আরও অনেক কিছুর মতো ডেটা পড়তে ও সেভ করতে পারবে\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"আপনি অ্যাক্সেস দিলে, অ্যাপটি অ্যালার্জি, ল্যাবের ফলাফল, ভ্যাকসিন ও আরও অনেক কিছুর মতো ডেটা পড়তে পারবে\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"স্বাস্থ্য বিষয়ক রেকর্ড সম্পর্কে"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"শেয়ার করা ডেটাতে এই তথ্য অন্তর্ভুক্ত"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"আপনি অনুমতি দিলে, <xliff:g id="APP_NAME">%1$s</xliff:g> Health Connect-এর সাথে স্বাস্থ্য বিষয়ক রেকর্ড শেয়ার করতে পারবে।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"আপনার স্বাস্থ্য বিষয়ক রেকর্ড এক জায়গাতেই রাখতে আলাদা অ্যাপ ও সোর্স থেকে তা সিঙ্ক করুন"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"সব অনুমতি সরাবেন?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"মিউজিক"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"অন্যান্য"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"গাইড ছাড়া"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> মিনিট"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> ঘণ্টা <xliff:g id="MIN">%2$s</xliff:g> মিনিট"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> ঘণ্টা"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"ইন্টিগ্রেশনের কাজ চলছে"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect, Android সিস্টেমের মাধ্যমে ইন্টিগ্রেট করা হচ্ছে।\n\nআপনার ডেটা ও অনুমতি ট্রান্সফার হতে কিছুটা সময় লাগতে পারে।"</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"প্রসেস যে সম্পূর্ণ হয়েছে সেই সম্পর্কিত বিজ্ঞপ্তি না পাওয়া পর্যন্ত অ্যাপ বন্ধ করবেন না।"</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect ইন্টিগ্রেশনের কাজ চলছে"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"আপডেট করা প্রয়োজন"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect Android সিস্টেমের মাধ্যমে ইন্টিগ্রেট করা হচ্ছে যাতে আপনি নিজের সেটিংস থেকে এটি সরাসরি অ্যাক্সেস করতে পারেন।"</string>
     <string name="update_button" msgid="4544529019832009496">"আপডেট করুন"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"এই আপডেট চালু করুন যাতে Health Connect আপনার সিস্টেমের সেটিংসের মাধ্যমে ইন্টিগ্রেশন চালিয়ে যেতে পারে"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"এখনই আপডেট করুন"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"সিস্টেম আপডেট করা প্রয়োজন"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"চালিয়ে যাওয়ার আগে, আপনার ফোনের সিস্টেম আপডেট করুন।"</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"আপনি আগেই নিজের ফোনের সিস্টেম আপডেট করে থাকলে, ইন্টিগ্রেশন চালিয়ে যেতে ফোন রিস্টার্ট করে দেখুন"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect আপডেট করা প্রয়োজন"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"চালিয়ে যাওয়ার আগে, Health Connect অ্যাপকে লেটেস্ট ভার্সনে আপডেট করুন।"</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"আরও জায়গা প্রয়োজন"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"ইন্টিগ্রেশন চালিয়ে যেতে, Health Connect-এর জন্য আপনার ফোনের স্টোরেজে <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> জায়গা প্রয়োজন।\n\nআপনার ফোনে কিছুটা জায়গা খালি করে আবার চেষ্টা করুন।"</string>
     <string name="try_again_button" msgid="8745496819992160789">"আবার চেষ্টা করুন"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"স্টোরেজ খালি করুন"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"আরও জায়গা প্রয়োজন"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"ইন্টিগ্রেশন চালিয়ে যাওয়ার জন্য, আপনার ফোনে Health Connect-এর <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> স্টোরেজের জায়গা প্রয়োজন।"</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"ইন্টিগ্রেশন বন্ধ করা হয়েছে"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect অ্যাপটি Android সিস্টেমের সাথে ইন্টিগ্রেট করার সময় বন্ধ হয়ে গেছে।\n\nঅ্যাপটি আবার খুলতে \'চালু করুন\' বিকল্পে ক্লিক করে নিজের ডেটা ও অনুমতি ট্রান্সফার করা চালিয়ে যান।"</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"আপনার Health Connect সম্পর্কিত ডেটা রেখে দিতে, <xliff:g id="TIME_NEEDED">%1$s</xliff:g>-এর মধ্যে সম্পূর্ণ করুন"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Android সিস্টেমের মাধ্যমে Health Connect ইন্টিগ্রেট করা চালিয়ে যেতে ট্যাপ করুন। আপনার ডেটা রেখে দিতে, এটি <xliff:g id="TIME_NEEDED">%1$s</xliff:g>-এর মধ্যে সম্পূর্ণ করুন"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Android সিস্টেমের মাধ্যমে Health Connect ইন্টিগ্রেট করা চালিয়ে যেতে ট্যাপ করুন।"</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"চালিয়ে যান"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ইন্টিগ্রেশন আবার চালু করুন"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"আপনার ডেটা রেখে দিতে, এটি <xliff:g id="TIME_NEEDED">%1$s</xliff:g>-এর মধ্যে সম্পূর্ণ করুন"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"অ্যাপ আপডেট করতে হবে"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect-এর সাথে সিঙ্ক করা চালিয়ে যেতে <xliff:g id="APP_NAME">%1$s</xliff:g> আপডেট করতে হবে। সব আ্যাপের জন্য আপডেট উপলভ্য নাও হতে পারে।"</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect-এর সাথে সিঙ্ক করা চালিয়ে যেতে কিছু অ্যাপ আপডেট করতে হবে। সব আ্যাপের জন্য আপডেট উপলভ্য নাও হতে পারে।"</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect ইন্টিগ্রেশন সম্পূর্ণ হয়নি"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"এটি আবার উপলভ্য হলে আপনি বিজ্ঞপ্তি পাবেন।"</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"বুঝেছি"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect ইন্টিগ্রেশন সম্পূর্ণ হয়নি"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"আরও পড়ুন"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect ইন্টিগ্রেশন সম্পূর্ণ হয়েছে"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"খুলুন"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"নতুন কী রয়েছে"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"আপনি এখন সেটিংস থেকে সরাসরি Health Connect অ্যাক্সেস করতে পারবেন। স্টোরেজ স্পেস খালি করতে, যেকোনও সময় Health Connect অ্যাপ আনইনস্টল করুন।"</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"বুঝেছি"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"আপনার স্মার্টওয়াচে সব অ্যাপের জন্য <xliff:g id="DATA_TYPE">%s</xliff:g> অ্যাক্সেস সরাতে চান?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"টিক চিহ্ন"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ক্রস চিহ্ন"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"বর্তমানে, <xliff:g id="APP_NAME">%1$s</xliff:g> ফিটনেস ও সুস্থতা সম্পর্কিত ডেটা অ্যাক্সেস করতে পারবে <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> অ্যাপকে ফিটনেস ও সুস্থতা সম্পর্কিত ডেটা সব সময় অ্যাক্সেস করার অনুমতি দিতে চান?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> অ্যাপের <xliff:g id="DATA_TYPES">%2$s</xliff:g>-এ অ্যাক্সেস আছে"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ফিটনেস ও সুস্থতা সম্পর্কিত অনুমতি ম্যানেজ করুন"</string>
 </resources>
