--- a/apk/res/values-bs/strings.xml
+++ b/apk/res/values-bs/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura kože"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Čitanje temperature kože"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Zapisivanje temperature kože"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Ovo uključuje sve zdravstvene evidencije sinhronzirane s Health Connectom i dodane u njega. Ovo možda neće biti vaš potpuni zdravstveni karton i ne uključuje medicinski opis vaših zdravstvenih evidencija."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Sve zdravstvene evidencije"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"sve zdravstvene evidencije"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Pisanje svih zdravstvenih evidencija"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ako joj odobrite pristup, aplikacija može čitati i pisati podatke kao što su podaci o alergijama, laboratorijskim nalazima, vakcinama i drugo\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ako joj odobrite pristup, aplikacija može čitati podatke kao što su podaci o alergijama, laboratorijskim nalazima, vakcinama i drugo\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"O zdravstvenim evidencijama"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Podaci za dijeljenje uključuju"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ako joj dozvolite pristup, aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> može dijeliti vaše zdravstvene evidencije s Health Connectom."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sinhronizirajte zdravstvene evidencije iz različitih aplikacija i izvora da ih imate na jednom mjestu"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Ukloniti sva odobrenja?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Muzika"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Drugo"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Bez vođenja"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integracija je u toku"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect se integrira s Android sistemom.\n\nMože proći neko vrijeme dok se podaci i odobrenja ne prenesu."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Nemojte zatvarati aplikaciju dok ne dobijete obavještenje da je postupak završen."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integracija Health Connecta je u toku"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Potrebno je ažuriranje"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect se integrira s Android sistemom da mu možete pristupiti direktno iz postavki."</string>
     <string name="update_button" msgid="4544529019832009496">"Ažuriraj"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Pokrenite ovo ažuriranje da Health Connect može nastaviti s integracijom s postavkama sistema"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Ažuriraj sada"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Potrebno je ažuriranje sistema"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Prije nego što nastavite, ažurirajte sistem telefona."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Ako ste već ažurirali sistem telefona, pokušajte s ponovnim pokretanjem telefona da nastavite s integracijom"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Potrebno je ažurirati Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Prije nego što nastavite, ažurirajte aplikaciju Health Connect na najnoviju verziju."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Potrebno je više prostora"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect treba <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> prostora za pohranu na telefonu da nastavi s integracijom.\n\nOslobodite prostor na telefonu i pokušajte ponovo."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Pokušajte ponovo"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Oslobodite prostor"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Potrebno je više prostora"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect treba <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> prostora za pohranu na telefonu da nastavi s integracijom."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integracija je pauzirana"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikacija Health Connect se zatvorila tokom integracije s Android sistemom.\n\nKliknite na Nastavi da ponovo otvorite aplikaciju i nastavite s prenosom podataka i odobrenja."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Da sačuvate podatke Health Connecta, izvršite ovo u roku od <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Dodirnite da nastavite integrirati Health Connect s Android sistemom. Da sačuvate podatke, izvršite ovo u roku od <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Dodirnite da nastavite integrirati Health Connect s Android sistemom."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Nastavi"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Nastavite s integracijom Health Connecta"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Da sačuvate podatke, izvršite ovo u roku od <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Potrebno je ažuriranje aplikacije"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> se treba ažurirati da se nastavi sinhronizirati s Health Connectom. Ažuriranja možda neće biti dostupna za sve aplikacije."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Određene aplikacije se trebaju ažurirati da se nastave sinhronizirati s Health Connectom. Ažuriranja možda neće biti dostupna za sve aplikacije."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integracija Health Connecta nije završena"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Dobit ćete obavještenje kada integracija ponovo bude dostupna."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Razumijem"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integracija Health Connecta nije završena"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Pročitajte više"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integracija Health Connecta je završena"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Otvori"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Šta je novo"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Sada možete pristupiti Health Connectu direktno iz postavki. Deinstalirajte aplikaciju Health Connect bilo kada da oslobodite prostor za pohranu."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Razumijem"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Ukloniti pristup podacima vrste \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" za sve aplikacije na satu?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Kvačica"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Znak prekriženo"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> trenutno može pristupati podacima o fitnesu i dobrobiti <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Dozvoliti aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> da pristupa podacima o fitnesu i dobrobiti sve vrijeme?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ima pristup podacima vrste <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Upravljajte odobrenjima za podatke o fitnesu i dobrobiti"</string>
 </resources>
