--- a/apk/res/values-ca/strings.xml
+++ b/apk/res/values-ca/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura de la pell"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Llegir la temperatura de la pell"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escriure la temperatura de la pell"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Això inclou tots els registres de salut que s\'han sincronitzat i afegit a Salut connectada. És possible que no sigui la teva història clínica completa i no inclou una descripció mèdica dels teus registres de salut."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Tots els registres de salut"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"tots els registres de salut"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escriure tots els registres de salut"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Si li dones accés, l\'aplicació podrà llegir i escriure dades, com ara al·lèrgies, analítiques, vacunes i més\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Si li dones accés, l\'aplicació podrà llegir dades, com ara al·lèrgies, analítiques, vacunes i més\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sobre els registres de salut"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Les dades per compartir inclouen"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Si ho permets, <xliff:g id="APP_NAME">%1$s</xliff:g> podrà compartir els teus registres de salut amb Salut connectada."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronitza els teus registres de salut de diferents aplicacions i fonts per tenir-los en un sol lloc"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Vols suprimir tots els permisos?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Música"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Altres"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Sense guia"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integració en curs"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Salut connectada s\'està integrant amb el sistema Android.\n\nÉs possible que les dades i els permisos tardin una estona a transferir-se."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"No tanquis l\'aplicació fins que no se\'t notifiqui que s\'ha completat el procés."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"La integració de Salut connectada està en curs"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Actualització necessària"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Salut connectada s\'està integrant amb el sistema Android perquè hi puguis accedir directament des de la configuració."</string>
     <string name="update_button" msgid="4544529019832009496">"Actualitza"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Inicia l\'actualització perquè Salut connectada pugui continuar integrant-se amb la configuració del sistema"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Actualitza ara"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Actualització del sistema necessària"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Abans de continuar, actualitza el sistema del telèfon."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Si ja has actualitzat el sistema del telèfon, prova de reiniciar-lo per continuar la integració"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Cal actualitzar Salut connectada"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Abans de continuar, actualitza l\'aplicació Salut connectada a la darrera versió."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Es necessita més espai"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Salut connectada necessita <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> d\'espai d\'emmagatzematge al telèfon per continuar amb la integració.\n\nAllibera espai al telèfon i torna-ho a provar."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Torna-ho a provar"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Allibera espai"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Es necessita més espai"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Salut connectada necessita <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> d\'espai d\'emmagatzematge al telèfon per continuar amb la integració."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"La integració s\'ha posat en pausa"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"L\'aplicació Salut connectada s\'ha tancat mentre s\'estava integrant amb el sistema Android.\n\nFes clic a Reprèn per tornar a obrir l\'aplicació i continuar transferint les teves dades i permisos."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Per conservar les teves dades de Salut connectada, completa la integració en <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Toca per continuar integrant Salut connectada amb el sistema Android. Per conservar les teves dades, completa la integració en <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Toca per continuar integrant Salut connectada amb el sistema Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continua"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Reprèn la integració de Salut connectada"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Per conservar les teves dades, completa la integració en <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Cal actualitzar l\'aplicació"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"L\'aplicació <xliff:g id="APP_NAME">%1$s</xliff:g> ha d\'estar actualitzada perquè es continuï sincronitzant amb Salut connectada. És possible que no hi hagi actualitzacions disponibles per a totes les aplicacions."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Algunes aplicacions han d\'estar actualitzades perquè es continuïn sincronitzant amb Salut connectada. És possible que no hi hagi actualitzacions disponibles per a totes les aplicacions."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"La integració de Salut connectada no s\'ha completat"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Rebràs una notificació quan torni a estar disponible."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Entesos"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"La integració de Salut connectada no s\'ha completat"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Més informació"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"S\'ha completat la integració de Salut connectada"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Obre"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novetats"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Ara pots accedir a Salut connectada directament des de la configuració. Desinstal·la l\'aplicació Salut connectada en qualsevol moment per alliberar espai d\'emmagatzematge."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Entesos"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Vols suprimir l\'accés a <xliff:g id="DATA_TYPE">%s</xliff:g> per a totes les aplicacions del rellotge?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificació"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Creu"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Actualment, <xliff:g id="APP_NAME">%1$s</xliff:g> pot accedir a les dades de fitnes i benestar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Vols permetre que <xliff:g id="APP_NAME">%1$s</xliff:g> accedeixi a les dades de fitnes i benestar sempre?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> té accés a <xliff:g id="DATA_TYPES">%2$s</xliff:g>"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gestiona els permisos de fitnes i benestar"</string>
 </resources>
