--- a/apk/res/values-cs/strings.xml
+++ b/apk/res/values-cs/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"teplota kůže"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Čtení teploty kůže"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Zápis teploty kůže"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"To zahrnuje všechny zdravotní záznamy synchronizované a přidané do Health Connect. Nejedná se se o vaše úplné lékařské záznamy včetně odborného popisu."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Všechny zdravotní záznamy"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"všechny zdravotní záznamy"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Zápis všech zdravotních záznamů"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Pokud aplikaci udělíte přístup, bude moct číst a zapisovat data, jako jsou alergie, laboratorní výsledky, vakcíny a podobně\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Pokud aplikaci udělíte přístup, bude moct číst data, jako jsou alergie, laboratorní výsledky, vakcíny a podobně\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informace o zdravotních záznamech"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Budou sdílena například následující data"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Pokud to povolíte, může aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> sdílet vaše zdravotní záznamy se službou Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Synchronizujte své zdravotní záznamy z různých aplikací a zdrojů, abyste je měli na jednom místě"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Odebrat všechna oprávnění?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Hudba"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Jiné"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Neřízené"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Probíhá integrace"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect se integruje se systémem Android.\n\nPřenos dat a oprávnění může chvíli trvat."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Aplikaci nezavírejte, dokud nedostanete oznámení o dokončení procesu."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integrace Health Connect probíhá"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Je nutná aktualizace"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Služba Health Connect se integruje se systémem Android, abyste k ní měli přístup přímo z nastavení."</string>
     <string name="update_button" msgid="4544529019832009496">"Aktualizovat"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Zahajte aktualizaci, aby služba Health Connect mohla pokračovat v integraci s nastavením systému"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Aktualizovat"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Je potřeba aktualizace systému"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Než budete pokračovat, aktualizujte systém telefonu."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Pokud jste systém telefonu už aktualizovali, restartujte telefon, aby integrace pokračovala"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Je potřeba aktualizace Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Než budete pokračovat, aktualizujte aplikaci Health Connect na nejnovější verzi."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Je potřeba víc místa"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect potřebuje <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> místa v telefonu, aby bylo možné pokračovat v integraci.\n\nUvolněte místo a zkuste to znovu."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Zkusit znovu"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Uvolnit místo"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Je potřeba víc místa"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect potřebuje <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> místa v telefonu, aby bylo možné pokračovat v integraci."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrace byla pozastavena"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikace Health Connect byla během integrace se systémem Android zavřena.\n\nKliknutím na Pokračovat aplikaci znovu otevřete a budete pokračovat v přenosu dat a oprávnění."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Aby data Health Connect zůstala zachována, proveďte tuto akci do <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Klepnutím pokračujte v integraci Health Connect se systémem Android. Aby data zůstala zachována, proveďte tuto akci do <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Klepnutím pokračujte v integraci Health Connect se systémem Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Pokračovat"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Pokračovat v integraci Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Aby data zůstala zachována, proveďte tuto akci do <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Je vyžadována aktualizace"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Je potřeba aktualizovat aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g>, aby se dál mohla synchronizovat s aplikací Health Connect. Aktualizace nemusí být k dispozici pro všechny aplikace."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Některé aplikace je třeba aktualizovat, aby se dál mohly synchronizovat s aplikací Health Connect. Aktualizace nemusí být k dispozici pro všechny aplikace."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integrace Health Connect nebyla dokončena"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Až bude znovu k dispozici, dostanete oznámení."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Rozumím"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integrace Health Connect nebyla dokončena"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Další informace"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integrace Health Connect je dokončena"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Otevřít"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Co je nového"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Aplikaci Health Connect teď můžete používat přímo z nastavení. Pokud budete potřebovat uvolnit úložný prostor, můžete ji kdykoliv odinstalovat."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Rozumím"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Odebrat všem aplikacím v hodinkách přístup k datům typu <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Značka zaškrtnutí"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Křížek"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> má přístup ke všem vašim datům o fitness a wellness v režimu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Povolit aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g> neustálý přístup k datům o fitness a wellness?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> má přístup k těmto datům: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Spravovat oprávnění pro fitness a wellness"</string>
 </resources>
