--- a/apk/res/values-da/strings.xml
+++ b/apk/res/values-da/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"hudtemperatur"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Læs hudtemperatur"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Skriv hudtemperatur"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Dette omfatter alle sundhedsoplysninger, der er synkroniseret med og tilføjet i Health Connect. Dette er muligvis ikke din fulde patientjournal, og den indeholder ikke en lægefaglig beskrivelse af dine sundhedsoplysninger."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Alle sundhedsoplysninger"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"alle sundhedsoplysninger"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Angiv alle sundhedsoplysninger"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Hvis du giver adgang, kan appen læse og skrive data som f.eks. allergier, prøvesvar, vaccinationer m.m.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Hvis du giver adgang, kan appen læse data som f.eks. allergier, prøvesvar, vaccinationer m.m.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Om sundhedsoplysninger"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"De data, der deles, omfatter"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Hvis du giver tilladelse, kan <xliff:g id="APP_NAME">%1$s</xliff:g> dele dine sundhedsoplysninger med Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Synkroniser dine sundhedsoplysninger fra forskellige apps og kilder for at samle dem ét sted"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Vil du fjerne alle tilladelser?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musik"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Andet"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Uden vejledning"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> t. og <xliff:g id="MIN">%2$s</xliff:g> min."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> t."</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integrationen er i gang"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect integreres med Android-systemet.\n\nDet kan tage lidt tid, før dine data og tilladelser er overført."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Undlad at lukke appen, indtil du har fået en notifikation om, at processen er fuldført."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect-integration er i gang"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Opdatering er påkrævet"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect integreres med Android-systemet, så du kan tilgå Health Connect direkte fra dine indstillinger."</string>
     <string name="update_button" msgid="4544529019832009496">"Opdater"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Start denne opdatering, så Health Conenct kan fortsætte med at blive integreret med dine systemindstillinger"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Opdater nu"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Systemopdatering er påkrævet"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Inden du fortsætter, skal du opdatere dit telefonsystem."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Hvis du allerede har opdateret dit telefonsystem, kan du prøve at genstarte din telefon for at fortsætte med integrationen"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Opdatering af Health Connect er påkrævet"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Inden du fortsætter, skal du opdatere til den nyeste version af Health Connect-appen."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Mere plads er påkrævet"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect kræver <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> lagerplads på din telefon for at kunne fortsætte med integrationen.\n\nFrigør noget lagerplads på din telefon, og prøv derefter igen."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Prøv igen"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Frigør plads"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Mere plads er påkrævet"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect kræver <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> lagerplads på din telefon for at kunne fortsætte med integrationen."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrationen er sat på pause"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect-appen lukkede under forsøget på at integrere den med Android-systemet.\n\nKllik på Genoptag for at åbne appen igen og fortsætte med at overføre dine data og tilladelser."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Hvis du vil beholde dine Health Connect-data, skal du fuldføre integrationen inden for <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Tryk på Fortsæt for at integrere Health Connect med Android-systemet. Hvis du vil beholde dine data, skal du fuldføre integrationen inden for <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Tryk på Fortsæt for at integrere Health Connect med Android-systemet."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Fortsæt"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Genoptag Health Connect-integration"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Hvis du vil beholde dine data, skal du fuldføre integrationen inden for <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Appopdatering er påkrævet"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> skal opdateres for fortsat at kunne synkroniseres med Health Connect. Opdateringer er muligvis ikke tilgængelige for alle apps."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Nogle apps skal opdateres for fortsat at kunne synkroniseres med Health Connect. Opdateringer er muligvis ikke tilgængelige for alle apps."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect-integrationen kunne ikke fuldføres"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Du får en notifikation, når integrationen er tilgængelig igen."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect-integrationen kunne ikke fuldføres"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Læs mere"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect-integration er fuldført"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Åbn"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Nyheder"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Du kan nu tilgå Health Connect direkte fra dine indstillinger. Du kan til enhver tid afinstallere Health Connect-appen for at frigøre lagerplads."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Vil du fjerne adgangen til <xliff:g id="DATA_TYPE">%s</xliff:g> for alle apps på dit ur?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Flueben"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Kryds"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan i øjeblikket tilgå trænings- og sundhedsdata <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Vil du give <xliff:g id="APP_NAME">%1$s</xliff:g> adgang til trænings- og sundhedsdata hele tiden?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> har adgang til <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Administrer tilladelser for træning og sundhed"</string>
 </resources>
