--- a/apk/res/values-el/strings.xml
+++ b/apk/res/values-el/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"θερμοκρασία δέρματος"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ανάγνωση θερμοκρασίας δέρματος"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Εγγραφή θερμοκρασίας δέρματος"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Αυτό περιλαμβάνει όλους τους ιατρικούς φακέλους που συγχρονίστηκαν και προστέθηκαν στο Health Connect. Αυτό μπορεί να μην είναι το πλήρες ιατρικό αρχείο σας και δεν περιλαμβάνει ιατρική περιγραφή των ιατρικών φακέλων."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Όλοι οι ιατρικοί φάκελοι"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"όλοι οι ιατρικοί φάκελοι"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Σύνταξη όλων των ιατρικών φακέλων"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Εάν παραχωρήσετε πρόσβαση, η εφαρμογή θα έχει τη δυνατότητα ανάγνωσης και εγγραφής δεδομένων όπως είναι οι αλλεργίες, τα αποτελέσματα εργαστηριακών εξετάσεων, τα εμβόλια και άλλα\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Εάν παραχωρήσετε πρόσβαση, η εφαρμογή θα έχει τη δυνατότητα ανάγνωσης δεδομένων όπως είναι οι αλλεργίες, τα αποτελέσματα εργαστηριακών εξετάσεων, τα εμβόλια και άλλα\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Σχετικά με τους ιατρικούς φακέλους"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Στα κοινόχρηστα δεδομένα περιλαμβάνονται τα εξής"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Εάν παραχωρήσετε την πρόσβαση, η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> θα μπορεί να μοιράζεται τους ιατρικούς φακέλους σας με το Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Συγχρονίστε τους ιατρικούς φακέλους από τις διάφορες εφαρμογές και πηγές σας, για να τους διατηρείτε σε ένα σημείο"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Κατάργηση όλων των αδειών;"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Mουσική"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Άλλo"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Χωρίς καθοδήγηση"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> λ."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> ώ. <xliff:g id="MIN">%2$s</xliff:g> λ."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> ω."</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Η ενσωμάτωση είναι σε εξέλιξη"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Γίνεται ενσωμάτωση του Health Connect με το σύστημα Android.\n\nΜπορεί να χρειαστεί λίγος χρόνος για τη μεταφορά των δεδομένων και των αδειών σας."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Μην κλείσετε την εφαρμογή μέχρι να λάβετε μια ειδοποίηση ότι η διαδικασία έχει ολοκληρωθεί."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Η ενσωμάτωση του Health Connect είναι σε εξέλιξη"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Απαιτείται ενημέρωση"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Γίνεται ενσωμάτωση του Health Connect με το σύστημα Android, έτσι ώστε να μπορείτε να αποκτήσετε πρόσβαση σε αυτό απευθείας από τις ρυθμίσεις σας."</string>
     <string name="update_button" msgid="4544529019832009496">"Ενημέρωση"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Ξεκινήστε αυτή την ενημέρωση, έτσι ώστε το Health Connect να συνεχίσει την ενσωμάτωση με τις ρυθμίσεις συστήματός σας"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Ενημέρωση τώρα"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Απαιτείται ενημέρωση συστήματος"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Πριν συνεχίσετε, ενημερώστε το σύστημα του τηλεφώνου σας."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Αν έχετε ενημερώσει ήδη το σύστημα του τηλεφώνου σας, δοκιμάστε να επανεκκινήσετε το τηλέφωνό σας για να συνεχίσει την ενσωμάτωση"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Απαιτείται ενημέρωση του Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Πριν συνεχίσετε, ενημερώστε την εφαρμογή Health Connect στην πιο πρόσφατη έκδοση."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Απαιτείται περισσότερος χρόνος"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Το Health Connect χρειάζεται <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> αποθηκευτικού χώρου στο τηλέφωνό σας προκειμένου να συνεχιστεί η ενσωμάτωση.\n\nΑποδεσμεύστε χώρο στο τηλέφωνό σας και δοκιμάστε ξανά."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Δοκιμάστε ξανά"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Αποδεσμεύστε χώρο"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Απαιτείται περισσότερος χρόνος"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Το Health Connect χρειάζεται <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> αποθηκευτικού χώρου στο τηλέφωνό σας για να συνεχίσει την ενσωμάτωση."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Η ενσωμάτωση τέθηκε σε παύση"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Η εφαρμογή Health Connect έκλεισε ενώ γινόταν ενσωμάτωση με το σύστημα Android.\n\nΚάντε κλικ στη συνέχιση για να ανοίξετε ξανά την εφαρμογή και να συνεχίσετε τη μεταφορά των δεδομένων και των αδειών σας."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Για να διατηρήσετε τα δεδομένα σας Health Connect, ολοκληρώστε αυτήν τη διαδικασία εντός <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Πατήστε για να συνεχίσετε την ενσωμάτωση του Health Connect με το σύστημα Android. Για να διατηρήσετε τα δεδομένα σας, ολοκληρώστε αυτήν τη διαδικασία εντός <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Πατήστε για να συνεχίσετε την ενσωμάτωση του Health Connect με το σύστημα Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Συνέχεια"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Συνέχιση ενσωμάτωσης Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Για να διατηρήσετε τα δεδομένα σας, ολοκληρώστε αυτήν τη διαδικασία εντός <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Απαιτείται ενημέρωση της εφαρμογής"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> πρέπει να ενημερωθεί, για να συνεχιστεί ο συγχρονισμός με το Health Connect. Οι ενημερώσεις ενδέχεται να μην είναι διαθέσιμες για όλες τις εφαρμογές."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Ορισμένες εφαρμογές πρέπει να ενημερωθούν, για να συνεχιστεί ο συγχρονισμός με το Health Connect. Οι ενημερώσεις ενδέχεται να μην είναι διαθέσιμες για όλες τις εφαρμογές."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Η ενσωμάτωση του Health Connect δεν ολοκληρώθηκε"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Θα λάβετε μια ειδοποίηση όταν γίνει ξανά διαθέσιμη."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Το κατάλαβα"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Η ενσωμάτωση του Health Connect δεν ολοκληρώθηκε"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Διαβάστε περισσότερα"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Η ενσωμάτωση του Health Connect ολοκληρώθηκε"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Άνοιγμα"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Τι νέο υπάρχει"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Μπορείτε πλέον να αποκτήσετε πρόσβαση στο Health Connect απευθείας από τις ρυθμίσεις σας. Απεγκαταστήστε την εφαρμογή Health Connect ανά πάσα στιγμή για να αποδεσμεύσετε αποθηκευτικό χώρο."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Το κατάλαβα"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Κατάργηση πρόσβασης στα δεδομένα <xliff:g id="DATA_TYPE">%s</xliff:g> για όλες τις εφαρμογές στο ρολόι σας;"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Σύμβολο επιλογής"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Σύμβολο \"Χ\""</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Αυτή τη στιγμή, η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> μπορεί να έχει πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Να επιτρέπεται στην εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> η πρόσβαση σε δεδομένα φυσικής κατάστασης και ευεξίας ανά πάσα στιγμή;"</string>
+    <string name="current_access" msgid="1457167070428176139">"Η εφαρμογή <xliff:g id="APP_NAME">%1$s</xliff:g> έχει πρόσβαση στα δεδομένα <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Διαχείριση αδειών φυσικής κατάστασης και ευεξίας"</string>
 </resources>
