--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"skin temperature"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Read skin temperature"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Write skin temperature"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"This includes all the health records synced to and added to Health Connect. This might not be your full medical record and does not include a medical description of your health records."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"All health records"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"all health records"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Write all health records"</string>
@@ -791,6 +790,8 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Music"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Other"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Unguided"</string>
+    <string name="activity_intensity_type_moderate" msgid="7974792315871109564">"Moderate"</string>
+    <string name="activity_intensity_type_vigorous" msgid="5651020560923780330">"Vigorous"</string>
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g>m"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g>h <xliff:g id="MIN">%2$s</xliff:g>m"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g>h"</string>
@@ -1043,23 +1044,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integration in progress"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect is being integrated with the Android system.\n\nIt may take some time while your data and permissions are being transferred."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Don\'t close the app until you get a notification that the process is complete."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect integration in progress"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Update needed"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect is being integrated with the Android system so you can access it directly from your settings."</string>
     <string name="update_button" msgid="4544529019832009496">"Update"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Start this update so that Health Connect can continue integrating with your system settings"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Update now"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"System update needed"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Before continuing, update your phone system."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"If you\'ve already updated your phone system, try restarting your phone to continue the integration"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect update needed"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Before continuing, update the Health Connect app to the latest version."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"More space needed"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect needs <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> of storage space on your phone in order for the integration to continue.\n\nClear some space on your phone and then try again."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Try again"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Free up space"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"More space needed"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect needs <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> of storage space on your phone to continue integrating."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integration paused"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"The Health Connect app closed while it was being integrated with the Android system.\n\nClick resume to reopen the app and continue transferring your data and permissions."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"In order to keep your Health Connect data, complete this within <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1070,8 +1066,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Tap to continue integrating Health Connect with the Android system. In order to keep your data, complete this within <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Tap to continue integrating Health Connect with the Android system."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continue"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Resume Health Connect integration"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"In order to keep your data, complete this within <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"App update needed"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> needs to be updated to continue syncing with Health Connect. Updates may not be available for all apps."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Some apps need to be updated to continue syncing with Health Connect. Updates may not be available for all apps."</string>
@@ -1089,10 +1083,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect integration didn\'t complete"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"You\'ll get a notification when it becomes available again."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Got it"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect integration didn\'t complete"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Read more"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect integration complete"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Open"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"What\'s new"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"You can now access Health Connect directly from your settings. Uninstall the Health Connect app any time to free up storage space."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Got it"</string>
@@ -1195,12 +1185,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Remove <xliff:g id="DATA_TYPE">%s</xliff:g> access for all apps on your watch?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Check mark"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Cross mark"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Currently, <xliff:g id="APP_NAME">%1$s</xliff:g> can access fitness and wellness data <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> access to fitness and wellness data all the time?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> has access to <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Manage fitness and wellness permissions"</string>
 </resources>
