--- a/apk/res/values-et/strings.xml
+++ b/apk/res/values-et/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"nahatemperatuur"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Saate lugeda naha temperatuuri"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Saate kirjutada välja naha temperatuuri"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"See hõlmab kõiki Health Connectiga sünkroonitud ja sinna lisatud terviseandmeid. See ei pruugi olla teie täielik haiguslugu. Teie terviseandmetesse ei lisata ühtegi meditsiinilist kirjeldust."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Kõik terviseandmed"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"kõik terviseandmed"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Kõigi terviseandmete kirjutamine"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Kui annate juurdepääsu, saab see rakendus lugeda ning kirjutada andmeid, näiteks teavet allergiate, laboritulemuste, vaktsiinide ja muu kohta\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Kui annate juurdepääsu, saab see rakendus lugeda andmeid, näiteks teavet allergiate, laboritulemuste, vaktsiinide ja muu kohta\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Teave terviseandmete kohta"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Jagatavad andmed hõlmavad"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Kui lubate, saab <xliff:g id="APP_NAME">%1$s</xliff:g> teie terviseandmeid Health Connectiga jagada."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sünkroonige oma eri rakendustest ja allikatest pärit terviseandmed, et neid ühes kohas hoida"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Kas eemaldada kõik load?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Muusika"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Muu"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Suunamiseta"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integratsioon on pooleli"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connecti integreeritakse Androidi süsteemiga.\n\nTeie andmete ja lubade ülekandmine võib pisut aega võtta."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Ärge sulgege rakendust enne, kui teile kuvatakse märguanne, et töötlemine on lõpetatud."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connecti integratsioon on pooleli"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Vajalik on värskendus"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect integreeritakse Androidi süsteemiga ning saate juurdepääsu Health Connectile otse seadete kaudu."</string>
     <string name="update_button" msgid="4544529019832009496">"Värskenda"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Alustage värskendusega, et Health Connect integreeruks teie süsteemiseadetega"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Värskenda kohe"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Vajalik on süsteemivärskendus"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Enne jätkamist värskendage oma telefonisüsteemi."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Kui olete oma telefonile juba süsteemivärskenduse teinud, proovige integratsiooni jätkamiseks oma telefon taaskäivitada."</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Vajalik on Health Connecti rakenduse värskendamine"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Enne jätkamist värskendage Health Connecti rakendus uusimale versioonile."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Salvestusruumi on vaja juurde"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Integreerimisega jätkamiseks vajab Health Connect seadmes <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> salvestusruumi.\n\nVabastage seadmes salvestusruumi ja proovige siis uuesti."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Proovi uuesti"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Ruumi vabastamine"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Salvestusruumi on vaja juurde"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Integreerimisega jätkamiseks vajab Health Connect seadmes <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> salvestusruumi."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integratsioon peatatud"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect sulgus Androidi süsteemiga integreerimise ajal.\n\nKlõpsake rakenduse uuesti avamiseks ning andmete ja lubade ülekandmise jätkamiseks „Jätka”."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Andmete säilitamiseks lõpetage toiming järgmise aja jooksul: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Puudutage, et integreerida Health Connect oma Androidi süsteemiga. Andmete säilitamiseks lõpetage toiming järgmise aja jooksul: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Puudutage, et integreerida Health Connect oma Androidi süsteemiga."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Jätka"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Jätka Health Connecti integratsiooni"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Andmete säilitamiseks lõpetage toiming järgmise aja jooksul: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Rakendus vajab värskendamist"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Rakendus <xliff:g id="APP_NAME">%1$s</xliff:g> tuleb värskendada, et Health Connectiga sünkroonimist jätkata Kõigile rakendustele ei pruugi värskendusi saadaval olla."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Mõni rakendus tuleb värskendada, et Health Connectiga sünkroonimist jätkata Kõigile rakendustele ei pruugi värskendusi saadaval olla."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connecti integratsiooni ei viidud lõpule"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Teid teavitatakse, kui see muutub taas kättesaadavaks."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Selge"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connecti integratsiooni ei viidud lõpule"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Lisateave"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connecti integratsioon lõpetatud"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Avatud"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Mis on uut"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Teil on nüüd juurdepääs Health Connectile otse seadete kaudu. Desinstallige Health Connecti rakendus igal ajal, et vabastada salvestusruumi."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Selge"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Kas eemaldada andmete <xliff:g id="DATA_TYPE">%s</xliff:g> juurdepääs kõigile kellas olevatele rakendustele?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Märge"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Rist"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Praegu pääseb <xliff:g id="APP_NAME">%1$s</xliff:g> juurde kõikidele teie treeningu- ja heaoluandmetele <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Kas lubada rakendusele <xliff:g id="APP_NAME">%1$s</xliff:g> kogu aeg juurdepääs treeningu- ja heaoluandmetele?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Rakendusel <xliff:g id="APP_NAME">%1$s</xliff:g> on juurdepääs andmetele <xliff:g id="DATA_TYPES">%2$s</xliff:g>"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Hallake treeningu ja heaoluga seotud lubasid"</string>
 </resources>
