--- a/apk/res/values-fi/strings.xml
+++ b/apk/res/values-fi/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ihon lämpötila"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lue ihon lämpötila"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Kirjoita ihon lämpötila"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Tämä koskee kaikkia Health Connectiin synkronoituja ja lisättyjä terveystietoja. Niihin ei välttämättä kuulu kaikkia terveystietojasi, eivätkä ne sisällä terveystietojesi lääketieteellistä kuvausta."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Kaikki terveystiedot"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"kaikki terveystiedot"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Kirjoita kaikki terveystiedot"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Jos myönnät pääsyn, sovellus voi lukea ja kirjoittaa dataa, kuten tietoja allergioista, laboratoriotuloksista ja rokotteista\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Jos myönnät pääsyn, sovellus voi lukea dataa, kuten tietoja allergioista, laboratoriotuloksista ja rokotteista\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Tietoja terveystiedoista"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Jaettavaan dataan sisältyvät datatyypit"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Jos sallit sen, <xliff:g id="APP_NAME">%1$s</xliff:g> voi jakaa terveystietojasi Health Connectille."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Synkronoi terveystietosi eri sovelluksista ja lähteistä, jotta ne pysyvät yhdessä paikassa"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Poistetaanko kaikki luvat?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musiikki"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Muu"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Ohjaamaton"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> t <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> t"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integrointi käynnissä"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect integroidaan Android-järjestelmään.\n\nDatan ja lupien siirtämisessä voi mennä jonkin aikaa."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Älä sulje sovellusta, ennen kuin saat ilmoituksen, että prosessi on valmis."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connectin integrointi käynnissä"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Päivitys tarvitaan"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connectia integroidaan Android-järjestelmään, jotta saat pääsyn siihen suoraan asetuksista."</string>
     <string name="update_button" msgid="4544529019832009496">"Päivitä"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Aloita päivitys, jotta Health Connect voi jatkaa integrointia järjestelmäasetuksiin"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Päivitä nyt"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Järjestelmä täytyy päivittää"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Ennen kuin jatkat, päivitä puhelinjärjestelmä."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Jos olet jo päivittänyt puhelinjärjestelmän, kokeile uudelleenkäynnistää puhelin, jotta integrointia voidaan jatkaa"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect täytyy päivittää"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Ennen kuin jatkat, päivitä Health Connect ‑sovellus uusimpaan versioon."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Lisää tallennustilaa tarvitaan"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect tarvitsee <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> tallennustilaa puhelimella, jotta integrointia voidaan jatkaa.\n\nVapauta tilaa puhelimella ja yritä sitten uudelleen."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Yritä uudelleen"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Vapauta tilaa"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Lisää tallennustilaa tarvitaan"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect tarvitsee <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> tallennustilaa puhelimella, jotta integrointia voidaan jatkaa."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrointi keskeytetty"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect ‑sovellus sulkeutui, kun sitä integroitiin Android-järjestelmään.\n\nAvaa sovellus uudelleen ja jatka datan ja lupien siirtämistä klikkaamalla \"Jatka\"."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Jos haluat säilyttää Health Connect ‑datan, sinulla on <xliff:g id="TIME_NEEDED">%1$s</xliff:g> aikaa tehdä integrointi"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Jatka Health Connectin integrointia Android-järjestelmään napauttamalla. Jos haluat säilyttää datasi, sinulla on <xliff:g id="TIME_NEEDED">%1$s</xliff:g> aikaa tehdä integrointi"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Jatka Health Connectin integrointia Android-järjestelmään napauttamalla."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Jatka"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Jatka Health Connectin integrointia"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Jos haluat säilyttää datasi, sinulla on <xliff:g id="TIME_NEEDED">%1$s</xliff:g> aikaa tehdä integrointi"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Sovellus täytyy päivittää"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> on päivitettävä, jotta voit jatkaa Health Connectin kanssa synkronoimista Päivityksiä ei ehkä ole saatavilla kaikille sovelluksille."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Jotkin sovellukset on päivitettävä, jotta voit jatkaa Health Connectin kanssa synkronoimista Päivityksiä ei ehkä ole saatavilla kaikille sovelluksille."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connectin integrointia ei suoritettu loppuun"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Saat ilmoituksen, kun se on taas saatavilla."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connectin integrointia ei suoritettu loppuun"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Lue lisää"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connectin integrointi valmis"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Avaa"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Uutta"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Voit nyt käyttää Health Connectia suoraan asetuksista. Voit poistaa Health Connect ‑sovelluksen milloin tahansa vapauttaaksesi tallennustilaa."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Poistetaanko pääsyoikeus (<xliff:g id="DATA_TYPE">%s</xliff:g>) kaikilta kellon sovelluksilta?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Valintamerkki"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Ristimerkki"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Tällä hetkellä <xliff:g id="APP_NAME">%1$s</xliff:g> pääsee liikunta- ja hyvinvointidataan <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Saako <xliff:g id="APP_NAME">%1$s</xliff:g> aina pääsyn liikunta- ja hyvinvointidataan?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> pääsee näihin: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Ylläpidä liikunta- ja hyvinvointilupia"</string>
 </resources>
