--- a/apk/res/values-fr-rCA/strings.xml
+++ b/apk/res/values-fr-rCA/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"température cutanée"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lire la température cutanée"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Écrire la température cutanée"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Cela comprend tous les dossiers médicaux synchronisés avec Connexion santé et qui y sont ajoutés. Il ne s\'agit pas nécessairement de l\'intégralité de votre dossier médical, et aucune description médicale de vos dossiers médicaux n\'est incluse."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Tous les dossiers médicaux"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"tous les dossiers médicaux"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Rédigez tous les dossiers médicaux"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Si vous donnez l\'accès, l\'appli pourra lire et écrire des données telles que celles concernant les allergies, les résultats de laboratoire, les vaccins et plus\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Si vous donnez l\'accès, l\'appli pourra lire des données telles que celles concernant les allergies, les résultats de laboratoire, les vaccins et plus\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"À propos des dossiers médicaux"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Les données à partager comprennent"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Si vous l\'autorisez, <xliff:g id="APP_NAME">%1$s</xliff:g> pourra partager vos dossiers médicaux avec Connexion santé."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Synchronisez vos dossiers médicaux à partir de vos différentes applis et sources pour les conserver au même endroit"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Retirer toutes les autorisations?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musique"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Autre"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Sans guide"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Intégration en cours…"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Connexion santé est en cours d\'intégration au système Android.\n\nLe transfert de vos données et de vos autorisations peut prendre un certain temps."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Ne fermez pas l\'appli jusqu\'à ce que vous receviez une notification indiquant que le processus est terminé."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Intégration de Connexion santé en cours…"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Mise à jour requise"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Connexion santé est en cours d\'intégration au système Android afin que vous puissiez y accéder directement à partir de vos paramètres."</string>
     <string name="update_button" msgid="4544529019832009496">"Mettre à jour"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Lancez cette mise à jour pour continuer l\'intégration de Connexion santé à vos paramètres système"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Mettre à jour maintenant"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Mise à jour système requise"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Avant de continuer, veuillez mettre à jour le système d\'exploitation de votre téléphone."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Si vous avez déjà mis à jour le système d\'exploitation de votre téléphone, essayez de redémarrer celui-ci pour continuer l\'intégration"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Mise à jour de Connexion santé nécessaire"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Avant de continuer, veuillez mettre à jour l\'appli Connexion santé vers la dernière version."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Espace insuffisant"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Connexion santé a besoin de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> d\'espace de stockage sur votre téléphone pour continuer l\'intégration.\n\nLibérez de l\'espace sur votre téléphone, puis réessayez."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Réessayer"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Libérer de l\'espace"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Espace insuffisant"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Connexion santé a besoin de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> d\'espace de stockage sur votre téléphone pour continuer l\'intégration."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Intégration suspendue"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"L\'appli Connexion santé s\'est fermée pendant l\'intégration au système Android.\n\nCliquez sur reprendre pour rouvrir l\'appli et continuer le transfert de vos données et autorisations."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Pour conserver vos données de Connexion santé, complétez l\'intégration dans un délai de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Touchez pour continuer l\'intégration de Connexion santé au système Android. Pour conserver vos données de Connexion santé, complétez l\'intégration dans un délai de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Touchez pour continuer l\'intégration de Connexion santé au système Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continuer"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Reprendre l\'intégration de Connexion santé"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Pour conserver vos données de Connexion santé, complétez l\'intégration dans un délai de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Mise à jour de l\'appli nécessaire"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"L\'appli <xliff:g id="APP_NAME">%1$s</xliff:g> doit être mise à jour pour continuer la synchronisation avec Connexion santé. Les mises à jour peuvent ne pas être offertes pour toutes les applis."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Certaines applis ont besoin d\'être mises à jour pour continuer la synchronisation avec Connexion santé. Les mises à jour peuvent ne pas être offertes pour toutes les applis."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"L\'intégration de Connexion santé ne s\'est pas terminée"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Vous recevrez une notification lorsque l\'intégration sera à nouveau accessible."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"L\'intégration de Connexion santé ne s\'est pas terminée"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Lire la suite"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Intégration terminée pour Connexion santé"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Ouvrir"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Nouveautés"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Vous pouvez désormais accéder à Connexion santé directement à partir de vos paramètres. Désinstallez l\'appli Connexion santé à tout moment pour libérer de l\'espace de stockage."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Retirer l\'accès à <xliff:g id="DATA_TYPE">%s</xliff:g> pour toutes les applis sur votre montre?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Coche"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Croix"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Actuellement, <xliff:g id="APP_NAME">%1$s</xliff:g> peut accéder aux données d\'activité physique et de bien-être <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à accéder à tout moment aux données d\'activité physique et de bien-être?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> a accès aux données suivantes : <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gérer les autorisations d\'activité physique et de bien-être"</string>
 </resources>
