--- a/apk/res/values-gl/strings.xml
+++ b/apk/res/values-gl/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura cutánea"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ler temperatura cutánea"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escribir temperatura cutánea"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Aquí inclúense todos os rexistros de información sanitaria sincronizados e engadidos a Saúde conectada. Poida que non sexa a túa historia clínica completa. Non se incluirá ningunha descrición médica dos teus rexistros de información sanitaria."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos os rexistros de información sanitaria"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos os rexistros de información sanitaria"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escribir todos os rexistros de información sanitaria"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Se permites o acceso, a aplicación poderá ler e escribir datos relacionados coas alerxias, cos resultados das análises e coas vacinas, entre outra información\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Se permites o acceso, a aplicación poderá ler datos relacionados coas alerxias, cos resultados das análises e coas vacinas, entre outra información\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Acerca dos rexistros de información sanitaria"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Entre os datos que se compartirán inclúense"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Se dás permiso, <xliff:g id="APP_NAME">%1$s</xliff:g> poderá compartir os teus rexistros de información sanitaria con Saúde conectada."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincroniza os rexistros de información sanitaria das distintas aplicacións e fontes para gardalos nun só lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Queres quitar todos os permisos?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Música"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Outro tipo"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Sen guía"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h e <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integración en proceso"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Estase integrando Saúde conectada co sistema Android.\n\nÉ posible que os datos e os permisos tarden un pouco en transferirse."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Non peches a aplicación ata que recibas a notificación de que se completou o proceso."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integración de Saúde conectada en proceso"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"É necesario realizar unha actualización"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Estase integrando Saúde conectada co sistema Android para que poidas acceder a ela directamente desde a configuración."</string>
     <string name="update_button" msgid="4544529019832009496">"Actualizar"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Inicia a actualización para que Saúde conectada poida seguir integrándose coa configuración do sistema"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Actualizar agora"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"É necesario actualizar o sistema"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Antes de continuar, actualiza o sistema do teu teléfono."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Se xa actualizaches o sistema do teléfono, proba a reiniciar o teléfono para continuar coa integración"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Cómpre actualizar Saúde conectada"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Antes de continuar, actualiza a aplicación Saúde conectada á última versión."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Precísase máis espazo"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Saúde conectada precisa <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de espazo de almacenamento no teléfono para continuar coa integración.\n\nLibera espazo no teléfono e téntao de novo."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Tentar de novo"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Liberar espazo"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Precísase máis espazo"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Saúde conectada precisa <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de espazo de almacenamento no teléfono para continuar coa integración."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integración en pausa"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Pechouse a aplicación Saúde conectada cando se estaba integrando no sistema Android.\n\nFai clic en retomar para volver abrir a aplicación e seguir transferindo os teus datos e permisos."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Para manter os teus datos de Saúde conectada, completa esta acción no prazo de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Toca para continuar coa integración de Saúde conectada co sistema Android. Para manter os teus datos, completa esta acción no prazo de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Toca para continuar coa integración de Saúde conectada co sistema Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continuar"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Retoma a integración de Saúde conectada"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Para manter os teus datos, completa esta acción no prazo de <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"É necesario actualizar a aplicación"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Cómpre actualizar <xliff:g id="APP_NAME">%1$s</xliff:g> para continuar a sincronización con Saúde conectada. É posible que as actualizacións non estean dispoñibles para todas as aplicacións."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Cómpre actualizar algunhas aplicacións para continuar a sincronización con Saúde conectada. É posible que as actualizacións non estean dispoñibles para todas as aplicacións."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Non se completou a integración de Saúde conectada"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Recibirás unha notificación cando volva estar dispoñible."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Entendido"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Non se completou a integración de Saúde conectada"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Ler máis"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integración de Saúde conectada completada"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Abrir"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novidades"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Xa podes acceder a Saúde conectada directamente desde a configuración. Desinstala a aplicación Saúde conectada cando queiras para liberar espazo de almacenamento."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Entendido"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Queres quitarlles o acceso a este tipo de datos (<xliff:g id="DATA_TYPE">%s</xliff:g>) a todas as aplicacións do teu reloxo?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificación"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Cruz"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Actualmente, <xliff:g id="APP_NAME">%1$s</xliff:g> pode acceder aos teus datos de forma física e benestar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Queres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda sempre aos teus datos de forma física e benestar?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ten acceso a estes datos: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Xestionar permisos de forma física e benestar"</string>
 </resources>
