--- a/apk/res/values-gu/strings.xml
+++ b/apk/res/values-gu/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ત્વચાનું તાપમાન"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ત્વચાના તાપમાનનો ડેટા વાંચો"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ત્વચાના તાપમાનનો ડેટા લખો"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"આમાં Health Connectમાં સિંક કરેલી અને ઉમેરવામાં આવેલી સ્વાસ્થ્ય સંબંધિત બધી માહિતીનો સમાવેશ થાય છે. શક્ય છે કે આ તમારો સંપૂર્ણ મેડિકલ રેકોર્ડ ન હોય અને તેમાં તમારી સ્વાસ્થ્ય સંબંધિત માહિતીનું તબીબી વર્ણન શામેલ ન હોય."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"સ્વાસ્થ્ય સંબંધિત બધી માહિતી"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"સ્વાસ્થ્ય સંબંધિત બધી માહિતી"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"સ્વાસ્થ્ય સંબંધિત બધી માહિતી લખો"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"જો તમે ઍક્સેસ આપો, તો ઍપ એલર્જી, લેબના પરિણામો અને રસીઓ જેવી બીજી ઘણી બાબતોનો ડેટા લખી અને વાંચી શકે છે\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"જો તમે ઍક્સેસ આપો, તો ઍપ એલર્જી, લેબના પરિણામો અને રસીઓ જેવી બીજી ઘણી બાબતોનો ડેટા વાંચી શકે છે\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"સ્વાસ્થ્ય સંબંધિત માહિતી વિશે"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"શેર કરવા માટેના ડેટામાં આ માહિતી શામેલ છે"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"જો તમે મંજૂરી આપશો, તો <xliff:g id="APP_NAME">%1$s</xliff:g> તમારી સ્વાસ્થ્ય સંબંધિત માહિતી Health Connect સાથે શેર કરી શકે છે."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"તમારી અલગ-અલગ ઍપ અને સૉર્સમાંથી તમારી સ્વાસ્થ્ય સંબંધિત માહિતી સિંક કરો, જેથી તેને એક જગ્યાએ રાખી શકાય"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"શું બધી પરવાનગીઓ કાઢી નાખીએ?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"મ્યુઝિક"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"અન્ય"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"માર્ગદર્શન વિનાના"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> મિનિટ"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> કલાક <xliff:g id="MIN">%2$s</xliff:g> મિનિટ"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> કલાક"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"એકીકરણની પ્રક્રિયા ચાલુ છે"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connectનું Android સિસ્ટમ સાથે એકીકરણ કરવામાં આવી રહ્યું છે.\n\nતમારો ડેટા અને પરવાનગીઓ ટ્રાન્સફર થઈ રહી હોય ત્યારે આ પ્રક્રિયામાં થોડો સમય લાગી શકે છે."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"જ્યાં સુધી તમને પ્રક્રિયા પૂર્ણ થઈ ગઈ હોવાનું નોટિફિકેશન ન મળે ત્યાં સુધી ઍપ બંધ કરશો નહીં."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connectનું એકીકરણ ચાલુ છે"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"અપડેટ જરૂરી છે"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connectનું Android સિસ્ટમ સાથે એકીકરણ કરવામાં આવી રહ્યું છે જેથી તમે સીધા તમારા સેટિંગમાંથી તેને ઍક્સેસ કરી શકશો."</string>
     <string name="update_button" msgid="4544529019832009496">"અપડેટ કરો"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"આ અપડેટ કરવાનું શરૂ કરો કે જેથી Health Connect તમારી સિસ્ટમના સેટિંગ સાથે એકીકરણ ચાલુ રાખી શકે"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"હમણાં અપડેટ કરો"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"સિસ્ટમ અપડેટ જરૂરી છે"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"ચાલુ રાખતા પહેલાં, તમારા ફોનની સિસ્ટમ અપડેટ કરો."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"જો તમે પહેલેથી તમારી ફોન સિસ્ટમ અપડેટ કરેલી હોય, તો એકીકરણ ચાલુ રાખવા માટે તમારો ફોન ફરી શરૂ કરવાનો પ્રયાસ કરો"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect ઍપને અપડેટ કરવી જરૂરી છે"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"ચાલુ રાખતા પહેલાં, Health Connect ઍપને એકદમ નવા વર્ઝન પર અપડેટ કરો."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"વધુ સ્પેસની જરૂર છે"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"એકીકરણ ચાલુ રાખવા માટે Health Connectને તમારા ફોન પર <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> સ્ટોરેજ સ્પેસની જરૂર છે.\n\nતમારા ફોન પરથી કેટલીક સ્પેસ સાફ કરીને પછી ફરી પ્રયાસ કરો."</string>
     <string name="try_again_button" msgid="8745496819992160789">"ફરી પ્રયાસ કરો"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"સ્પેસ ખાલી કરો"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"વધુ સ્પેસની જરૂર છે"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"એકીકરણ ચાલુ રાખવા માટે Health Connectને તમારા ફોન પર <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> સ્ટોરેજ સ્પેસની જરૂર છે."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"એકીકરણ થોભાવ્યું"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect ઍપના Android સિસ્ટમ સાથે એકીકરણ દરમિયાન તે બંધ થઈ ગઈ હતી.\n\nઍપ ફરી ખોલવા તેમજ ડેટા અને પરવાનગીઓ ટ્રાન્સફર કરવાનું ચાલુ રાખવા માટે ફરી શરૂ કરો પર ક્લિક કરો."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Health Connect પરનો તમારો ડેટા રાખવા માટે, આને <xliff:g id="TIME_NEEDED">%1$s</xliff:g>ની અંદર પૂર્ણ કરો"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connectનું Android સિસ્ટમ સાથે એકીકરણ કરવાનું ચાલુ રાખવા માટે ટૅપ કરો. તમારો ડેટા રાખવા માટે, <xliff:g id="TIME_NEEDED">%1$s</xliff:g>ની અંદર આ પૂર્ણ કરો"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connectનું Android સિસ્ટમ સાથે એકીકરણ કરવાનું ચાલુ રાખવા માટે ટૅપ કરો."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"ચાલુ રાખો"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect એકીકરણ ફરી શરૂ કરો"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"તમારો ડેટા રાખવા માટે, <xliff:g id="TIME_NEEDED">%1$s</xliff:g>ની અંદર આ પૂર્ણ કરો"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ઍપ સંબંધિત અપડેટ જરૂરી છે"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect સાથે સિંક કરવાનું ચાલુ રાખવા માટે <xliff:g id="APP_NAME">%1$s</xliff:g> અપડેટ કરવી જરૂરી છે. બધી ઍપ માટે અપડેટ ઉપલબ્ધ ન હોય એવું બની શકે છે."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect સાથે સિંક કરવાનું ચાલુ રાખવા માટે અમુક ઍપ અપડેટ કરવી જરૂરી છે. બધી ઍપ માટે અપડેટ ઉપલબ્ધ ન હોય એવું બની શકે છે."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connectનું એકીકરણ પૂર્ણ થયું નથી"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"તે ફરી ઉપલબ્ધ થશે ત્યારે તમને નોટિફિકેશન મળશે."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"સમજાઈ ગયું"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connectનું એકીકરણ પૂર્ણ થયું નથી"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"વધુ વાંચો"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connectનું એકીકરણ પૂર્ણ થયું"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"ખોલો"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"નવું શું છે"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"હવે તમે Health Connectને સીધા તમારા સેટિંગમાંથી ઍક્સેસ કરી શકો છો. સ્ટોરેજ સ્પેસ ખાલી કરવા માટે, Health Connect ઍપને કોઈપણ સમયે અનઇન્સ્ટૉલ કરો."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"સમજાઈ ગયું"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"તમારી વૉચ પર બધી ઍપ માટે <xliff:g id="DATA_TYPE">%s</xliff:g>નો ઍક્સેસ કાઢી નાખીએ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"ચેક માર્ક"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ક્રૉસ માર્ક"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"હાલમાં, <xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="ALLOW_MODE">%2$s</xliff:g> માટે ફિટનેસ અને સુખાકારીના ડેટાને ઍક્સેસ કરી શકે છે"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g>ને હંમેશાં માટે ફિટનેસ અને સુખાકારી સંબંધિત ડેટાના ઍક્સેસની મંજૂરી આપીએ?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g>ને <xliff:g id="DATA_TYPES">%2$s</xliff:g>નો ઍક્સેસ છે."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ફિટનેસ અને સુખાકારીની પરવાનગીઓ મેનેજ કરો"</string>
 </resources>
