--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"hitastig húðar"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lesa hitastig húðar"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Skrifa hitastig húðar"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Þetta felur í sér allar heilsufarsskrár sem eru samstilltar og bætt við Heilsutengingu. Þetta er hugsanlega ekki öll sjúkraskráin þín og innheldur ekki læknisfræðilega lýsingu á heilsufarsskránum þínum."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Öll heilsufarsgögn"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"öll heilsufarsgögn"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Skrifa öll heilsufarsgögn"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ef þú veitir forritinu aðgang getur það lesið og skrifað gögn á borð við upplýsingar um ofnæmi, rannsóknarniðurstöður, bólusetningar og fleira\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ef þú veitir forritinu aðgang getur það lesið gögn á borð við upplýsingar um ofnæmi, rannsóknarniðurstöður, bólusetningar og fleira\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Um heilsufarsgögn"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Gögnum sem verður deilt eru m.a."</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ef þú veitir <xliff:g id="APP_NAME">%1$s</xliff:g> aðgang getur forritið deilt heilsufarsgögnunum þínum með Heilsutengingu."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Samstilltu heilsufarsgögnin þín úr mismunandi forritum og af mismunandi upprunum til að nálgast þau á einum stað"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Fjarlægja allar heimildir?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Tónlist"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Annað"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Án leiðsagnar"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> mín."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> klst. <xliff:g id="MIN">%2$s</xliff:g> mín."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> klst."</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Samþætting í gangi"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Samþætting Heilsutengingar og Android-kerfisins er í gangi.\n\nÞað gæti tekið nokkurn tíma að flytja gögn og heimildir."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Ekki loka forritinu fyrr en þú færð tilkynningu um að ferlinu sé lokið."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Samþætting Heilsutengingar er í gangi"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Uppfærslu krafist"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Verið er að samþætta Heilsutengingu og Android-kerfið svo þú getir opnað forritið beint úr stillingunum."</string>
     <string name="update_button" msgid="4544529019832009496">"Uppfæra"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Uppfærðu núna svo samþætting Heilsutengingar og kerfisstillinga geti haldið áfram"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Uppfæra núna"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Kerfisuppfærslu krafist"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Uppfærðu kerfi símans áður en þú heldur áfram."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Ef þú hefur þegar uppfært kerfi símans skaltu prófa að endurræsa símann til að halda samþættingunni áfram"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Uppfærslu Heilsutengingar krafist"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Uppfærðu forrit Heilsutengingar í nýjustu útgáfuna áður en þú heldur áfram."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Aukins geymslurýmis krafist"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Heilsutenging þarf <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> geymslurými í símanum til að halda samþættingunni áfram.\n\nLosaðu um pláss í símanum og reyndu síðan aftur."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Reyna aftur"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Losa um pláss"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Aukins geymslurýmis krafist"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Heilsutenging þarf <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> geymslurými í símanum til að halda samþættingunni áfram."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Hlé var gert á samþættingu"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Forrit Heilsutengingar lokaðist meðan á samþættingu við Android-kerfið stóð.\n\nSmelltu á „Halda áfram“ til að opna forritið aftur og halda flutningi gagna og heimilda áfram."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Ljúktu þessu innan <xliff:g id="TIME_NEEDED">%1$s</xliff:g> til að halda Heilsutengingargögnunum þínum."</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Ýttu til að halda samþættingu Heilsutengingar og Android-kerfisins áfram. Ljúktu þessu innan <xliff:g id="TIME_NEEDED">%1$s</xliff:g> til að halda gögnunum þínum."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Ýttu til að halda samþættingu Heilsutengingar og Android-kerfisins áfram."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Halda áfram"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Halda samþættingu Heilsutengingar áfram"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Ljúktu þessu innan <xliff:g id="TIME_NEEDED">%1$s</xliff:g> til að halda gögnunum þínum."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Uppfærslu forrits krafist"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Þú þarft að uppfæra <xliff:g id="APP_NAME">%1$s</xliff:g> til að geta haldið áfram að samstilla við Heilsutengingu. Uppfærslur eru hugsanlega ekki í boði fyrir öll forrit."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Þú þarft að uppfæra einhver forrit til að geta haldið áfram að samstilla við Heilsutengingu. Uppfærslur eru hugsanlega ekki í boði fyrir öll forrit."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Samþætting Heilsutengingar tókst ekki"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Þú færð tilkynningu þegar þetta verður aftur í boði."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Ég skil"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Samþætting Heilsutengingar tókst ekki"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Lesa meira"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Samþættingu Heilsutengingar er lokið"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Opna"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Nýjungar"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Nú geturðu opnað Heilsutengingu beint úr stillingunum. Þú getur fjarlægt forrit Heilsutengingar hvenær sem er til að losa geymslurými."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Ég skil"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Fjarlægja aðgang allra forrita í úrinu að gögnum um <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Gátmerki"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Kross"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Eins og er getur <xliff:g id="APP_NAME">%1$s</xliff:g> skoðað öll gögn þín um hreysti og vellíðan <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Viltu veita <xliff:g id="APP_NAME">%1$s</xliff:g> óheftan aðgang að gögnum um hreysti og vellíðan?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> hefur aðgang að <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Stjórna heimildum fyrir hreysti og vellíðan"</string>
 </resources>
