--- a/apk/res/values-it/strings.xml
+++ b/apk/res/values-it/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura cutanea"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Leggere la temperatura cutanea"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Scrivere la temperatura cutanea"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Sono inclusi tutti i riepiloghi salute sincronizzati e aggiunti a Connessione Salute. Questa potrebbe non essere la tua cartella clinica completa e non include una descrizione medica dei tuoi riepiloghi salute."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Tutti i riepiloghi salute"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"tutti i riepiloghi salute"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Scrittura di tutti i riepiloghi salute"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Se concedi l\'accesso, l\'app può leggere e scrivere dati quali allergie, risultati di laboratorio, vaccini e altro\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Se concedi l\'accesso, l\'app può leggere dati quali allergie, risultati di laboratorio, vaccini e altro\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Informazioni sui riepiloghi salute"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"I dati da condividere includono"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Se lo consenti, <xliff:g id="APP_NAME">%1$s</xliff:g> può condividere i tuoi riepiloghi salute con Connessione Salute."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronizza i tuoi riepiloghi salute da diverse app e fonti per conservarli in un unico posto"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Rimuovere tutte le autorizzazioni?"</string>
@@ -792,6 +790,8 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musica"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Altro"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Non guidata"</string>
+    <string name="activity_intensity_type_moderate" msgid="7974792315871109564">"Moderata"</string>
+    <string name="activity_intensity_type_vigorous" msgid="5651020560923780330">"Intensa"</string>
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h e <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1044,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integrazione in corso"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"È in corso l\'integrazione di Connessione Salute nel sistema Android.\n\nIl trasferimento di dati e autorizzazioni potrebbe richiedere del tempo."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Non chiudere l\'app finché non riceverai una notifica che ti informa che il processo è stato completato."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integrazione di Connessione Salute in corso"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Aggiornamento necessario"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"È in corso l\'integrazione di Connessione Salute nel sistema Android, così potrai accedere all\'app direttamente dalle tue impostazioni."</string>
     <string name="update_button" msgid="4544529019832009496">"Aggiorna"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Avvia questo aggiornamento, in modo che l\'integrazione nelle tue impostazioni di sistema di Connessione Salute possa continuare"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Aggiorna ora"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Aggiornamento di sistema richiesto"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Prima di continuare, aggiorna il sistema del tuo telefono."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Se hai già aggiornato il sistema del tuo telefono, prova a riavviare il dispositivo per continuare con l\'integrazione"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Aggiornamento Connessione Salute richiesto"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Prima di continuare, aggiorna l\'app Connessione Salute all\'ultima versione."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"È necessario più spazio"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Connessione Salute richiede <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> di spazio di archiviazione sul telefono per continuare con l\'integrazione.\n\nLibera un po\' di spazio sul telefono e riprova."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Riprova"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Libera spazio"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"È necessario più spazio"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Connessione Salute richiede <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> di spazio di archiviazione sul telefono per continuare con l\'integrazione."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrazione in pausa"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"L\'app Connessione Salute è stata chiusa durante l\'integrazione nel sistema Android.\n\nFai clic su Riprendi per riaprire l\'app e continuare a trasferire dati e autorizzazioni."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Per mantenere i tuoi dati di Connessione Salute, completa l\'operazione entro <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1066,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Tocca per continuare con l\'integrazione di Connessione Salute nel sistema Android. Per mantenere i tuoi dati, completa l\'operazione entro <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Tocca per continuare con l\'integrazione di Connessione Salute nel sistema Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continua"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Riprendi l\'integrazione di Connessione Salute"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Per mantenere i tuoi dati, completa l\'operazione entro <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Aggiornamento app necessario"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"L\'app <xliff:g id="APP_NAME">%1$s</xliff:g> deve essere aggiornata per continuare a sincronizzarsi con Connessione Salute. Gli aggiornamenti potrebbero non essere disponibili per tutte le app."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Alcune app devono essere aggiornate per continuare a sincronizzarsi con Connessione Salute. Gli aggiornamenti potrebbero non essere disponibili per tutte le app."</string>
@@ -1090,10 +1083,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integrazione di Connessione Salute non completata"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Riceverai una notifica quando sarà di nuovo disponibile."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integrazione di Connessione Salute non completata"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Scopri di più"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integrazione di Connessione Salute completata"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Apri"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novità"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Ora puoi accedere a Connessione Salute direttamente dalle tue impostazioni. Disinstalla l\'app Connessione Salute in qualsiasi momento per liberare spazio di archiviazione."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1185,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Rimuovere l\'accesso a <xliff:g id="DATA_TYPE">%s</xliff:g> per tutte le app sull\'orologio?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Segno di spunta"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Croce"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Al momento, <xliff:g id="APP_NAME">%1$s</xliff:g> può accedere ai dati relativi a benessere e attività fisica <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Consentire all\'app <xliff:g id="APP_NAME">%1$s</xliff:g> di accedere sempre ai dati relativi a benessere e attività fisica?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ha accesso a: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gestisci le autorizzazioni per fitness e benessere"</string>
 </resources>
