--- a/apk/res/values-iw/strings.xml
+++ b/apk/res/values-iw/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"טמפרטורת העור"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"קריאה של טמפרטורת העור"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"כתיבה של טמפרטורת העור"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"זה כולל את כל הסיכומים על המצב הבריאותי שסונכרנו עם Health Connect ונוספו לאפליקציה הזו. יכול להיות שזה לא התיק הרפואי המלא שלך, ולא כולל תיאור רפואי של הסיכומים על המצב הבריאותי."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"כל הסיכומים על המצב הבריאותי"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"כל הסיכומים על המצב הבריאותי"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"אישור לכתיבה של כל הסיכומים על המצב הבריאותי"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"אם הגישה תאושר, האפליקציה תוכל לקרוא ולכתוב נתונים כמו אלרגיות, תוצאות של בדיקות מעבדה, חיסונים ועוד\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"אם הגישה תאושר, האפליקציה תוכל לקרוא נתונים כמו אלרגיות, תוצאות של בדיקות מעבדה, חיסונים ועוד\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"מידע לגבי הסיכומים על המצב הבריאותי"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"הנתונים שישותפו כוללים"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"אם תינתן הרשאה, האפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> תוכל לשתף את הסיכומים על המצב הבריאותי שלך עם Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"אפשר לסנכרן את הסיכומים על המצב הבריאותי שלך מהאפליקציות ומהמקורות השונים כדי לשמור אותם במקום אחד"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"להסיר את כל ההרשאות?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"מוזיקה"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"אחר"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"ללא הדרכה"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"דקה (<xliff:g id="MINUTE">%1$s</xliff:g>)"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> שע’ <xliff:g id="MIN">%2$s</xliff:g> דק’"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> שע‘"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"השילוב מתבצע"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"מתבצע שילוב של Health Connect עם מערכת Android‏.\n\nהעברת הנתונים וההרשאות יכולה לקחת קצת זמן."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"אין לסגור את האפליקציה עד לקבלת ההודעה שהתהליך הושלם."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"השילוב של Health Connect מתבצע"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"נדרש עדכון"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"מתבצע שילוב של Health Connect עם מערכת Android כדי שניתן יהיה לגשת אליה ישירות מההגדרות."</string>
     <string name="update_button" msgid="4544529019832009496">"עדכון"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"יש לבצע את העדכון הזה כדי ש-Health Connect תוכל להמשיך בשילוב עם הגדרות המערכת"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"לעדכון"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"נדרש עדכון מערכת"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"לפני המשך הפעולה, עליך לעדכן את מערכת הטלפון שלך."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"אם כבר עדכנת את מערכת הטלפון שלך, אפשר לנסות להפעיל מחדש את הטלפון כדי להמשיך בשילוב"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"צריך לעדכן את Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"לפני המשך הפעולה, יש לעדכן את אפליקציית Health Connect לגרסה האחרונה."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"צריך עוד מקום אחסון"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect זקוקה לנפח אחסון של <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> בטלפון כדי להמשיך בשילוב.\n\nעליך לפנות מקום בטלפון שלך ואז לנסות שוב."</string>
     <string name="try_again_button" msgid="8745496819992160789">"ניסיון חוזר"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"פינוי מקום אחסון"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"צריך עוד מקום אחסון"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect זקוקה לנפח אחסון של <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> בטלפון כדי להמשיך בשילוב."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"השילוב מושהה"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"אפליקציית Health Connect נסגרה בזמן השילוב עם מערכת Android‏.\n\nיש ללחוץ על \'המשך\' כדי לפתוח מחדש את האפליקציה ולהמשיך בהעברת הנתונים וההרשאות."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"כדי שנתוני Health Connect שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"יש להקיש כדי להמשיך בשילוב של Health Connect עם מערכת Android. כדי שהנתונים שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"יש להקיש כדי להמשיך בשילוב של Health Connect עם מערכת Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"המשך"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"המשך השילוב של Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"כדי שהנתונים שלך יישמרו, עליך להשלים זאת בתוך <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"נדרש עדכון לאפליקציה"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"צריך לעדכן את אפליקציית <xliff:g id="APP_NAME">%1$s</xliff:g> כדי להמשיך בסנכרון עם Health Connect. יכול להיות שהעדכונים לא זמינים לכל האפליקציות."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"צריך לעדכן אפליקציות מסוימות כדי להמשיך בסנכרון עם Health Connect. יכול להיות שהעדכונים לא זמינים לכל האפליקציות."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"השילוב של Health Connect לא הושלם"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"תוצג הודעה כשאפשר יהיה להמשיך."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"הבנתי"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"השילוב של Health Connect לא הושלם"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"למידע נוסף"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"השילוב של Health Connect הושלם"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"פתיחה"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"מה חדש"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"עכשיו אפשר לגשת ל-Health Connect ישירות מההגדרות. ניתן להסיר את אפליקציית Health Connect בכל שלב, ולפנות מקום אחסון."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"הבנתי"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"להסיר את הרשאות הגישה לנתוני <xliff:g id="DATA_TYPE">%s</xliff:g> מכל האפליקציות בשעון?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"סימן וי"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"סימן איקס"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"כרגע, לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יש גישה לנתוני הכושר והבריאות <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"לתת לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> הרשאת גישה לנתוני הכושר והבריאות כל הזמן?"</string>
+    <string name="current_access" msgid="1457167070428176139">"לאפליקציה <xliff:g id="APP_NAME">%1$s</xliff:g> יש גישה אל <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"עריכת ההרשאות של נתוני הכושר והבריאות"</string>
 </resources>
