--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"សីតុណ្ហភាពស្បែក"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"អានសីតុណ្ហភាពស្បែក"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"សរសេរសីតុណ្ហភាពស្បែក"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"ចំណុចនេះរួមបញ្ចូលទាំងកំណត់ត្រាសុខភាពទាំងអស់ដែលបានធ្វើសមកាលកម្ម និងបញ្ចូលទៅ Health Connect។ ករណីនេះប្រហែលជាមិនមែនជាកំណត់ត្រាវេជ្ជសាស្រ្តពេញលេញរបស់អ្នកទេ និងមិនរួមបញ្ចូលការពណ៌នាផ្នែកវេជ្ជសាស្ត្រអំពីកំណត់ត្រាសុខភាពរបស់អ្នកទេ។"</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"កំណត់ត្រាសុខភាពទាំងអស់"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"កំណត់ត្រាសុខភាពទាំងអស់"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"សរសេរកំណត់ត្រាសុខភាពទាំងអស់"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ប្រសិនបើអ្នកផ្ដល់សិទ្ធិចូលប្រើ កម្មវិធីអាចអាន និងសរសេរទិន្នន័យ ដូចជាអាឡែហ្ស៊ី លទ្ធផលមន្ទីរពិសោធន៍ វ៉ាក់សាំង និងអ្វីៗជាច្រើនទៀត\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ប្រសិនបើអ្នកផ្ដល់សិទ្ធិចូលប្រើ កម្មវិធីអាចអានទិន្នន័យ ដូចជាអាឡែហ្ស៊ី លទ្ធផលមន្ទីរពិសោធន៍ វ៉ាក់សាំង និងអ្វីៗជាច្រើនទៀត\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"អំពីកំណត់ត្រាសុខភាព"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"ទិន្នន័យដែលត្រូវចែករំលែករួមមាន"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"ប្រសិនបើអ្នកអនុញ្ញាត <xliff:g id="APP_NAME">%1$s</xliff:g> អាចចែករំលែកកំណត់ត្រាសុខភាពរបស់អ្នកជាមួយ Health Connect។"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ធ្វើសមកាលកម្មកំណត់ត្រាសុខភាពរបស់អ្នកពីប្រភព និងកម្មវិធីផ្សេងៗរបស់អ្នក ដើម្បីរក្សាទុកកំណត់ត្រាទាំងនេះក្នុងកន្លែងតែមួយ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ដក​ការអនុញ្ញាត​ទាំងអស់​ឬ?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"តន្ត្រី"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"ផ្សេងៗ"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"គ្មានការណែនាំ"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g>ន"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g>ម៉ <xliff:g id="MIN">%2$s</xliff:g>ន"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g>ម៉"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"ការរួមបញ្ចូល​កំពុងដំណើរការ"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect កំពុងត្រូវបាន​រួមបញ្ចូលជាមួយប្រព័ន្ធ Android។\n\nសកម្មភាពនេះ​អាចចំណាយពេលបន្តិច ខណៈពេល​ដែលទិន្នន័យ និងការអនុញ្ញាត​របស់អ្នកកំពុងត្រូវបានផ្ទេរ។"</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"កុំបិទកម្មវិធី រហូតទាល់តែអ្នក​ទទួលបានការជូនដំណឹងថា ដំណើរការនេះ​បញ្ចប់។"</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"ការរួមបញ្ចូល Health Connect កំពុងដំណើរការ"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"ចាំបាច់ត្រូវមានកំណែថ្មី"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect កំពុងត្រូវបានរួមបញ្ចូល​ជាមួយប្រព័ន្ធ Android ដើម្បីឱ្យអ្នកអាច​ចូលប្រើកម្មវិធីនេះ​ដោយផ្ទាល់​ពីការកំណត់របស់អ្នក។"</string>
     <string name="update_button" msgid="4544529019832009496">"ដំឡើងកំណែ"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"ចាប់ផ្ដើម​ការដំឡើងកំណែនេះ ដើម្បីឱ្យ Health Connect អាចបន្តរួមបញ្ចូល​ជាមួយការកំណត់​ប្រព័ន្ធរបស់អ្នក"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"ដំឡើងកំណែ​ឥឡូវនេះ"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"ចាំបាច់ត្រូវមាន​បច្ចុប្បន្នភាព​ប្រព័ន្ធ"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"មុនពេលបន្ត សូមធ្វើបច្ចុប្បន្នភាព​ប្រព័ន្ធទូរសព្ទរបស់អ្នក។"</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"ប្រសិនបើអ្នក​បានធ្វើបច្ចុប្បន្នភាព​ប្រព័ន្ធទូរសព្ទ​របស់អ្នករួចហើយ សូមសាកល្បង​ចាប់ផ្ដើមទូរសព្ទ​របស់អ្នកឡើងវិញ ដើម្បីបន្តការរួមបញ្ចូល"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"ចាំបាច់ត្រូវមានកំណែថ្មី Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"មុនពេលបន្ត សូមដំឡើងកំណែ​កម្មវិធី Health Connect ទៅកំណែចុងក្រោយបំផុត។"</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"ចាំបាច់ត្រូវមានទំហំផ្ទុកបន្ថែម"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect ត្រូវការទំហំផ្ទុក <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> នៅលើទូរសព្ទ​របស់អ្នក ដើម្បីបន្ត​ការរួមបញ្ចូល។\n\nសូមសម្អាតទំហំផ្ទុកមួយចំនួន​នៅលើទូរសព្ទរបស់អ្នក រួចព្យាយាមម្ដងទៀត។"</string>
     <string name="try_again_button" msgid="8745496819992160789">"ព្យាយាមម្ដងទៀត"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"បង្កើន​ទំហំផ្ទុក​ទំនេរ"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"ចាំបាច់ត្រូវមានទំហំផ្ទុកបន្ថែម"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect ត្រូវការទំហំផ្ទុក <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> នៅលើ​ទូរសព្ទរបស់អ្នក ដើម្បីបន្តរួមបញ្ចូល។"</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"ការរួមបញ្ចូល​ត្រូវបានផ្អាក"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"កម្មវិធី Health Connect បានបិទ ខណៈពេលដែល​កម្មវិធីនេះកំពុងត្រូវបានរួមបញ្ចូល​ជាមួយប្រព័ន្ធ Android។\n\nសូមចុច \"បន្ត\" ដើម្បីបើក​កម្មវិធីឡើងវិញ និងបន្តផ្ទេរទិន្នន័យនិងការអនុញ្ញាតរបស់អ្នក។"</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"ដើម្បីរក្សាទុកទិន្នន័យ Health Connect របស់អ្នក សូមបញ្ចប់សកម្មភាពនេះក្នុងរយៈពេល <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"ចុចដើម្បី​បន្តរួមបញ្ចូល Health Connect ជាមួយប្រព័ន្ធ Android។ ដើម្បីរក្សាទុក​ទិន្នន័យរបស់អ្នក សូមបញ្ចប់​សកម្មភាពនេះក្នុងរយៈពេល <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"ចុចដើម្បី​បន្តរួមបញ្ចូល Health Connect ជាមួយប្រព័ន្ធ Android។"</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"បន្ត"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"បន្តការរួមបញ្ចូល Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"ដើម្បីរក្សាទុក​ទិន្នន័យរបស់អ្នក សូមបញ្ចប់​សកម្មភាពនេះក្នុងរយៈពេល <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"តម្រូវឱ្យមានកំណែថ្មី​របស់កម្មវិធី"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"ចាំបាច់ត្រូវដំឡើងកំណែ <xliff:g id="APP_NAME">%1$s</xliff:g> ដើម្បីបន្តការធ្វើសមកាលកម្មជាមួយ Health Connect។ កំណែថ្មីៗប្រហែលមិនមានសម្រាប់កម្មវិធីទាំងអស់ទេ។"</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"ចាំបាច់ត្រូវដំឡើងកំណែកម្មវិធីមួយចំនួន ដើម្បីបន្តការធ្វើសមកាលកម្មជាមួយ Health Connect។ កំណែថ្មីៗប្រហែលមិនមានសម្រាប់កម្មវិធីទាំងអស់ទេ។"</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"ការរួមបញ្ចូល Health Connect មិនបានបញ្ចប់ទេ"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"អ្នកនឹងទទួលបាន​ការជូនដំណឹង នៅពេលអាចផ្ទេរបានម្ដងទៀត។"</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"យល់ហើយ"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"ការរួមបញ្ចូល Health Connect មិនបានបញ្ចប់ទេ"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"អានបន្ថែម"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"ការរួមបញ្ចូល Health Connect បានបញ្ចប់"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"បើក"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"អ្វី​ដែលថ្មី"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"ឥឡូវនេះ អ្នកអាចចូលប្រើ Health Connect ដោយផ្ទាល់​ពីការកំណត់របស់អ្នក​បានហើយ។ លុបកម្មវិធី Health Connect បានគ្រប់ពេល ដើម្បីបង្កើនទំហំផ្ទុក។"</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"យល់ហើយ"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ដកសិទ្ធិចូលប្រើ <xliff:g id="DATA_TYPE">%s</xliff:g> សម្រាប់កម្មវិធីទាំងអស់នៅលើនាឡិការបស់អ្នកឬ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"សញ្ញា​ធីក"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"សញ្ញា​ខ្វែង"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"បច្ចុប្បន្ន <xliff:g id="APP_NAME">%1$s</xliff:g> អាចចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាព <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាពគ្រប់ពេលឬ?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> មានសិទ្ធិចូលប្រើ<xliff:g id="DATA_TYPES">%2$s</xliff:g>។"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"គ្រប់គ្រងការអនុញ្ញាតសម្បទា និងសុខុមាលភាព"</string>
 </resources>
