--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ಚರ್ಮದ ತಾಪಮಾನ"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ಚರ್ಮದ ತಾಪಮಾನವನ್ನು ಓದಿ"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ಚರ್ಮದ ತಾಪಮಾನವನ್ನು ಬರೆಯಿರಿ"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"ಇದು Health Connect ಗೆ ಸಿಂಕ್ ಮಾಡಲಾದ ಮತ್ತು ಸೇರಿಸಲಾದ ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳನ್ನು ಒಳಗೊಂಡಿರುತ್ತದೆ. ಇದು ನಿಮ್ಮ ಸಂಪೂರ್ಣ ವೈದ್ಯಕೀಯ ದಾಖಲೆಯಾಗದಿರಬಹುದು ಮತ್ತು ನಿಮ್ಮ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳ ವೈದ್ಯಕೀಯ ವಿವರಣೆಯನ್ನು ಒಳಗೊಂಡಿರುವುದಿಲ್ಲ."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳು"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳು"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ಎಲ್ಲಾ ಆರೋಗ್ಯಕ್ಕೆ ಸಂಬಂಧಿಸಿದ ರೆಕಾರ್ಡ್‌ಗಳನ್ನು ಬರೆಯಿರಿ"</string>
@@ -791,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"ಸಂಗೀತ"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"ಇತರೆ"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"ಮಾರ್ಗದರ್ಶನವಿಲ್ಲ"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g>ನಿ"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g>ಗಂ <xliff:g id="MIN">%2$s</xliff:g>ನಿ"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g>ಗಂ"</string>
@@ -1043,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"ಇಂಟಿಗ್ರೇಶನ್ ಪ್ರಗತಿಯಲ್ಲಿದೆ"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect Android ಸಿಸ್ಟಂನೊಂದಿಗೆ ಸಂಯೋಜನೆಯಾಗಲಿದೆ.\n\nನಿಮ್ಮ ಡೇಟಾ ಮತ್ತು ಅನುಮತಿಗಳು ವರ್ಗಾವಣೆ ಆಗುವಾಗ ಇದು ಸ್ವಲ್ಪ ಸಮಯ ತೆಗೆದುಕೊಳ್ಳಬಹುದು."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"ಪ್ರಕ್ರಿಯೆಯು ಪೂರ್ಣಗೊಂಡಿದೆ ಎಂಬ ನೋಟಿಫಿಕೇಶನ್ ಅನ್ನು ನೀವು ಪಡೆಯುವವರೆಗೂ ಆ್ಯಪ್ ಅನ್ನು ಮುಚ್ಚಬೇಡಿ."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect ಇಂಟಿಗ್ರೇಶನ್ ಪ್ರಗತಿಯಲ್ಲಿದೆ"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"ಅಪ್‌ಡೇಟ್‌ನ ಅಗತ್ಯವಿದೆ"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect Android ಸಿಸ್ಟಂನೊಂದಿಗೆ ಸಂಯೋಜನೆಯಾಗಲಿದೆ ಹಾಗಾಗಿ ನೀವು ನೇರವಾಗಿ ನಿಮ್ಮ ಸೆಟ್ಟಿಂಗ್‌ಗಳಿಂದ ಅದಕ್ಕೆ ಆ್ಯಕ್ಸೆಸ್ ಪಡೆಯಬಹುದು."</string>
     <string name="update_button" msgid="4544529019832009496">"ಅಪ್‌ಡೇಟ್ ಮಾಡಿ"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"ಈ ಅಪ್‌ಡೇಟ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸುವುದರಿಂದ Health Connect ನಿಮ್ಮ ಸಿಸ್ಟಂ ಸೆಟ್ಟಿಂಗ್‌ಗಳೊಂದಿಗೆ ಸಂಯೋಜನೆಯಾಗುವುದನ್ನು ಮುಂದುವರಿಸಬಹುದು"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"ಈಗಲೇ ಅಪ್‌ಡೇಟ್ ಮಾಡಿ"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"ಸಿಸ್ಟಂ ಅಪ್‌ಡೇಟ್ ಅಗತ್ಯವಿದೆ"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"ಮುಂದುವರಿಯುವ ಮೊದಲು, ನಿಮ್ಮ ಫೋನ್ ಸಿಸ್ಟಂ ಅನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡಿ."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"ನೀವು ಈಗಾಗಲೇ ನಿಮ್ಮ ಫೋನ್ ಸಿಸ್ಟಂ ಅನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡಿದ್ದರೆ, ಇಂಟಿಗ್ರೇಶನ್ ಅನ್ನು ಮುಂದುವರಿಸಲು ನಿಮ್ಮ ಫೋನ್ ಅನ್ನು ಮರುಪ್ರಾರಂಭಿಸಲು ಪ್ರಯತ್ನಿಸಿ"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect ಅಪ್‌ಡೇಟ್ ಅಗತ್ಯವಿದೆ"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"ಮುಂದುವರಿಯುವ ಮೊದಲು, Health Connect ಆ್ಯಪ್ ಅನ್ನು ಇತ್ತೀಚಿನ ಆವೃತ್ತಿಗೆ ಅಪ್‌ಡೇಟ್ ಮಾಡಿ."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"ಹೆಚ್ಚು ಸ್ಥಳ ಅಗತ್ಯವಿದೆ"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"ಇಂಟಿಗ್ರೇಶನ್ ಅನ್ನು ಮುಂದುವರಿಸಲು Health Connect ಗೆ ನಿಮ್ಮ ಫೋನ್‌ನ <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> ಸಂಗ್ರಹಣೆಯ ಸ್ಥಳ ಅಗತ್ಯವಿದೆ.\n\nನಿಮ್ಮ ಫೋನ್‌ನಲ್ಲಿ ಸ್ವಲ್ಪ ಸ್ಥಳವನ್ನು ತೆರವುಗೊಳಿಸಿ ಮತ್ತು ನಂತರ ಮತ್ತೊಮ್ಮೆ ಪ್ರಯತ್ನಿಸಿ."</string>
     <string name="try_again_button" msgid="8745496819992160789">"ಪುನಃ ಪ್ರಯತ್ನಿಸಿ"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"ಸ್ಥಳಾವಕಾಶವನ್ನು ತೆರವುಗೊಳಿಸಿ"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"ಹೆಚ್ಚು ಸ್ಥಳ ಅಗತ್ಯವಿದೆ"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"ಸಂಯೋಜಿಸುವುದನ್ನು ಮುಂದುವರಿಸಲು Health Connect ಗೆ ನಿಮ್ಮ ಫೋನ್‌ನ <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> ಸಂಗ್ರಹಣೆಯ ಸ್ಥಳ ಅಗತ್ಯವಿದೆ."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"ಇಂಟಿಗ್ರೇಶನ್ ಅನ್ನು ವಿರಾಮಗೊಳಿಸಲಾಗಿದೆ"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect ಆ್ಯಪ್ Android ಸಿಸ್ಟಂನೊಂದಿಗೆ ಸಂಯೋಜನೆಯಾಗುತ್ತಿದ್ದಾಗ ಅದು ಮುಚ್ಚಿದೆ.\n\nಆ್ಯಪ್ ಅನ್ನು ಮತ್ತೆ ತೆರೆಯಲು ಪುನರಾರಂಭಿಸಿ ಎಂಬುದನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಮತ್ತು ನಿಮ್ಮ ಡೇಟಾ ಹಾಗೂ ಅನುಮತಿಗಳನ್ನು ವರ್ಗಾಯಿಸುವುದನ್ನು ಮುಂದುವರಿಸಿ."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"ನಿಮ್ಮ Health Connect ಡೇಟಾ ಇರಿಸಿಕೊಳ್ಳಲು <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ಒಳಗಾಗಿ ಇದನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ"</string>
@@ -1070,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Android ಸಿಸ್ಟಂನೊಂದಿಗೆ Health Connect ಅನ್ನು ಸಂಯೋಜಿಸುವುದನ್ನು ಮುಂದುವರಿಸಲು ಟ್ಯಾಪ್ ಮಾಡಿ. ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಇರಿಸಿಕೊಳ್ಳಲು, <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ಒಳಗಾಗಿ ಇದನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Android ಸಿಸ್ಟಂನೊಂದಿಗೆ Health Connect ಅನ್ನು ಸಂಯೋಜಿಸುವುದನ್ನು ಮುಂದುವರಿಸಲು ಟ್ಯಾಪ್ ಮಾಡಿ."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"ಮುಂದುವರಿಸಿ"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ಇಂಟಿಗ್ರೇಶನ್ ಅನ್ನು ಪುನರಾರಂಭಿಸಿ"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"ನಿಮ್ಮ ಡೇಟಾವನ್ನು ಇರಿಸಿಕೊಳ್ಳಲು, <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ಒಳಗಾಗಿ ಇದನ್ನು ಪೂರ್ಣಗೊಳಿಸಿ"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"ಆ್ಯಪ್ ಅಪ್‌ಡೇಟ್ ಅಗತ್ಯವಿದೆ"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect ಜೊತೆಗೆ ಸಿಂಕ್ ಮಾಡುವುದನ್ನು ಮುಂದುವರಿಸಲು <xliff:g id="APP_NAME">%1$s</xliff:g> ಅನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಅಗತ್ಯವಿದೆ. ಅಪ್‌ಡೇಟ್‌ಗಳು ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ ಲಭ್ಯವಿಲ್ಲದಿರಬಹುದು."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect ಜೊತೆಗೆ ಸಿಂಕ್ ಮಾಡುವುದನ್ನು ಮುಂದುವರಿಸಲು ಕೆಲವು ಆ್ಯಪ್‌ಗಳನ್ನು ಅಪ್‌ಡೇಟ್ ಮಾಡುವ ಅಗತ್ಯವಿದೆ. ಅಪ್‌ಡೇಟ್‌ಗಳು ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ ಲಭ್ಯವಿಲ್ಲದಿರಬಹುದು."</string>
@@ -1089,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect ಇಂಟಿಗ್ರೇಶನ್ ಪೂರ್ಣವಾಗಲಿಲ್ಲ"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"ಅದು ಮತ್ತೆ ಲಭ್ಯವಿರುವಾಗ ನೀವು ನೋಟಿಫಿಕೇಶನ್ ಪಡೆಯುವಿರಿ."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"ಅರ್ಥವಾಯಿತು"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect ಇಂಟಿಗ್ರೇಶನ್ ಪೂರ್ಣವಾಗಲಿಲ್ಲ"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"ಇನ್ನಷ್ಟು ಓದಿ"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect ಇಂಟಿಗ್ರೇಶನ್ ಪೂರ್ಣಗೊಂಡಿದೆ"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"ತೆರೆಯಿರಿ"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"ಹೊಸದೇನಿದೆ"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"ಈಗ ನೀವು ನೇರವಾಗಿ ನಿಮ್ಮ ಸೆಟ್ಟಿಂಗ್‌ಗಳಿಂದ Health Connect ಗೆ ಆ್ಯಕ್ಸೆಸ್ ಪಡೆಯಬಹುದು. ಸಂಗ್ರಹಣೆ ಸ್ಥಳವನ್ನು ತೆರವುಗೊಳಿಸಲು, ಯಾವುದೇ ಸಮಯದಲ್ಲಿ Health Connect ಆ್ಯಪ್ ಅನ್ನು ಅನ್‌ಇನ್‌ಸ್ಟಾಲ್ ಮಾಡಿ."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"ಅರ್ಥವಾಯಿತು"</string>
@@ -1134,7 +1126,7 @@
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect ಮೂಲಕ <xliff:g id="APP_NAME">%s</xliff:g> ನೊಂದಿಗೆ ಸಿಂಕ್ ಮಾಡಲು ಇನ್ನಷ್ಟು ಆ್ಯಪ್‌‌ಗಳನ್ನು ಹುಡುಕಿ"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ಆ್ಯಪ್‌ ಸ್ಟೋರ್‌ನಲ್ಲಿ ನೋಡಿ"</string>
     <string name="lock_screen_banner_title" msgid="5384381892985739755">"ಸ್ಕ್ರೀನ್ ಲಾಕ್ ಅನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
-    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ನಿಮ್ಮ ಅರೋಗ್ಯದ ಡೇಟಾಗೆ ಹೆಚ್ಚುವರಿ ಸುರಕ್ಷತೆಯನ್ನು ಒದಗಿಸಲು, ಈ ಸಾಧನಕ್ಕಾಗಿ ಪಿನ್, ಪ್ಯಾಟರ್ನ್ ಅಥವಾ ಪಾಸ್‌ವರ್ಡ್ ಅನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
+    <string name="lock_screen_banner_content" msgid="3392527073622152481">"ನಿಮ್ಮ ಆರೋಗ್ಯದ ಡೇಟಾಗೆ ಹೆಚ್ಚುವರಿ ಸುರಕ್ಷತೆಯನ್ನು ಒದಗಿಸಲು, ಈ ಸಾಧನಕ್ಕಾಗಿ ಪಿನ್, ಪ್ಯಾಟರ್ನ್ ಅಥವಾ ಪಾಸ್‌ವರ್ಡ್ ಅನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="lock_screen_banner_button" msgid="2537090011380728122">"ಸ್ಕ್ರೀನ್ ಲಾಕ್ ಸೆಟ್ ಮಾಡಿ"</string>
     <string name="select_all" msgid="837499881590001166">"ಎಲ್ಲವನ್ನೂ ಆಯ್ಕೆಮಾಡಿ"</string>
     <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"ಕನೆಕ್ಟ್ ಮಾಡಲಾದ ಆ್ಯಪ್‌ಗಳಿಗೆ ಇನ್ನು ಮುಂದೆ Health Connect ನಲ್ಲಿನ ಈ ಡೇಟಾವನ್ನು ಓದಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
@@ -1195,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ನಿಮ್ಮ ವಾಚ್‌ನಲ್ಲಿರುವ ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ <xliff:g id="DATA_TYPE">%s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"ಚೆಕ್‌ ಮಾರ್ಕ್"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ಅಡ್ಡ ಗುರುತು"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"ಪ್ರಸ್ತುತ, <xliff:g id="APP_NAME">%1$s</xliff:g> ನಿಮ್ಮ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಡೇಟಾವನ್ನು <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದು"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"ಎಲ್ಲಾ ಸಮಯದಲ್ಲೂ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಡೇಟಾಗೆ <xliff:g id="APP_NAME">%1$s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ಅನುಮತಿಸಬೇಕೇ?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> ಗೆ ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ಹೊಂದಿದೆ."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಅನುಮತಿಗಳನ್ನು ನಿರ್ವಹಿಸಿ"</string>
 </resources>
