--- a/apk/res/values-ky/strings.xml
+++ b/apk/res/values-ky/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"теринин температурасы"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Теринин температурасын окуу"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Теринин температурасын жазуу"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Буга Health Connect менен шайкештирилген жана ага кошулган ден соолук жөнүндө бардык маалымат кирет. Ал толук медициналык маалыматты бербей жана ден соолугуңуз жөнүндө маалыматтын түшүндүмөсүн көрсөтпөшү мүмкүн."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Ден соолук жөнүндө бардык маалымат"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ден соолук жөнүндө бардык маалымат"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Ден соолук жөнүндө бардык маалыматты жазуу"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Эгер уруксат берсеңиз, колдонмо аллергия, лабораториялык натыйжалар, вакциналар жана башка маалыматтарды окуп жана жаза алат\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Эгер уруксат берсеңиз, колдонмо аллергия, лабораториялык натыйжалар, вакциналар жана башка маалыматтарды окуй алат\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Ден соолук жөнүндө маалымат"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Бөлүшүлө турган маалыматка төмөнкүлөр кирет:"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Эгер уруксат берсеңиз, <xliff:g id="APP_NAME">%1$s</xliff:g> ден соолук жөнүндө маалыматыңызды Health Connect менен бөлүшө алат."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Ден соолук жөнүндө маалыматтарды ар кандай колдонмолордон жана булактардан шайкештирип, бир жерде сактаңыз"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Бардык уруксаттар өчүрүлсүнбү?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Музыка"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Башка"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Жетексиз"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> мүн."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> с. <xliff:g id="MIN">%2$s</xliff:g> мүн."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> с."</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Интеграция аткарылууда"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect Android системасына интеграцияланууда.\n\nАндагы нерселериңиз менен уруксаттарыңызды өткөрүү үчүн бир аз убакыт кетиши мүмкүн."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Интеграцияланып бүттү деген билдирме алынмайынча, колдонмону жаппай туруңуз."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect интеграциясы аткарылууда"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Жаңыртуу талап кылынат"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect Android системасына интеграцияланууда. Бүткөндөн кийин, аны түздөн-түз параметрлерден ача аласыз."</string>
     <string name="update_button" msgid="4544529019832009496">"Жаңыртуу"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Health Connect тутум жөндөөлөрүңүз менен интеграцияны уланта алышы үчүн бул жаңыртууну баштаңыз"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Азыр жаңыртуу"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Системаны жаңыртуу керек"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Улантуудан мурун телефонуңуздун системасын жаңыртыңыз."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Эгер телефонуңуздун системасын жаңырткан болсоңуз, интеграцияны улантуу үчүн телефонуңузду өчүрүп күйгүзүп көрүңүз"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect колдонмосун жаңыртуу керек"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Улантуудан мурун Health Connect колдонмосун эң акыркы версиясына жаңыртыңыз."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Көбүрөөк орун керек"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Интеграцияны улантуу үчүн Health Connect колдонмосуна телефонуңуздан <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> орун керек.\n\nТелефонуңуздан орун бошотуп, кайталап көрүңүз."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Кайталоо"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Орун бошотуу"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Көбүрөөк орун керек"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Интеграцияны улантуу үчүн Health Connect колдонмосуна телефонуңуздан <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> орун керек."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Интеграция тындырылды"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect колдонмосу Android системасына интеграцияланып жатканда жабылды.\n\nКолдонмону кайра ачып, андагы нерселериңизди жана уруксаттарыңызды өткөрүүнү улантуу үчүн \"Улантуу\" баскычын басыңыз."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Health Connect дайындарыңызды сактап калуу үчүн муну <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ичинде аягына чыгарыңыз"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connect\'ти Android системасына интеграциялоону улантуу үчүн таптап коюңуз. Ал жердеги нерселериңиз жоголуп кетпеши үчүн <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ичинде бүтүрүңүз"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connect Android системасына интеграциялана бериши үчүн таптап коюңуз."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Улантуу"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect интеграциясын улантыңыз"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Ал жердеги нерселериңиз жоголуп кетпеши үчүн <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ичинде бүтүрүңүз"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Колдонмону жаңыртуу керек"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect менен шайкештирүүнү улантуу үчүн <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосун жаңыртуу керек. Жаңыртуулар айрым колдонмолор үчүн жеткиликсиз болушу мүмкүн."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect менен шайкештирүүнү улантуу үчүн айрым колдонмолорду жаңыртуу керек. Жаңыртуулар айрым колдонмолор үчүн жеткиликсиз болушу мүмкүн."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect интеграцияланган жок"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Ал кайра жеткиликтүү болгондо билдирме аласыз."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Түшүндүм"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect интеграцияланган жок"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Дагы окуу"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect интеграциясы аяктады"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Ачуу"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Эмне жаңылык"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Эми Health Connect\'ке түздөн-түз параметрлериңизден кире аласыз. Сактагычтан орун бошотуу үчүн Health Connect колдонмосун каалаган убакта чыгарып салсаңыз болот."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Түшүндүм"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Саатыңыздагы бардык колдонмолор үчүн <xliff:g id="DATA_TYPE">%s</xliff:g> кирүү мүмкүнчүлүгү өчүрүлсүнбү?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Белгиленме"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крест белгиси"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Учурда <xliff:g id="APP_NAME">%1$s</xliff:g> фитнес жана саламаттык маалыматыңызга кире алат: <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна фитнес жана саламаттык маалыматтарын ар дайым колдонууга уруксат бересизби?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> төмөнкүнү колдоно алат: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Фитнес жана саламаттык уруксаттарын тескөө"</string>
 </resources>
