--- a/apk/res/values-lt/strings.xml
+++ b/apk/res/values-lt/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"odos temperatūra"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Nuskaityti odos temperatūrą"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Įrašyti odos temperatūrą"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Tai apima visus sveikatos įrašus, sinchronizuotus su „Health Connect“ ir pridėtus prie jos. Tai gali būti ne visa sveikatos istorija ir čia nėra medicininio jūsų sveikatos įrašų aprašymo."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Visi sveikatos įrašai"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"visi sveikatos įrašai"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Rašyti visus sveikatos įrašus"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Jei suteiksite prieigą, programa galės skaityti ir rašyti tokius duomenis kaip alergijos, laboratorinių tyrimų rezultatai, vakcinos ir kt.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Jei suteiksite prieigą, programa galės skaityti tokius duomenis kaip alergijos, laboratorinių tyrimų rezultatai, vakcinos ir kt.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Apie sveikatos įrašus"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Bendrinami duomenys apima"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Jei leisite, „<xliff:g id="APP_NAME">%1$s</xliff:g>“ galės bendrinti jūsų sveikatos įrašus su „Health Connect“."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sinchronizuokite sveikatos įrašus iš skirtingų programų ir šaltinių, kad jie būtų saugomi vienoje vietoje"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Pašalinti visus leidimus?"</string>
@@ -792,6 +790,8 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Muzika"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Kita"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Be vadovo"</string>
+    <string name="activity_intensity_type_moderate" msgid="7974792315871109564">"Vidutinis"</string>
+    <string name="activity_intensity_type_vigorous" msgid="5651020560923780330">"Energingas"</string>
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> val. <xliff:g id="MIN">%2$s</xliff:g> min."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> val."</string>
@@ -1044,23 +1044,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Vyksta integravimas"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"„Health Connect“ integruojama su „Android“ sistema.\n\nGali šiek tiek užtrukti, kol bus perkelti jūsų duomenys ir leidimai."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Neuždarykite programos, kol negausite pranešimo, kad procesas baigtas."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Vykdomas „Health Connect“ integravimas"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Reikia atnaujinti"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"„Health Connect“ integruojama su „Android“ sistema, kad galėtumėte ją pasiekti tiesiai iš nustatymų."</string>
     <string name="update_button" msgid="4544529019832009496">"Atnaujinti"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Pradėkite šį atnaujinimą, kad būtų galima ir toliau integruoti „Health Connect“ su jūsų sistemos nustatymais"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Atnaujinti dabar"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Reikalingas sistemos naujinys"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Prieš tęsdami atnaujinkite telefono sistemą."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Jei jau atnaujinote telefono sistemą, pabandykite iš naujo paleisti telefoną, kad būtų tęsiamas integravimas"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Reikia atnaujinti „Health Connect“"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Prieš tęsdami atnaujinkite programą „Health Connect“ į naujausią versiją."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Reikia daugiau vietos"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"„Health Connect“ reikia <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> saugyklos vietos jūsų telefone, kad būtų tęsiamas integravimas.\n\nAtlaisvinkite telefone šiek tiek vietos ir bandykite dar kartą."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Bandyti dar kartą"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Atlaisvinti vietos"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Reikia daugiau vietos"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"„Health Connect“ reikia <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> saugyklos vietos jūsų telefone, kad būtų tęsiamas integravimas."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integravimas pristabdytas"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Programa „Health Connect“ buvo uždaryta vykdant integravimą su „Android“ sistema.\n\nSpustelėkite „Tęsti“, kad iš naujo atidarytumėte programą ir tęstumėte duomenų ir leidimų perkėlimą."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Kad išsaugotumėte „Health Connect“ duomenis, atlikite tai iki <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1066,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Palieskite ir tęskite „Health Connect“ integravimą su „Android“ sistema. Kad išsaugotumėte duomenis, atlikite tai iki <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Palieskite ir tęskite „Health Connect“ integravimą su „Android“ sistema."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Tęsti"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Tęsti „Health Connect“ integravimą"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Kad išsaugotumėte duomenis, atlikite tai iki <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Reikalingas programos naujinys"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ reikia atnaujinti, kad būtų galima toliau sinchronizuoti su „Health Connect“. Naujiniai gali būti pasiekiami ne visose programose."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Kai kurias programas reikia atnaujinti, kad būtų galima toliau sinchronizuoti su „Health Connect“. Naujiniai gali būti pasiekiami ne visose programose."</string>
@@ -1090,10 +1083,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"„Health Connect“ integravimas nebuvo baigtas"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Gausite pranešimą, kai vėl bus pasiekiama."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Supratau"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"„Health Connect“ integravimas nebuvo baigtas"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Daugiau"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"„Health Connect“ integravimas baigtas"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Atidaryti"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Kas naujo"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Dabar galite pasiekti „Health Connect“ tiesiai iš nustatymų. Bet kuriuo metu pašalinkite „Health Connect“ programą, kad atlaisvintumėte saugyklos vietos."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Supratau"</string>
@@ -1196,12 +1185,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Pašalinti <xliff:g id="DATA_TYPE">%s</xliff:g> prieigą prie visų programų laikrodyje?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Varnelė"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Kryžiuko ženklas"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Šiuo metu „<xliff:g id="APP_NAME">%1$s</xliff:g>“ gali <xliff:g id="ALLOW_MODE">%2$s</xliff:g> pasiekti visus jūsų mankštos ir sveikatingumo duomenis"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Leisti programai „<xliff:g id="APP_NAME">%1$s</xliff:g>“ visada pasiekti mankštos ir sveikatingumo duomenis?"</string>
+    <string name="current_access" msgid="1457167070428176139">"„<xliff:g id="APP_NAME">%1$s</xliff:g>“ turi prieigą prie <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Tvarkyti mankštos ir sveikatingumo leidimus"</string>
 </resources>
