--- a/apk/res/values-lv/strings.xml
+++ b/apk/res/values-lv/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ādas temperatūra"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lasīt ādas temperatūru"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Rakstīt ādas temperatūru"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Tas ietver visus veselības datus, kas sinhronizēti ar platformu Health Connect un pievienoti tai. Šie dati var nebūt pilnīgi, un tajos nav ietverts jūsu veselības datu medicīnisks apraksts."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Visi veselības dati"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"visi veselības dati"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Rakstīt visus veselības datus"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ja piešķirsiet piekļuvi, lietotne varēs lasīt un rakstīt datus, piemēram, par alerģijām, laboratorijas rezultātiem un vakcināciju.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ja piešķirsiet piekļuvi, lietotne varēs lasīt datus, piemēram, par alerģijām, laboratorijas rezultātiem un vakcināciju.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Par veselības datiem"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Kopīgojamie dati ietver tālāk norādītos datus"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ja atļausiet, <xliff:g id="APP_NAME">%1$s</xliff:g> varēs kopīgot jūsu veselības datus ar platformu Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sinhronizējiet veselības datus no dažādām lietotnēm un avotiem, lai glabātu tos vienuviet"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Vai noņemt visas atļaujas?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Mūzika"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Cits"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Bez vadības"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Notiek integrēšana"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Notiek Health Connect integrēšana Android sistēmā.\n\nDatu un atļauju pārsūtīšana var ilgt kādu brīdi."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Neaizveriet lietotni, kamēr nav parādīts paziņojums par pārsūtīšanas pabeigšanu."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Notiek Health Connect integrēšana"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Nepieciešama atjaunināšana"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Notiek Health Connect integrēšana Android sistēmā, lai jūs tai varētu piekļūt tieši no iestatījumiem."</string>
     <string name="update_button" msgid="4544529019832009496">"Atjaunināt"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Sāciet atjaunināšanu, lai varētu turpināt Health Connect integrēšanu jūsu sistēmas iestatījumos"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Atjaunināt tūlīt"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Nepieciešams atjaunināt sistēmu"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Pirms turpināt, atjauniniet tālruņa sistēmu."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Ja esat atjauninājis tālruņa sistēmu, restartējiet tālruni, lai turpinātu integrēšanu."</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Nepieciešams atjaunināt Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Pirms turpināt, atjauniniet Health Connect uz jaunāko versiju."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Nepieciešams vairāk vietas"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Lai turpinātu integrēšanu, lietotnei Health Connect ir nepieciešams <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> krātuves vietas jūsu tālrunī.\n\nAtbrīvojiet vietu tālrunī un mēģiniet vēlreiz."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Mēģināt vēlreiz"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Atbrīvot vietu"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Nepieciešams vairāk vietas"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Lai turpinātu integrēšanu, lietotnei Health Connect ir nepieciešams <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> krātuves vietas jūsu tālrunī."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrēšana ir apturēta"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Lietotne Health Connect tika aizvērta, kamēr notika integrēšana Android sistēmā.\n\nNoklikšķiniet uz Atsākt, lai atkārtoti atvērtu lietotni un turpinātu datu un atļauju pārsūtīšanu."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Lai paturētu savus Health Connect datus, pabeidziet to šajā laikā: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Pieskarieties, lai turpinātu Health Connect integrēšanu Android sistēmā. Lai paturētu savus datus, pabeidziet to šajā laikā: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Pieskarieties, lai turpinātu Health Connect integrēšanu Android sistēmā."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Turpināt"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect integrēšanas atsākšana"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Lai paturētu savus datus, pabeidziet to šajā laikā: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Ir jāatjaunina lietotne"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Lai turpinātu sinhronizēšanu ar Health Connect, ir jāatjaunina lietotne <xliff:g id="APP_NAME">%1$s</xliff:g>. Atjauninājumi var nebūt pieejami visām lietotnēm."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Lai turpinātu sinhronizēšanu ar Health Connect, ir jāatjaunina dažas lietotnes. Atjauninājumi var nebūt pieejami visām lietotnēm."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect integrēšana netika pabeigta"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Jūs saņemsiet paziņojumu, kad tā atkal būs pieejama."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Labi"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect integrēšana netika pabeigta"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Lasīt vairāk"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect integrēšana ir pabeigta"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Atvērt"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Jaunumi"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Tagad varat piekļūt lietotnei Health Connect tieši no iestatījumiem. Jebkurā brīdī varat atinstalēt lietotni Health Connect, ja nepieciešams atbrīvot krātuves vietu."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Labi"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Vai noņemt visu pulksteņa lietotņu piekļuvi šādiem datiem: <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Atzīme"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Krustiņš"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Pašlaik lietotne <xliff:g id="APP_NAME">%1$s</xliff:g> var piekļūt fitnesa un labsajūtas datiem (<xliff:g id="ALLOW_MODE">%2$s</xliff:g>)"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Vai atļaut lietotnei <xliff:g id="APP_NAME">%1$s</xliff:g> vienmēr piekļūt fitnesa un labsajūtas datiem?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Lietotnei <xliff:g id="APP_NAME">%1$s</xliff:g> ir piekļuve šādiem datiem: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Pārvaldīt fitnesa un labsajūtas datu atļaujas"</string>
 </resources>
