--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура на кожата"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Читање на температурата на кожата"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Запишување на температурата на кожата"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Ова ги опфаќа сите здравствени евиденции што се синхронизирани и додадени во Health Connect. Ова може да не е вашето целосно медицинско досие и не опфаќа медицински опис на вашите здравствени евиденции."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Сета здравствена евиденција"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"сета здравствена евиденција"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Пишување на сета здравствена евиденција"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ако доделите пристап, апликацијата ќе може да чита и запишува податоци како што се алергии, лабораториски резултати, вакцини и друго \n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ако доделите пристап, апликацијата ќе може да чита податоци како што се алергии, лабораториски резултати, вакцини и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"За здравствената евиденција"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Податоците за споделување опфаќаат"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ако дозволите, <xliff:g id="APP_NAME">%1$s</xliff:g> ќе може да ја споделува вашата здравствена евиденција со Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизирајте ја вашата здравствена евиденција од различни апликации и извори за да ја чувате на едно место"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Да се отстранат сите дозволи?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Музика"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Друго"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Неводена"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> м."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> ч. <xliff:g id="MIN">%2$s</xliff:g> м."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> ч."</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Интеграцијата е во тек"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect се интегрира со системот Android.\n\nМоже да потрае некое време додека се префрлаат вашите податоци и дозволи."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Не затворајте ја апликацијата додека не добиете известување дека процесот е завршен."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Интеграцијата на Health Connect е во тек"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Потребно е ажурирање"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect се интегрира со системот Android за да можете да пристапите директно од вашите поставки."</string>
     <string name="update_button" msgid="4544529019832009496">"Ажурирај"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Започнете со ова ажурирање за да може Health Connect да продолжи со интегрирање со поставките на системот"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Ажурирајте сега"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Потребно е ажурирање на системот"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Пред да продолжите, ажурирајте го системот на телефонот."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Ако веќе сте го ажурирале системот на телефонот, обидете се да го рестартирате телефонот за да продолжите со интеграцијата"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Потребно е ажурирање на Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Пред да продолжите, ажурирајте ја апликацијата Health Connect на најновата верзија."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Потребен е поголем простор"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"На Health Connect ѝ треба простор од <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> на вашиот телефон за да продолжи со интеграцијата.\n\nОслободете простор на телефонот и обидете се повторно."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Обиди се повторно"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Ослободете простор"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Потребен е поголем простор"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"На Health Connect ѝ треба простор од <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> на вашиот телефон за да продолжи со интеграцијата."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Интеграцијата е паузирана"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Апликацијата Health Connect се затвори додека се интегрираше со системот на Android.\n\nКликнете „продолжи“ за повторно да ја отворите апликацијата и да продолжите со пренесување на вашите податоци и дозволи."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"За да ги зачувате вашите податоци од Health Connect, завршете го ова за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Допрете за да продолжите со интегрирање на Health Connect со системот со Android. За да ги зачувате вашите податоци, завршете го ова за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Допрете за да продолжите со интегрирање на Health Connect со системот со Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Продолжи"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Продолжете со интеграција со Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"За да ги зачувате вашите податоци, завршете го ова за <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Потребно е ажурирање на апликацијата"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Апликацијата <xliff:g id="APP_NAME">%1$s</xliff:g> треба да се ажурира за да продолжи да се синхронизира со Health Connect. Ажурирањата може да не се достапни за сите апликации."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Некои апликации треба да се ажурираат за да продолжат да се синхронизираат со Health Connect. Ажурирањата може да не се достапни за сите апликации."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Интеграцијата на Health Connect не е завршена"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Ќе добиете известување кога ќе стане повторно достапна."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Сфатив"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Интеграцијата на Health Connect не е завршена"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Прочитајте повеќе"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Интеграцијата на Health Connect е завршена"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Отвори"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Што има ново"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Сега може да пристапите до Health Connect директно од вашите поставки. Деинсталирајте ја апликацијата Health Connect во секое време за да ослободите простор за складирање."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Сфатив"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Да се отстрани пристапот до <xliff:g id="DATA_TYPE">%s</xliff:g> за сите апликации на часовникот?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Знак за штиклирање"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Знак икс"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Во моментов, <xliff:g id="APP_NAME">%1$s</xliff:g> може да пристапува до податоците за фитнес и благосостојба <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Да се дозволи <xliff:g id="APP_NAME">%1$s</xliff:g> да пристапува до податоците за фитнес и благосостојба цело време?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> има пристап до <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Управувајте со дозволите за фитнес и благосостојба"</string>
 </resources>
