--- a/apk/res/values-my/strings.xml
+++ b/apk/res/values-my/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"အရေပြားအပူချိန်"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"အရေပြားအပူချိန် ဖတ်ရန်"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"အရေပြားအပူချိန် ရေးရန်"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"၎င်းတွင် Health Connect ရှိ စင့်ခ်လုပ်ထားသော၊ ထည့်ထားသော ကျန်းမာရေး မှတ်တမ်းအားလုံး ပါဝင်သည်။ ၎င်းသည် သင်၏ကျန်းမာရေး မှတ်တမ်းအပြည့်အစုံ မဟုတ်နိုင်သည့်အပြင် သင့်ကျန်းမာရေး မှတ်တမ်းများ၏ ကုသမှုဆိုင်ရာဖော်ပြချက် မပါဝင်ပါ။"</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"ကျန်းမာရေး မှတ်တမ်းအားလုံး"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"ကျန်းမာရေး မှတ်တမ်းအားလုံး"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"ကျန်းမာရေး မှတ်တမ်းအားလုံးကို ရေးရန်"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"သုံးခွင့်ပြုပါက ဤအက်ပ်သည် ဓာတ်မတည့်မှု၊ ဓာတ်ခွဲခန်းအဖြေ၊ ကာကွယ်ဆေးများ စသည်တို့ကဲ့သို့ ဒေတာကို ဖတ်နိုင်၊ ရေးနိုင်သည်\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"သုံးခွင့်ပြုပါက ဤအက်ပ်သည် ဓာတ်မတည့်မှု၊ ဓာတ်ခွဲခန်းအဖြေ၊ ကာကွယ်ဆေးများ စသည်တို့ကဲ့သို့ ဒေတာကို ဖတ်နိုင်သည်\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"ကျန်းမာရေး မှတ်တမ်းများအကြောင်း"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"မျှဝေမည့်ဒေတာတွင် ပါဝင်သည်များ-"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"ခွင့်ပြုပါက <xliff:g id="APP_NAME">%1$s</xliff:g> သည် သင့်ကျန်းမာရေး မှတ်တမ်းများကို Health Connect နှင့် မျှဝေနိုင်သည်။"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"သင့်အက်ပ်နှင့် ရင်းမြစ်အမျိုးမျိုးမှ ကျန်းမာရေးမှတ်တမ်းများကို တစ်နေရာတည်းတွင် သိမ်းရန် စင့်ခ်လုပ်ပါ"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"ခွင့်ပြုချက်အားလုံး ဖယ်ရှားမလား။"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"တေးဂီတ"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"အခြား"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"လမ်းမညွှန်"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g>m"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g>h <xliff:g id="MIN">%2$s</xliff:g>m"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g>h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"ပေါင်းစည်းနေဆဲဖြစ်သည်"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect ကို Android စနစ်နှင့် ပေါင်းစည်းနေသည်။\n\nသင်၏ဒေတာနှင့် ခွင့်ပြုချက်များကို လွှဲပြောင်းနေစဉ် အချိန်အနည်းငယ် ကြာနိုင်သည်။"</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"လုပ်ငန်းစဉ်ပြီးဆုံးသော အကြောင်းကြားချက်မရမီ အက်ပ်ကို မပိတ်ပါနှင့်။"</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect ကို ပေါင်းစည်းနေဆဲဖြစ်သည်"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"အပ်ဒိတ်လုပ်ရန် လိုသည်"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect ကို သင်၏ဆက်တင်များမှ တိုက်ရိုက်သုံးနိုင်ရန်အတွက် ၎င်းကို Android စနစ်နှင့် ပေါင်းစည်းနေသည်။"</string>
     <string name="update_button" msgid="4544529019832009496">"အပ်ဒိတ်လုပ်ရန်"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Health Connect သည် သင်၏စနစ်ဆက်တင်များနှင့် ပေါင်းစည်းခြင်းကို ဆက်လုပ်နိုင်ရန်အတွက် ဤအပ်ဒိတ်ကို စတင်ပါ"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"ယခု အပ်ဒိတ်လုပ်ရန်"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"စနစ်အပ်ဒိတ်လုပ်ခြင်း လိုသည်"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"ရှေ့မဆက်မီ ဖုန်းစနစ်ကို အပ်ဒိတ်လုပ်ပါ။"</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"ဖုန်းစနစ်ကို အပ်ဒိတ်လုပ်ထားပြီးပါက ပေါင်းစည်းမှုဆက်လုပ်ရန် ဖုန်းကို ပြန်စကြည့်ပါ"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect ကို အပ်ဒိတ်လုပ်ရန်လိုသည်"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"ရှေ့မဆက်မီ Health Connect အက်ပ်ကို နောက်ဆုံးဗားရှင်းသို့ အပ်ဒိတ်လုပ်ပါ။"</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"နောက်ထပ်နေရာလွတ် လိုသည်"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect သည် ပေါင်းစည်းမှုဆက်လုပ်ရန် သင့်ဖုန်းရှိ သိုလှောင်ခန်း နေရာထဲမှ <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> လိုသည်။\n\nဖုန်းတွင် နေရာအချို့ရှင်းပြီး ထပ်စမ်းကြည့်ပါ။"</string>
     <string name="try_again_button" msgid="8745496819992160789">"ထပ်စမ်းကြည့်ရန်"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"နေရာလွတ်လုပ်ရန်"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"နောက်ထပ်နေရာလွတ် လိုသည်"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect သည် ပေါင်းစည်းမှုဆက်လုပ်ရန် သင့်ဖုန်းရှိ သိုလှောင်ခန်း နေရာထဲမှ <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> လိုသည်။"</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"ပေါင်းစည်းမှု ခဏရပ်ထားသည်"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect အက်ပ်ကို Android စနစ်နှင့် ပေါင်းစည်းနေစဉ် ပိတ်သွားသည်။\n\n‘ဆက်လုပ်ရန်’ ကိုတို့ပြီး အက်ပ်ပြန်ဖွင့်ကာ သင်၏ဒေတာနှင့် ခွင့်ပြုချက်များကို ဆက်လက်လွှဲပြောင်းပါ။"</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Health Connect ဒေတာများ ဆက်ထားရန် ၎င်းကို <xliff:g id="TIME_NEEDED">%1$s</xliff:g> အတွင်း အပြီးသတ်ပါ"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connect ကို Android စနစ်နှင့် ဆက်လက်ပေါင်းစည်းရန် တို့ပါ။ သင့်ဒေတာများ ဆက်ထားရန် ၎င်းကို <xliff:g id="TIME_NEEDED">%1$s</xliff:g> အတွင်း အပြီးသတ်ပါ"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connect ကို Android စနစ်နှင့် ဆက်လက်ပေါင်းစည်းရန် တို့ပါ။"</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"ရှေ့ဆက်ရန်"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ပေါင်းစည်းမှု ဆက်လုပ်ပါ"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"သင့်ဒေတာများ ဆက်ထားရန် ၎င်းကို <xliff:g id="TIME_NEEDED">%1$s</xliff:g> အတွင်း အပြီးသတ်ပါ"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"အက်ပ်အပ်ဒိတ် လိုသည်"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect နှင့် စင့်ခ်ဆက်လုပ်ရန် <xliff:g id="APP_NAME">%1$s</xliff:g> ကို အပ်ဒိတ်လုပ်ရပါမည်။ အပ်ဒိတ်များကို အက်ပ်အားလုံးအတွက် မရနိုင်ပါ။"</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect နှင့် စင့်ခ်ဆက်လုပ်ရန် အက်ပ်အချို့ကို အပ်ဒိတ်လုပ်ရပါမည်။ အပ်ဒိတ်များကို အက်ပ်အားလုံးအတွက် မရနိုင်ပါ။"</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect ပေါင်းစည်းမှု မပြီးစီးပါ"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"၎င်းကို ထပ်စမ်းကြည့်နိုင်သောအခါ အကြောင်းကြားချက်ရမည်။"</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"ရပြီ"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect ပေါင်းစည်းမှု မပြီးစီးပါ"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"နောက်ထပ်ဖတ်ရန်"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect ပေါင်းစည်းမှု ပြီးသွားပါပြီ"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"ဖွင့်ရန်"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"ဘာတွေထူးသလဲ"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Health Connect ကို ဆက်တင်များမှ တိုက်ရိုက်သုံးနိုင်ပါပြီ။ သိုလှောင်ခန်း နေရာလွတ်ပြုလုပ်ရန် Health Connect အက်ပ်ကို အချိန်မရွေး ဖယ်ရှားနိုင်သည်။"</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"ရပြီ"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"သင့်လက်ပတ်နာရီရှိ အက်ပ်အားလုံးအတွက် <xliff:g id="DATA_TYPE">%s</xliff:g> သုံးခွင့် ဖယ်ရှားမလား။"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"အမှန်ခြစ်"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ကြက်ခြေခတ် အမှတ်အသား"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"လက်ရှိတွင် <xliff:g id="APP_NAME">%1$s</xliff:g> သည် ကျန်းမာကြံ့ခိုင်ရေးဒေတာများ သုံးခွင့်ရှိသည် <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> ကို ကျန်းမာကြံ့ခိုင်ရေးဒေတာများ အချိန်တိုင်းသုံးခွင့်ပြုမလား။"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် <xliff:g id="DATA_TYPES">%2$s</xliff:g> တို့သုံးခွင့်ရှိသည်။"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ကျန်းမာကြံ့ခိုင်ရေးခွင့်ပြုချက်များ စီမံရန်"</string>
 </resources>
