--- a/apk/res/values-ne/strings.xml
+++ b/apk/res/values-ne/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"छालाको तापक्रम"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"छालाको तापक्रमसम्बन्धी जानकारी रिड गर्ने"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"छालाको तापक्रमसम्बन्धी जानकारी राइट गर्ने"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"यसमा Health Connect मा सिंक गरिएका वा हालिएका सबै स्वास्थ्य अभिलेख समावेश गरिन्छ। यो तपाईंको पूर्ण मेडिकल रेकर्ड नहुन सक्छ र यसमा तपाईंका स्वास्थ्य अभिलेखका मेडिकल विवरण समावेश गरिँदैन।"</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"सबै स्वास्थ्य अभिलेखहरू"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"सबै स्वास्थ्य अभिलेखहरू"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"सबै स्वास्थ्य अभिलेखहरू राइट गर्नुहोस्"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"तपाईंले यो एपलाई एक्सेस दिनुभयो भने यसले एलर्जी, ल्याब परीक्षणका नतिजा र खोपलगायतका जानकारी रिड र राइट गर्न सक्छ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"तपाईंले यो एपलाई एक्सेस दिनुभयो भने यसले एलर्जी, ल्याब परीक्षणका नतिजा र खोपलगायतका जानकारी रिड गर्न सक्छ\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"स्वास्थ्य अभिलेखका बारेमा जानकारी"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"सेयर गर्नु पर्ने डेटाअन्तर्गत निम्न कुरा पर्छन्:"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"तपाईंले <xliff:g id="APP_NAME">%1$s</xliff:g> लाई यो अनुमति दिनुभयो भने यसले Health Connect सँग तपाईंका स्वास्थ्य अभिलेखहरू सेयर गर्न सक्छ।"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"आफ्ना सबै स्वास्थ्य अभिलेखहरू एउटै ठाउँमा राख्न विभिन्न एप र स्रोतका स्वास्थ्य अभिलेखहरू सिंक गर्नुहोस्"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"एपलाई दिइएका सबै अनुमति हटाउने हो?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"सङ्गीत"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"अन्य"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"निर्देशन नदिइने"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> मिनेट"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> घण्टा <xliff:g id="MIN">%2$s</xliff:g> मिनेट"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> घण्टा"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"इन्टिग्रेट गरिँदै छ"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect Android सिस्टममा इन्टिग्रेट गरिँदै छ।\n\nतपाईंका जानकारी र अनुमति ट्रान्स्फर भइरहेकाले यो प्रक्रिया पूरा हुन केही समय लाग्न सक्छ।"</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"तपाईंले यो प्रक्रिया पूरा भएको सूचना प्राप्त नगरुन्जेल यो एप बन्द नगर्नुहोला।"</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect इन्टिग्रेट गरिँदै छ"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"अपडेट गर्नु पर्ने हुन्छ"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"तपाईं सीधै सेटिङबाटै Health Connect प्रयोग गर्न सक्नुहोस् भन्नाका लागि उक्त एप Android सिस्टममा इन्टिग्रेट गरिँदै छ।"</string>
     <string name="update_button" msgid="4544529019832009496">"अपडेट गर्नुहोस्"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Health Connect ले तपाईंको सिस्टमसम्बन्धी सेटिङअनुसार इन्टिग्रेट गरिराख्न सकोस् भन्नाका लागि यो अपडेट गर्न थाल्नुहोस्"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"अहिले नै अपडेट गर्नुहोस्"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"सिस्टम अपडेट गर्नु पर्ने हुन्छ"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"जारी राख्नुअघि आफ्नो फोनको सिस्टम अपडेट गर्नुहोस्।"</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"तपाईंले आफ्नो फोनको सिस्टम अपडेट गरिसक्नुभएको छ भने आफ्नो फोन रिस्टार्ट गरेर इन्टिग्रेट गर्ने प्रक्रिया जारी राख्ने प्रयास गर्नुहोस्"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect अपडेट गर्नु पर्ने हुन्छ"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"जारी राख्नुअघि Health Connect एप अपडेट गरी नवीनतम संस्करण इन्स्टल गर्नुहोस्।"</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"अझ धेरै खाली ठाउँ चाहिन्छ"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect लाई इन्टिग्रेट गर्ने प्रक्रिया जारी राख्नका निम्ति तपाईंको फोनको भण्डारणमा <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> खाली ठाउँ चाहिन्छ।\n\nआफ्नो फोनको भण्डारणमा केही ठाउँ खाली गर्नुहोस् अनि फेरि प्रयास गर्नुहोस्।"</string>
     <string name="try_again_button" msgid="8745496819992160789">"फेरि प्रयास गर्नुहोस्"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"ठाउँ खाली गर्नुहोस्"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"अझ धेरै खाली ठाउँ चाहिन्छ"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect लाई इन्टिग्रेट गर्ने प्रक्रिया जारी राख्नका निम्ति तपाईंको फोनको भण्डारणमा <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> खाली ठाउँ चाहिन्छ।"</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"इन्टिग्रेट गर्ने प्रक्रिया पज गरिएको छ"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Android सिस्टममा इन्टिग्रेट गर्ने क्रममा Health Connect एप बन्द भएको थियो।\n\nयो एप फेरि खोल्न \"सुचारु गर्नुहोस्\" बटनमा क्लिक गर्नुहोस् र आफ्ना जानकारी तथा अनुमति ट्रान्स्फर गर्ने कार्य जारी राख्नुहोस्।"</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Health Connect मा भएको आफ्नो जानकारी सुरक्षित राख्नका निम्ति यो प्रक्रिया <xliff:g id="TIME_NEEDED">%1$s</xliff:g> भित्र पूरा गर्नुहोस्"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connect लाई Android सिस्टममा इन्टिग्रेट गर्ने प्रक्रिया जारी राख्न ट्याप गर्नुहोस्। आफ्नो जानकारी सुरक्षित राख्नका निम्ति यो प्रक्रिया <xliff:g id="TIME_NEEDED">%1$s</xliff:g> भित्र पूरा गर्नुहोस्"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connect Android system मा इन्टिग्रेट गर्ने प्रक्रिया जारी राख्न ट्याप गर्नुहोस्।"</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"जारी राख्नुहोस्"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect इन्ट्रिग्रेट गर्ने प्रक्रिया सुचारु गर्नुहोस्"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"आफ्नो जानकारी सुरक्षित राख्नका निम्ति यो प्रक्रिया <xliff:g id="TIME_NEEDED">%1$s</xliff:g> भित्र पूरा गर्नुहोस्"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"एप अपडेट गर्नु आवश्यक छ"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect सँग सिंक गरिरहन <xliff:g id="APP_NAME">%1$s</xliff:g> अपडेट गर्नु पर्ने हुन्छ। सबै एपहरूका हकमा अपडेट उपलब्ध नहुन सक्छ।"</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect सँग सिंक गरिरहन केही एपहरू अपडेट गर्नु पर्ने हुन्छ। सबै एपहरूका हकमा अपडेट उपलब्ध नहुन सक्छ।"</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect इन्टिग्रेट गर्ने प्रक्रिया पूरा भएन"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"यो फेरि उपलब्ध भएपछि तपाईं एउटा सूचना प्राप्त गर्नु हुने छ।"</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"बुझेँ"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect इन्टिग्रेट गर्ने प्रक्रिया पूरा भएन"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"थप पढ्नुहोस्"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect इन्टिग्रेट गर्ने प्रक्रिया पूरा भयो"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"खोल्नुहोस्"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"नयाँ के छ"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"तपाईं अब सेटिङमा गई सीधै Health Connect एक्सेस गर्न सक्नुहुन्छ। जुनसुकै बेला Health Connect एप अनइन्स्टल गरेर भण्डारणमा ठाउँ खाली गर्नुहोस्।"</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"बुझेँ"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"आफ्नो स्मार्ट वाचमा भएका सबै एपहरूका हकमा <xliff:g id="DATA_TYPE">%s</xliff:g> को एक्सेस हटाउने हो?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"जाँच चिन्ह"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"क्रस चिन्ह"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"हाल <xliff:g id="APP_NAME">%1$s</xliff:g> लाई <xliff:g id="ALLOW_MODE">%2$s</xliff:g> तन्दुरुस्ती तथा आरोग्यसम्बन्धी जानकारी एक्सेस गर्ने अनुमति दिइएको छ"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> लाई सधैँ तन्दुरुस्ती तथा आरोग्यसम्बन्धी जानकारी एक्सेस गर्न दिने हो?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> लाई <xliff:g id="DATA_TYPES">%2$s</xliff:g> एक्सेस गर्ने अनुमति दिइएको छ।"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"तन्दुरुस्ती तथा आरोग्यसम्बन्धी अनुमतिहरू व्यवस्थापन गर्नुहोस्"</string>
 </resources>
