--- a/apk/res/values-pt-rPT/strings.xml
+++ b/apk/res/values-pt-rPT/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura da pele"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ler temperatura da pele"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Escrever temperatura da pele"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Isto inclui todos os registos de saúde sincronizados e adicionados à Saúde Connect. Este registo pode não ser o seu registo médico completo e não inclui uma descrição médica dos seus registos de saúde."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos os registos de saúde"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos os registos de saúde"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Escrever todos os registos de saúde"</string>
@@ -791,6 +790,8 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Música"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Outro"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Sem orientação"</string>
+    <string name="activity_intensity_type_moderate" msgid="7974792315871109564">"Moderada"</string>
+    <string name="activity_intensity_type_vigorous" msgid="5651020560923780330">"Intensa"</string>
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1043,23 +1044,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integração em curso"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"A Saúde Connect está a ser integrada com o sistema Android.\n\nPode demorar algum tempo enquanto os seus dados e autorizações estão a ser transferidos."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Não feche a app até receber uma notificação de que o processo está concluído."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integração da Saúde Connect em curso"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Atualização necessária"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"A Saúde Connect está a ser integrada com o sistema Android para que possa aceder a esta diretamente nas definições."</string>
     <string name="update_button" msgid="4544529019832009496">"Atualizar"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Inicie esta atualização para que a Saúde Connect possa continuar a integração com as definições do seu sistema"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Atualizar agora"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Atualização do sistema necessária"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Antes de continuar, atualize o sistema do seu telemóvel."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Se já atualizou o sistema do seu telemóvel, tente reiniciar o telemóvel para continuar a integração"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Atualização da Saúde Connect necessária"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Antes de continuar, atualize a app Saúde Connect para a versão mais recente."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Mais espaço necessário"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"A Saúde Connect precisa de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de espaço de armazenamento no seu telemóvel para continuar a integração.\n\nLiberte algum espaço no seu telemóvel e, em seguida, tente novamente."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Tentar novamente"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Libertar espaço"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Mais espaço necessário"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"A Saúde Connect precisa de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de espaço de armazenamento no seu telemóvel para continuar a integração."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integração pausada"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"A app Saúde Connect foi fechada enquanto estava a ser integrada com o sistema Android.\n\nClique em Retomar para reabrir a app e continuar a transferir os seus dados e autorizações."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Para manter os seus dados da Saúde Connect, conclua esta ação em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1070,8 +1066,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Toque para continuar a integrar a Saúde Connect com o sistema Android. Para manter os seus dados, conclua esta ação em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Toque para continuar a integrar a Saúde Connect com o sistema Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continuar"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Retome a integração da Saúde Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Para manter os seus dados, conclua esta ação em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Atualização da app necessária"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"É necessário atualizar a app <xliff:g id="APP_NAME">%1$s</xliff:g> para continuar a sincronização com a Saúde Connect. As atualizações podem não estar disponíveis para todas as apps."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"É necessário atualizar algumas apps para continuar a sincronização com a Saúde Connect. As atualizações podem não estar disponíveis para todas as apps."</string>
@@ -1089,10 +1083,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"A integração da Saúde Connect não foi concluída"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Vai receber uma notificação quando estiver novamente disponível."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"A integração da Saúde Connect não foi concluída"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Ler mais"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integração da Saúde Connect concluída"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Abrir"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novidades"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Já pode aceder à Saúde Connect diretamente nas definições. Desinstale a app Saúde Connect em qualquer altura para libertar espaço de armazenamento."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1195,12 +1185,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Remover o acesso aos dados de <xliff:g id="DATA_TYPE">%s</xliff:g> para todas as apps no relógio?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificação"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Marca de cruz"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Atualmente, a app <xliff:g id="APP_NAME">%1$s</xliff:g> pode aceder a dados de fitness e bem-estar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Permitir que a app <xliff:g id="APP_NAME">%1$s</xliff:g> aceda sempre a dados de fitness e bem-estar?"</string>
+    <string name="current_access" msgid="1457167070428176139">"A app <xliff:g id="APP_NAME">%1$s</xliff:g> tem acesso a dados de <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gerir autorizações de fitness e bem-estar"</string>
 </resources>
