--- a/apk/res/values-pt/strings.xml
+++ b/apk/res/values-pt/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura da pele"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Ler temperatura da pele"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Gravar temperatura da pele"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Isso inclui todo o histórico de saúde sincronizado e adicionado ao app Conexão Saúde. Talvez esse não seja seu histórico médico completo, e ele não inclui uma descrição médica do seu histórico de saúde."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Todos os históricos de saúde"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"todos os históricos de saúde"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Gravar todos os históricos de saúde"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Se você conceder acesso, o app poderá ler e gravar dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Se você conceder acesso, o app poderá ler dados, como alergias, resultados de laboratório, vacinas e muito mais\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Sobre os históricos de saúde"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Os dados a serem compartilhados incluem"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Se você permitir, o app <xliff:g id="APP_NAME">%1$s</xliff:g> poderá compartilhar seus históricos de saúde com a Conexão Saúde."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronize seus históricos de saúde de diferentes apps e fontes para que eles fiquem em um só lugar"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Remover todas as permissões?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Música"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Outro"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Não guiada"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g>min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g>h<xliff:g id="MIN">%2$s</xliff:g>min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g>h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integração em andamento"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"O app Conexão Saúde está sendo integrado ao sistema Android.\n\nA transferência de dados e permissões pode demorar um pouco."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Não feche o app até receber uma notificação informando que o processo foi concluído."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integração do app Conexão Saúde em andamento"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Atualização necessária"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"O app Conexão Saúde está sendo integrado ao sistema Android para você conseguir acessá-lo diretamente nas configurações."</string>
     <string name="update_button" msgid="4544529019832009496">"Atualizar"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Inicie esta atualização para que o app Conexão Saúde continue a integração com as configurações do sistema"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Atualizar agora"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Atualização do sistema necessária"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Atualize o sistema do smartphone antes de continuar."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Se você já atualizou o sistema, tente reiniciar o smartphone para continuar a integração"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Atualização necessária no app Conexão Saúde"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Atualize o app Conexão Saúde para a versão mais recente antes de continuar."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Espaço insuficiente"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"O app Conexão Saúde precisa de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de espaço de armazenamento no smartphone para continuar a integração.\n\nLibere espaço no smartphone e tente outra vez."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Tentar de novo"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Liberar espaço"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Espaço insuficiente"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"O app Conexão Saúde precisa de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de espaço de armazenamento no smartphone para continuar a integração."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integração pausada"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"O app Conexão Saúde foi fechado durante a integração com o sistema Android.\n\nClique em \"retomar\" para abrir novamente e continuar a transferência de dados e permissões."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Para manter os dados do app Conexão Saúde, conclua em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Toque para continuar a integração do app Conexão Saúde ao sistema Android. Para manter seus dados, conclua em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Toque para continuar integrando o app Conexão Saúde ao sistema Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continuar"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Retomar a integração do app Conexão Saúde"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Para manter seus dados, conclua em <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Atualização do app necessária"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"O app <xliff:g id="APP_NAME">%1$s</xliff:g> precisa ser atualizado para continuar a sincronização com a Conexão Saúde. As atualizações podem não estar disponíveis para todos os apps."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Alguns apps precisam ser atualizados para continuar a sincronização com a Conexão Saúde. As atualizações podem não estar disponíveis para todos os apps."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"A integração do app Conexão Saúde não foi concluída"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Você vai receber uma notificação quando ela estiver disponível novamente."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Entendi"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"A integração do app Conexão Saúde não foi concluída"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Leia mais"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integração do app Conexão Saúde concluída"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Abrir"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novidades"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Já é possível acessar o app Conexão Saúde diretamente nas configurações. Desinstale quando quiser para liberar espaço de armazenamento."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Entendi"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Remover o acesso aos dados de <xliff:g id="DATA_TYPE">%s</xliff:g> para todos os apps no seu relógio?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de seleção"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Sinal de X"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"No momento, o app <xliff:g id="APP_NAME">%1$s</xliff:g> pode acessar dados de condicionamento físico e bem-estar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Permitir que o app <xliff:g id="APP_NAME">%1$s</xliff:g> acesse dados de condicionamento físico e bem-estar o tempo todo?"</string>
+    <string name="current_access" msgid="1457167070428176139">"O app <xliff:g id="APP_NAME">%1$s</xliff:g> tem acesso aos dados de <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gerenciar permissões de condicionamento físico e bem-estar"</string>
 </resources>
