--- a/apk/res/values-ro/strings.xml
+++ b/apk/res/values-ro/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura pielii"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Citește temperatura pielii"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Scrie temperatura pielii"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Aceasta include toate datele medicale sincronizate și adăugate în Health Connect. Este posibil ca acestea să nu reprezinte evidența ta medicală completă și să nu includă o descriere a datelor medicale."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Toate datele medicale"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"toate datele medicale"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Scrie toate datele medicale"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Dacă acorzi acces, aplicația poate să citească și să scrie date precum alergii, rezultate de laborator, vaccinuri și altele\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Dacă acorzi acces, aplicația poate să citească date precum alergii, rezultate de laborator, vaccinuri și altele\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Despre datele medicale"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Datele de trimis includ"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Dacă permiți, <xliff:g id="APP_NAME">%1$s</xliff:g> poate să-ți trimită datele medicale la Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Sincronizează-ți datele medicale din diferite aplicații și surse pentru a le păstra într-un singur loc"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Elimini toate permisiunile?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Muzică"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Altele"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Fără ghidare"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integrare în curs"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect se integrează cu sistemul Android.\n\nTransferul datelor și permisiunilor poate dura un timp."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Nu închide aplicația până când nu primești o notificare privind finalizarea procesului."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integrarea Health Connect este în curs"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Este necesară actualizarea"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Aplicația Health Connect se integrează cu sistemul Android ca să o poți accesa direct din setări."</string>
     <string name="update_button" msgid="4544529019832009496">"Actualizează"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Inițiază actualizarea pentru ca Health Connect să poată continua integrarea cu setările sistemului"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Actualizează acum"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Este necesară o actualizare de sistem"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Înainte de a continua, actualizează sistemul telefonului."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Dacă ai actualizat deja sistemul telefonului, repornește telefonul pentru a continua integrarea"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Este necesară actualizarea Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Înainte de a continua, actualizează aplicația Health Connect la cea mai recentă versiune."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Este necesar mai mult spațiu"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect are nevoie de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de spațiu de stocare pe telefon pentru a continua integrarea.\n\nEliberează spațiu pe telefon, apoi încearcă din nou."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Încearcă din nou"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Eliberează spațiu"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Este necesar mai mult spațiu"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect are nevoie de <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> de spațiu de stocare pe telefon pentru a continua integrarea."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrarea s-a întrerupt"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplicația Health Connect s-a închis în timpul integrării cu sistemul Android.\n\nDă clic pe Reia pentru a redeschide aplicația și a continua transferul datelor și permisiunilor."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Pentru a păstra datele Health Connect, finalizează procesul în cel mult <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Atinge pentru a continua integrarea Health Connect cu sistemul Android. Pentru a păstra datele, finalizează procesul în cel mult <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Atinge pentru a continua integrarea Health Connect cu sistemul Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Continuă"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Reia integrarea Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Pentru a păstra datele, finalizează procesul în cel mult <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Este necesară actualizarea aplicației"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> trebuie să se actualizeze pentru a continua sincronizarea cu Health Connect. Actualizările pot să nu fie disponibile pentru toate aplicațiile."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Unele aplicații trebuie să se actualizeze pentru a continua sincronizarea cu Health Connect. Actualizările pot să nu fie disponibile pentru toate aplicațiile."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integrarea Health Connect nu s-a finalizat"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Vei primi o notificare când integrarea devine din nou disponibilă."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integrarea Health Connect nu s-a finalizat"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Citește mai mult"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integrarea Health Connect s-a finalizat"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Deschide"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Noutăți"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Acum poți accesa Health Connect direct din setări. Poți să dezinstalezi aplicația Health Connect oricând pentru a elibera spațiu de stocare."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Elimini accesul <xliff:g id="DATA_TYPE">%s</xliff:g> pentru toate aplicațiile de pe ceas?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Bifă"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Semn x"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Momentan, <xliff:g id="APP_NAME">%1$s</xliff:g> poate să acceseze datele despre fitness și wellness <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Permiți accesul <xliff:g id="APP_NAME">%1$s</xliff:g> la datele despre fitness și wellness tot timpul?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> are acces la <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gestionează permisiunile pentru fitness și starea de bine"</string>
 </resources>
