--- a/apk/res/values-ru/strings.xml
+++ b/apk/res/values-ru/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура кожи"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Доступ к данным о температуре кожи"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Запись данных о температуре кожи"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"В том числе информация о здоровье, связанная и синхронизированная с платформой \"Здоровье и спорт\". Эта информация может не включать данные вашей медицинской карты и заключения специалистов."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Все данные о здоровье"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"все данные о здоровье"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Запись всех данных о здоровье"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Если вы предоставите разрешение, приложение сможет считывать и записывать данные, например о вакцинации, анализах и аллергии.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Если вы предоставите разрешение, приложение сможет считывать данные, например об аллергии, вакцинации и анализах.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Об информации, касающейся здоровья"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Примеры данных, которыми можно поделиться"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Если вы предоставите разрешение, приложение \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" сможет делиться данными о вашем здоровье с платформой \"Здоровье и спорт\"."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизируйте информацию о здоровье из разных приложений и источников и храните ее централизованно"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Удалить все разрешения?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Музыка"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Другое"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Без руководства"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> мин."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> ч. <xliff:g id="MIN">%2$s</xliff:g> мин."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> ч."</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Выполняется интеграция"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Выполняется интеграция приложения \"Здоровье и спорт\" с Android.\n\nПеренос ваших данных и разрешений займет некоторое время."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Не закрывайте приложение, пока не получите уведомление о том, что интеграция завершена."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Интеграция приложения \"Здоровье и спорт\""</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Требуется обновление"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Выполняется интеграция приложения \"Здоровье и спорт\" с Android. После окончания вы сможете открывать его прямо из настроек."</string>
     <string name="update_button" msgid="4544529019832009496">"Обновить"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Установите это обновление, чтобы продолжить интеграцию приложения \"Здоровье и спорт\" с настройками системы."</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Обновить"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Требуется обновление системы"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Прежде чем продолжить, обновите систему."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Если вы уже обновили систему, перезапустите телефон, чтобы продолжить интеграцию."</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Обновите Здоровье и спорт"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Прежде чем продолжить, обновите Здоровье и спорт до последней версии."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Недостаточно места"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Чтобы продолжить интеграцию приложения \"Здоровье и спорт\", освободите место в хранилище телефона (<xliff:g id="SPACE_NEEDED">%1$s</xliff:g>).\n\nЗатем повторите попытку."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Повторить попытку"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Освободить место"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Недостаточно места"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Чтобы продолжить интеграцию приложения \"Здоровье и спорт\", освободите место в хранилище телефона (<xliff:g id="SPACE_NEEDED">%1$s</xliff:g>)."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Интеграция приостановлена"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Во время интеграции с Android приложение \"Здоровье и спорт\" было закрыто.\n\nНажмите \"Возобновить\", чтобы заново открыть приложение и продолжить перенос данных и разрешений."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Чтобы не потерять данные из сервиса \"Здоровье и спорт\", завершите перенос в течение <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Нажмите, чтобы продолжить интеграцию приложения \"Здоровье и спорт\" с Android. Чтобы не потерять данные, завершите процесс в течение <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Нажмите, чтобы продолжить интеграцию приложения \"Здоровье и спорт\" с Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Продолжить"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Возобновите интеграцию приложения \"Здоровье и спорт\""</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Чтобы не потерять данные, завершите процесс в течение <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Требуется обновление"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Чтобы приложение \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" синхронизировалось с сервисом \"Здоровье и спорт\", обновите его. Обновления могут быть доступны не для всех приложений."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Чтобы некоторые приложения синхронизировались с сервисом \"Здоровье и спорт\", обновите их. Обновления могут быть доступны не для всех приложений."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Интеграция приложения \"Здоровье и спорт\" не завершена"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Когда она снова станет доступна, вы получите уведомление."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"ОК"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Интеграция приложения \"Здоровье и спорт\" не завершена"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Подробнее"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Интеграция приложения \"Здоровье и спорт\" завершена"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Открыть"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Что изменилось"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Теперь вы можете открывать приложение \"Здоровье и спорт\" из настроек системы. Его можно удалить в любой момент, чтобы очистить хранилище."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"ОК"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Закрыть для всех приложений на часах доступ к следующим данным: <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Флажок"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крестик"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Приложение \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" имеет доступ к вашим данным о физической активности и самочувствии <xliff:g id="ALLOW_MODE">%2$s</xliff:g>."</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Разрешить приложению \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" постоянный доступ к данным о самочувствии и физической активности?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Приложение \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" имеет доступ к следующим типам данных: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Настройки доступа к данным о физической активности и самочувствии"</string>
 </resources>
