--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"සමේ උෂ්ණත්වය"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"සමේ උෂ්ණත්වය කියවන්න"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"සමේ උෂ්ණත්වය ලියන්න"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Health Connect වෙත සමමුහුර්ත කර එක් කළ සියලු ම සෞඛ්‍ය වාර්තා මෙයට ඇතුළත් වේ. මෙය ඔබේ සම්පූර්ණ වෛද්‍ය වාර්තාව නොවිය හැකි අතර ඔබේ සෞඛ්‍ය වාර්තා පිළිබඳ වෛද්‍ය විස්තරයක් ඇතුළත් නොවේ."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"සියලු ම සෞඛ්‍ය වාර්තා"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"සියලු ම සෞඛ්‍ය වාර්තා"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"සියලු ම සෞඛ්‍ය වාර්තා ලියන්න"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"ඔබ ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට අසාත්මිකතා, පරීක්ෂණාගාර ප්‍රතිඵල, එන්නත් සහ තවත් බොහෝ දත්ත කියවීමට සහ ලිවීමට හැක\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"ඔබ ප්‍රවේශය ලබා දෙන්නේ නම්, යෙදුමට අසාත්මිකතා, පරීක්ෂණාගාර ප්‍රතිඵල, එන්නත් සහ තවත් බොහෝ දත්ත කියවීමට හැක\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"සෞඛ්‍ය වාර්තා ගැන"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"බෙදා ගැනීමට දත්තවල ඇතුළත් වේ"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"ඔබ ඉඩ දෙන්නේ නම්, <xliff:g id="APP_NAME">%1$s</xliff:g> හට ඔබේ සෞඛ්‍ය වාර්තා Health Connect සමග බෙදා ගත හැක."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"ඔබේ සෞඛ්‍ය වාර්තා එක තැනක තබා ගැනීමට ඔබේ විවිධ යෙදුම් සහ මූලාශ්‍රවලින් සමමුහුර්ත කරන්න"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"සියලු අවසර ඉවත් කරන්න ද?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"සංගීතය"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"වෙනත්"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"මගපෙන්වීමක් නැත"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"මිනි <xliff:g id="MINUTE">%1$s</xliff:g>ක්"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"පැ<xliff:g id="HOUR">%1$s</xliff:g> මි<xliff:g id="MIN">%2$s</xliff:g>"</string>
     <string name="hour_duration" msgid="3472489613837138711">"පැය <xliff:g id="HOUR">%1$s</xliff:g>ක්"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"ඒකාබද්ධ කිරීම සිදු වෙමින් පවතී"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect, Android පද්ධතිය සමග ඒකාබද්ධ වෙමින් පවතී.\n\nඔබේ දත්ත සහ අවසර මාරු කරන අතරතුර යම් කාලයක් ගත විය හැක."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"ක්‍රියාවලිය සම්පූර්ණ වූ බවට ඔබට දැනුම්දීමක් ලැබෙන තුරු යෙදුම නොවසන්න."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect ඒකාබද්ධ කිරීම සිදු වෙමින් පවතී"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"යාවත්කාලීනය අවශ්‍යයි"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect, Android පද්ධතිය සමග ඒකාබද්ධ වෙමින් පවතින බැවින් ඔබට ඔබේ සැකසීම් වෙතින් එයට සෘජුවම ප්‍රවේශ විය හැක."</string>
     <string name="update_button" msgid="4544529019832009496">"යාවත්කාලීන කරන්න"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Health Connect හට ඔබේ පද්ධති සැකසීම් සමග දිගටම ඒකාබද්ධ කළ හැකි පරිදි මෙම යාවත්කාලීනය ආරම්භ කරන්න"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"දැන් යාවත්කාලීන කරන්න"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"පද්ධති යාවත්කාලීනය අවශ්‍යයි"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"ඉදිරියට යාමට පෙර, ඔබේ දුරකථන පද්ධතිය යාවත්කාලීන කරන්න."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"ඔබ දැනටමත් ඔබේ දුරකථන පද්ධතිය යාවත්කාලීන කර ඇති නම්, දිගටම ඒකාබද්ධ කිරීමට ඔබේ දුරකථනය යළි ඇරඹීමට උත්සාහ කරන්න"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect යාවත්කාලීන කිරීම අවශ්‍යයි"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"ඉදිරියට යාමට පෙර, Health Connect යෙදුම නවතම අනුවාදයට යාවත්කාලීන කරන්න."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"තව ඉඩ අවශ්‍යයි"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"දිගටම ඒකාබද්ධ කිරීමට Health Connect හට ඔබේ දුරකථනයේ <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> ගබඩා ඉඩ අවශ්‍ය වෙයි.\n\nඔබේ දුරකථනයේ යම් ඉඩක් හිස් කර නැවත උත්සාහ කරන්න."</string>
     <string name="try_again_button" msgid="8745496819992160789">"නැවත උත්සාහ කරන්න"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"ඉඩ නිදහස් කර ගන්න"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"තව ඉඩ අවශ්‍යයි"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect හට දිගටම ඒකාබද්ධ කිරීමට ඔබේ දුරකථනයේ <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> ගබඩා ඉඩ අවශ්‍යයි."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"ඒකාබද්ධ කිරීම විරාම කරන ලදී"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect යෙදුම Android පද්ධතිය සමග ඒකාබද්ධ වෙමින් තිබියදී වැසුණා.\n\nයෙදුම නැවත විවෘත කර ඔබේ දත්ත සහ අවසර දිගටම මාරු කිරීමට නැවත පටන් ගන්න ක්ලික් කරන්න."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"ඔබේ Health Connect දත්ත තබා ගැනීමට මෙය <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ඇතුළත සම්පූර්ණ කරන්න"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connect, Android පද්ධතිය සමග දිගටම ඒකාබද්ධ කිරීමට තට්ටු කරන්න. ඔබේ දත්ත තබා ගැනීම සඳහා, මෙය <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ඇතුළත සම්පූර්ණ කරන්න"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connect, Android පද්ධතිය සමග දිගටම ඒකාබද්ධ කිරීමට තට්ටු කරන්න."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"ඉදිරියට යන්න"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect ඒකාබද්ධ කිරීම නැවත ආරම්භ කරන්න"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"ඔබේ දත්ත තබා ගැනීම සඳහා, මෙය <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ඇතුළත සම්පූර්ණ කරන්න"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"යෙදුම් යාවත්කාලීනය අවශ්‍යයි"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> Health Connect සමඟ සමමුහුර්ත කිරීම දිගටම කරගෙන යාමට යාවත්කාලීන කිරීමට අවශ්‍ය වේ. සියලු ම යෙදුම් සඳහා යාවත්කාලීන නොතිබිය හැක."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect සමග සමමුහුර්ත කිරීම දිගටම කරගෙන යාමට සමහර යෙදුම් යාවත්කාලීන කිරීමට අවශ්‍ය වේ. සියලු ම යෙදුම් සඳහා යාවත්කාලීන නොතිබිය හැක."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect ඒකාබද්ධ කිරීම සම්පූර්ණ නොවුණි"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"එය නැවත ලබා ගත හැකි වූ විට ඔබට දැනුම්දීමක් ලැබෙයි."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"තේරුණා"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect ඒකාබද්ධ කිරීම සම්පූර්ණ නොවුණි"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"තව කියවන්න"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect ඒකාබද්ධ කිරීම සම්පූර්ණයි"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"විවෘත කරන්න"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"අලුත් මොනවා ද"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"ඔබට දැන් ඔබේ සැකසීම්වලින් සෘජුවම Health Connect වෙත ප්‍රවේශ විය හැක. ගබඩා ඉඩ නිදහස් කර ගැනීමට ඕනෑම වේලාවක Health Connect යෙදුම අස්ථාපන කරන්න."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"තේරුණා"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ඔබේ ඔරලෝසුවේ ඇති සියලුම යෙදුම් සඳහා <xliff:g id="DATA_TYPE">%s</xliff:g> ප්‍රවේශය ඉවත් කරන්න ද?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"හරි ලකුණ"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"හරස් ලකුණ"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"දැනට, <xliff:g id="APP_NAME">%1$s</xliff:g> හට යෝග්‍යතා සහ සුවතා දත්ත වෙත ප්‍රවේශ විය හැක <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"සැම විට ම යෝග්‍යතා සහ සුවතා දත්ත වෙත <xliff:g id="APP_NAME">%1$s</xliff:g> හට ප්‍රවේශයට ඉඩ දෙන්න ද?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට <xliff:g id="DATA_TYPES">%2$s</xliff:g> වෙත ප්‍රවේශය ඇත."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"යෝග්‍යතා සහ සුවතා අවසර කළමනාකරණය කරන්න"</string>
 </resources>
