--- a/apk/res/values-sk/strings.xml
+++ b/apk/res/values-sk/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"teplota pokožky"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Čítať teplotu pokožky"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Zapisovať teplotu pokožky"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Týka sa to všetkých zdravotných záznamov, ktoré sú pridané do Dát o zdraví a synchronizované s nimi. Nemusí to byť váš úplný zdravotný záznam a nemusí obsahovať lekársky opis vašich zdravotných záznamov."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Všetky zdravotné záznamy"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"všetky zdravotné záznamy"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Zapisovať všetky zdravotné záznamy"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ak udelíte prístup, aplikácia bude môcť čítať a zapisovať údaje, ako sú alergie, výsledky laboratórnych vyšetrení, očkovania a ďalšie\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ak udelíte prístup, aplikácia bude môcť čítať údaje, ako sú alergie, výsledky laboratórnych vyšetrení, očkovania a ďalšie\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"O zdravotných záznamoch"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Údaje na zdieľanie zahŕňajú"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ak povolíte, <xliff:g id="APP_NAME">%1$s</xliff:g> bude môcť zdieľať vaše zdravotné záznamy s Dátami o zdraví."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Synchronizujte svoje zdravotné záznamy z rôznych aplikácií a zdrojov, aby ste ich mali na jednom mieste"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Chcete odstrániť všetky povolenia?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Hudba"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Iné"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Bez sprievodcu"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integruje sa"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Dáta o zdraví sa integrujú so systémom Android.\n\nPrenos vašich údajov a povolení môže chvíľu trvať."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Nezatvárajte aplikáciu, kým nedostanete upozornenie, že proces je dokončený."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Dáta o zdraví sa integrujú"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Vyžaduje sa aktualizácia"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Dáta o zdraví sa integrujú so systémom Android, aby ste k nim mali prístup priamo z nastavení."</string>
     <string name="update_button" msgid="4544529019832009496">"Aktualizovať"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Spustite túto aktualizáciu, aby mohla pokračovať integrácia Dát o zdraví s nastaveniami systému"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Aktualizovať"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Vyžaduje sa aktualizácia systému"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Než budete pokračovať, aktualizujte systém telefónu."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Ak ste systém telefónu už aktualizovali, skúste telefón reštartovať a pokračujte v integrácii"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Vyžaduje sa aktualizácia Dát o zdraví"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Než budete pokračovať, aktualizujte aplikáciu Dáta o zdraví na najnovšiu verziu."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Vyžaduje sa viac priestoru"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Dáta o zdraví vyžadujú, aby bolo v telefóne <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> priestoru, inak nebude možné v integrácii pokračovať.\n\nUvoľnite v telefóne priestor a skúste to znova."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Skúsiť znova"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Uvoľniť priestor"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Vyžaduje sa viac priestoru"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Dáta o zdraví vyžadujú, aby bolo v telefóne <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> priestoru, inak nebude možné v integrácii pokračovať."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrácia bola pozastavená"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikácia Dáta o zdraví sa počas integrácie so systémom Android zavrela.\n\nKliknutím na Obnoviť ju znova otvorte a pokračujte v prenose svojich údajov a povolení."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Ak si chcete svoje údaje Dát o zdraví ponechať, vykonajte tento krok do <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Klepnutím pokračujte v integrácii Dát o zdraví so systémom Android. Ak si chcete svoje údaje ponechať, vykonajte tento krok do <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Klepnutím pokračujte v integrácii Dát o zdraví so systémom Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Pokračovať"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Obnovte integráciu Dát o zdraví"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Ak si chcete svoje údaje ponechať, vykonajte tento krok do <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Vyžaduje sa aktualizácia aplikácie"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Ak chcete, aby sa údaje s Dátami o zdraví naďalej synchronizovali, musíte aktualizovať aplikáciu <xliff:g id="APP_NAME">%1$s</xliff:g>. Aktualizácie nemusia byť k dispozícii pre všetky aplikácie."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Ak chcete, aby sa údaje s Dátami o zdraví naďalej synchronizovali, musíte niektoré aplikácie aktualizovať. Aktualizácie nemusia byť k dispozícii pre všetky aplikácie."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integrácia Dát o zdraví nebola dokončená"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Keď bude znova k dispozícii, dostanete upozornenie."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Dobre"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integrácia Dát o zdraví nebola dokončená"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Ďalšie informácie"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integrácia Dát o zdraví je dokončená"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Otvoriť"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novinky"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Teraz máte prístup k Dátam o zdraví priamo v nastaveniach. Aplikáciu Dáta o zdraví môžete kedykoľvek aktualizovať a uvoľniť tak priestor."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Dobre"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Chcete odstrániť prístup k údajom typu <xliff:g id="DATA_TYPE">%s</xliff:g> všetkým aplikáciám v hodinkách?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Značka začiarknutia"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Krížik"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Momentálne má aplikácia <xliff:g id="APP_NAME">%1$s</xliff:g> prístup k údajom o kondícii a zdraví <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Chcete aplikácii <xliff:g id="APP_NAME">%1$s</xliff:g> povoliť nepretržitý prístup k údajom o kondícii a zdraví?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Aplikácia <xliff:g id="APP_NAME">%1$s</xliff:g> má prístup k údajom typu <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Spravovať povolenia týkajúce sa kondície a zdravia"</string>
 </resources>
