--- a/apk/res/values-sl/strings.xml
+++ b/apk/res/values-sl/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"temperatura kože"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Branje temperature kože"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Zapisovanje temperature kože"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"To vključuje vse zdravstvene evidence, sinhronizirane s storitvijo Health Connect in dodane vanjo. To morda ne obsega vaše celotne zdravstvene kartoteke in to ne vključuje medicinskega opisa vaših zdravstvenih evidenc."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Vse zdravstvene evidence"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"vse zdravstvene evidence"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Zapisovanje vseh zdravstvenih evidenc"</string>
@@ -791,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Glasba"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Drugo"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Nevodeno"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> m"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> h <xliff:g id="MIN">%2$s</xliff:g> min"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> h"</string>
@@ -1043,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integracija je v teku"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Aplikacijo Health Connect bomo integrirali s sistemom Android.\n\nPrenos podatkov in dovoljenj lahko traja nekaj časa."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Ne zaprite aplikacije, dokler ne prejmete obvestila o končanem postopku."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integracija aplikacije Health Connect je v teku"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Potrebna je posodobitev"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Aplikacijo Health Connect integriramo s sistemom Android, da boste do nje lahko dostopali neposredno v nastavitvah."</string>
     <string name="update_button" msgid="4544529019832009496">"Posodobi"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Začnite to posodobitev, da bo aplikacija Health Connect lahko nadaljevala integracijo s sistemskimi nastavitvami."</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Posodobite zdaj"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Potrebna je posodobitev sistema"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Pred nadaljevanjem posodobite sistem telefona."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Če ste že posodobili sistem telefona, poskusite znova zagnati telefon, da boste nadaljevali integracijo."</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Posodobiti morate Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Pred nadaljevanjem posodobite aplikacijo Health Connect na najnovejšo različico."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Potrebnega je več prostora"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect za nadaljevanje integracije potrebuje <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> prostora za shranjevanje v telefonu.\n\nSprostite nekaj prostora v telefonu in poskusite znova."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Poskusi znova"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Sprostite prostor"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Potrebnega je več prostora"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect za nadaljevanje integracije potrebuje <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> prostora za shranjevanje v telefonu."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integracija je začasno zaustavljena"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikacija Health Connect se je zaprla med integracijo s sistemom Android.\n\nKliknite »Nadaljuj«, da znova odprete aplikacijo ter nadaljujete s prenosom podatkov in dovoljenj."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Če želite obdržati podatke aplikacije Health Connect, to dokončajte v tem času: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
@@ -1070,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Dotaknite se za nadaljevanje integracije aplikacije Health Connect s sistemom Android. Če želite obdržati podatke, to dokončajte v tem času: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Dotaknite se za nadaljevanje integracije aplikacije Health Connect s sistemom Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Nadaljuj"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Nadaljujte integracijo aplikacije Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Če želite obdržati podatke, to dokončajte v tem času: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>."</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Posodobiti morate aplikacijo"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Aplikacijo <xliff:g id="APP_NAME">%1$s</xliff:g> je treba posodobiti, da se bo še naprej sinhronizirala s storitvijo Health Connect. Posodobitve morda niso na voljo za vse aplikacije."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Nekatere aplikacije je treba posodobiti, da se bodo še naprej sinhronizirale s storitvijo Health Connect. Posodobitve morda niso na voljo za vse aplikacije."</string>
@@ -1089,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integracija aplikacije Health Connect se ni dokončala"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Ko bo znova na voljo, boste prejeli obvestilo."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Razumem"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integracija aplikacije Health Connect se ni dokončala"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Več o tem"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integracija aplikacije Health Connect je dokončana"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Odpri"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Novosti"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Do aplikacije Health Connect lahko zdaj dostopate neposredno v nastavitvah. Aplikacijo Health Connect lahko kadar koli odmestite, da sprostite prostor za shranjevanje."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Razumem"</string>
@@ -1195,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Želite odstraniti dostop do dovoljenja »<xliff:g id="DATA_TYPE">%s</xliff:g>« za vse aplikacije v uri?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Kljukica"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Križec"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Trenutno lahko aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="ALLOW_MODE">%2$s</xliff:g> dostopa do podatkov o telesni pripravljenosti in počutju"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Želite aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> dovoliti stalen dostop do podatkov o telesni pripravljenosti in počutju?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ima dostop do teh vrst podatkov: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Upravljanje dovoljenj za podatke o telesni pripravljenosti in počutju"</string>
 </resources>
