--- a/apk/res/values-sq/strings.xml
+++ b/apk/res/values-sq/strings.xml
@@ -375,8 +375,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Nëse jep qasje, aplikacioni mund të lexojë dhe të shkruajë të dhënat si p.sh. alergjitë, rezultatet laboratorike, vaksinat etj.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Nëse jep qasje, aplikacioni mund të lexojë të dhënat si p.sh. alergjitë, rezultatet laboratorike, vaksinat etj.\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Rreth të dhënave shëndetësore"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Të dhënat për t\'i ndarë përfshijnë"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Nëse e lejon, <xliff:g id="APP_NAME">%1$s</xliff:g> mund të ndajë të dhënat e tua shëndetësore me Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Të sinkronizojë të dhënat e tua shëndetësore nga aplikacionet dhe burime të ndryshme për t\'i mbajtur në një vend të vetëm"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Të hiqen të gjitha lejet?"</string>
@@ -792,6 +791,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Muzikë"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Tjetër"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Pa udhëzime"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> min."</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> orë e <xliff:g id="MIN">%2$s</xliff:g> min."</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> orë"</string>
@@ -1044,23 +1047,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integrimi në proces"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect po integrohet me sistemin Android.\n\nMund të duhet pak kohë derisa të transferohen të dhënat dhe lejet."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Mos e mbyll aplikacionin derisa të marrësh një njoftim se procesi ka përfunduar."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Integrimi i Health Connect është në proces"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Nevojitet përditësimi"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect po integrohet me sistemin Android, në mënyrë që të mund të qasesh drejtpërdrejt nga cilësimet e tua."</string>
     <string name="update_button" msgid="4544529019832009496">"Përditëso"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Nise këtë përditësim në mënyrë që Health Connect të vazhdojë të integrohet me cilësimet e sistemit"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Përditëso tani"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Nevojitet përditësimi i sistemit"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Përpara se të vazhdosh, përditëso sistemin e telefonit."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Nëse e ke përditësuar tashmë sistemin e telefonit, provo ta rindezësh për të vazhduar integrimin"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Nevojitet përditësimi i Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Përpara se të vazhdosh, përditëso aplikacionin Health Connect në versionin më të fundit."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Nevojitet më shumë hapësirë"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect ka nevojë për <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> hapësirë ruajtëse në telefon për të vazhduar integrimin.\n\nLiro hapësirë telefon dhe provo sërish."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Provo përsëri"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Liro hapësirën"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Nevojitet më shumë hapësirë"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect ka nevojë për <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> hapësirë ruajtëse në telefon për të vazhduar integrimin."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integrimi u ndërpre"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Aplikacioni Health Connect u mbyll ndërsa po integrohej me sistemin Android.\n\nKliko \"rifillo\" për ta rihapur aplikacionin dhe për të vazhduar transferimin e të dhënave dhe të lejeve."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Për të ruajtur të dhënat e Health Connect, kryeje këtë brenda <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1069,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Trokit për të vazhduar integrimin e Health Connect me sistemin Android. Për të ruajtur të dhënat e tua, kryeje këtë brenda kësaj kohe: <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Trokit për të vazhduar integrimin e Health Connect me sistemin Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Vazhdo"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Rifillo integrimin e Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Për të ruajtur të dhënat e tua, kryeje këtë brenda <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Nevojitet përditësimi i aplikacioneve"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> duhet të përditësohet për të vazhduar sinkronizimin me Health Connect. Përditësimet mund të mos ofrohen për të gjitha aplikacionet."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Disa aplikacione duhet të përditësohen për të vazhduar sinkronizimin me Health Connect. Përditësimet mund të mos ofrohen për të gjitha aplikacionet."</string>
@@ -1090,10 +1086,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Integrimi i Health Connect nuk u krye"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Do të marrësh një njoftim kur të bëhet sërish i disponueshëm."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"E kuptova"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Integrimi i Health Connect nuk u krye"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Lexo më shumë"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Integrimi i Health Connect përfundoi"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Hap"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Ç\'të reja ka"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Tani mund të qasesh te Health Connect drejtpërdrejt nga cilësimet e tua. Çinstalo aplikacionin Health Connect në çdo kohë për të liruar hapësirë ruajtëse."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"E kuptova"</string>
