--- a/apk/res/values-sr/strings.xml
+++ b/apk/res/values-sr/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура коже"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Читај податке о температури коже"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Уписуј податке о температури коже"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"То обухвата сву здравствену евиденцију која је синхронизована са Повезивањем здравља и додата у њега. Ово можда није комплетна медицинска евиденција и не садржи медицински опис здравствене евиденције."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Сва здравствена евиденција"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"сва здравствена евиденција"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Уписивање све здравствене евиденције"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Ако дате приступ, апликација може да чита и уписује податке, на пример, алергије, лабораторијске резултате, вакцине и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Ако дате приступ, апликација може да чита податке, на пример, алергије, лабораторијске резултате, вакцине и друго\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"О здравственој евиденцији"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Подаци за дељење обухватају"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Ако дозволите, <xliff:g id="APP_NAME">%1$s</xliff:g> може да дели вашу здравствену евиденцију са Повезивањем здравља."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронизујте здравствену евиденцију из различитих апликација и извора да бисте је држали на једном месту"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Желите да уклоните све дозволе?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Музика"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Друго"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Без вођења"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> мин"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> с <xliff:g id="MIN">%2$s</xliff:g> мин"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> с"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Интеграција је у току"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Повезивање здравља се интегрише са Android системом.\n\nМоже да прође извесно време док се подаци и дозволе пренесу."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Не затварајте апликацију док не добијете обавештење да је процес довршен."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Интеграција Повезивања здравља је у току"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Потребно је ажурирање"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Повезивање здравља се интегрише са Android системом да бисте могли директно да му приступате из подешавања."</string>
     <string name="update_button" msgid="4544529019832009496">"Ажурирај"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Започните ово ажурирање да би Повезивање здравља могло да настави интеграцију са подешавањима система"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Ажурирај"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Потребно је ажурирање система"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Пре него што наставите, ажурирајте систем телефона."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Ако сте већ ажурирали систем телефона, пробајте да рестартујете телефон како бисте наставили интеграцију"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Потребно је ажурирање Повезивања здравља"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Пре него што наставите, ажурирајте апликацију Повезивање здравља на најновију верзију."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Потребно је још простора"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Повезивању здравља треба <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> меморијског простора на телефону да би се интеграција наставила.\n\nОслободите нешто простора на телефону и пробајте поново."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Пробај поново"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Ослободи простор"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Потребно је још простора"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Повезивању здравља треба <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> меморијског простора на телефону да би наставило интегрисање."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Интеграција је паузирана"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Апликација Повезивање здравља се затворила док је трајала њена интеграција са Android системом.\n\nКликните на Настави да бисте поново отворили апликацију и наставили да преносите податке и дозволе."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Да бисте задржали податке Повезивања здравља, довршите ово у року од <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Додирните да бисте наставили интеграцију Повезивања здравља са Android системом. Да бисте задржали податке, довршите ово у року од <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Додирните да бисте наставили интеграцију Повезивања здравља са Android системом."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Настави"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Наставите интеграцију Повезивања здравља"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Да бисте задржали податке, довршите ово у року од <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Треба да ажурирате апликацију"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"<xliff:g id="APP_NAME">%1$s</xliff:g> треба да се ажурира како бисте наставили синхронизацију са Повезивањем здравља. Ажурирања можда нису доступна за све апликације."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Треба да ажурирате неке апликације како бисте наставили синхронизацију са Повезивањем здравља. Ажурирања можда нису доступна за све апликације."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Интеграција Повезивања здравља није довршена"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Добићете обавештење када поново постане доступна."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"Важи"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Интеграција Повезивања здравља није довршена"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Прочитајте више"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Интеграција Повезивања здравља је довршена"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Отвори"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Шта је ново"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Сада можете да приступате Повезивању здравља директно из подешавања. Деинсталирајте апликацију Повезивање здравља у било ком тренутку да бисте ослободили меморијски простор."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"Важи"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Желите да уклоните приступ подацима (<xliff:g id="DATA_TYPE">%s</xliff:g>) свим апликацијама на сату?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Знак потврде"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Знак x"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Тренутно, <xliff:g id="APP_NAME">%1$s</xliff:g> може да приступа подацима о фитнесу и велнесу <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Желите да дозволите да <xliff:g id="APP_NAME">%1$s</xliff:g> стално приступа подацима о фитнесу и велнесу?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> има приступ за: <xliff:g id="DATA_TYPES">%2$s</xliff:g>"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Управљај дозволама за фитнес и велнес"</string>
 </resources>
