--- a/apk/res/values-uk/strings.xml
+++ b/apk/res/values-uk/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"температура шкіри"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Переглядати температуру шкіри"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Записувати температуру шкіри"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Це стосується всієї інформації про здоров’я, синхронізованої з Health Connect і доданої в цей сервіс. Це не обов’язково має бути ваша повна медична карта й медичний опис інформації про здоров’я."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Усі медичні дані"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"усі медичні дані"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Записувати всі медичні дані"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"Якщо ви надасте доступ, додаток зможе переглядати й записувати такі дані, як відомості про алергії, результати аналізів, щеплення тощо\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"Якщо ви надасте доступ, додаток зможе переглядати такі дані, як відомості про алергії, результати аналізів, щеплення тощо\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"Про медичні дані"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"Приклади даних, що передаватимуться"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"Якщо ви надасте дозвіл, додаток <xliff:g id="APP_NAME">%1$s</xliff:g> зможе надсилати медичні дані в Health Connect."</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"Синхронізуйте медичні дані з різних додатків і джерел, щоб централізовано зберігати їх"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"Вилучити всі дозволи?"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Музика"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Інше"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Самостійна медитація"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> хв"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> год <xliff:g id="MIN">%2$s</xliff:g> хв"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> год"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Триває інтеграція"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect інтегрується із системою Android.\n\nПеренесення ваших даних і дозволів може зайняти деякий час."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Не закривайте додаток, доки не отримаєте сповіщення про завершення."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Триває інтеграція Health Connect"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Потрібне оновлення"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Сервіс Health Connect інтегрується із системою Android, щоб ви могли отримувати доступ до нього просто з налаштувань."</string>
     <string name="update_button" msgid="4544529019832009496">"Оновити"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Установіть це оновлення, щоб продовжити інтеграцію Health Connect із налаштуваннями вашої системи"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Оновити"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Потрібно оновити систему"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Перш ніж продовжити, оновіть операційну систему телефона."</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Якщо на вашому телефоні встановлено найновішу версію ОС, спробуйте перезавантажити його, щоб продовжити інтеграцію"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Потрібно оновити Health Connect"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Перш ніж продовжити, оновіть додаток Health Connect до останньої версії."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Потрібно більше пам’яті"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Щоб продовжити інтеграцію, Health Connect потрібно <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> вільної пам’яті на вашому телефоні.\n\nЗвільніть місце на телефоні й повторіть спробу."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Повторити спробу"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Звільнити місце"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Потрібно більше пам’яті"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Щоб продовжити інтеграцію, Health Connect потрібно <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> вільної пам’яті на вашому телефоні"</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Інтеграцію призупинено"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Додаток Health Connect закрито під час інтеграції із системою Android.\n\nНатисніть \"Відновити\", щоб повторно відкрити додаток і продовжити перенесення даних та дозволів."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Щоб зберегти дані Health Connect, завершіть перенесення протягом періоду в <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Торкніться, щоб продовжити інтеграцію Health Connect із системою Android. Щоб зберегти свої дані, у вас є <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Торкніться, щоб продовжити інтеграцію Health Connect із системою Android."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Продовжити"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Відновіть інтеграцію Health Connect"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Щоб зберегти свої дані, завершіть перенесення протягом періоду в <xliff:g id="TIME_NEEDED">%1$s</xliff:g>"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Оновіть додаток"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> потрібно оновити, щоб він і надалі синхронізувався з Health Connect. Оновлення можуть бути доступні не для всіх додатків."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Деякі додатки потрібно оновити, щоб вони й надалі синхронізувалися з Health Connect. Оновлення можуть бути доступні не для всіх додатків."</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Інтеграцію Health Connect не завершено"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Ви отримаєте сповіщення, коли інтеграція знову стане доступною."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Інтеграцію Health Connect не завершено"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Читати повністю"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Інтеграцію Health Connect завершено"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Відкрити"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Що нового"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Тепер ви можете відкривати Health Connect просто в налаштуваннях. Додаток Health Connect можна будь-коли видалити, щоб звільнити місце в пам’яті."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Скасувати доступ до даних \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" для всіх додатків на годиннику?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Прапорець"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Хрестик"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Наразі додаток <xliff:g id="APP_NAME">%1$s</xliff:g> може отримувати доступ до даних про фізичну активність і здоров’я <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Завжди дозволяти додатку <xliff:g id="APP_NAME">%1$s</xliff:g> доступ до даних про фізичну активність і здоров’я?"</string>
+    <string name="current_access" msgid="1457167070428176139">"Додаток <xliff:g id="APP_NAME">%1$s</xliff:g> має доступ до таких даних: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Керувати дозволами на доступ до даних про активність і здоров’я"</string>
 </resources>
