--- a/apk/res/values-uz/strings.xml
+++ b/apk/res/values-uz/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"tana harorati"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Tana haroratini oʻqish uchun ruxsat"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Tana harorati haqida maʼlumotlarni yozish"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"Bunga Health Connect ilovasiga sinxronlangan va qoʻshilgan barcha tibbiy qaydlar kiradi. Bu toʻliq tibbiy qaydingiz bo‘lmasligi mumkin va tibbiy qaydingiz tavsifini oʻz ichiga olmaydi."</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"Barcha tibbiy qaydlar"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"barcha tibbiy qaydlar"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"Barcha tibbiy qaydlarni yozish"</string>
@@ -791,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"Musiqa"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"Boshqa"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"Boshqaruvsiz"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> d"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> st <xliff:g id="MIN">%2$s</xliff:g> d"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> st"</string>
@@ -1043,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"Integratsiya davom etmoqda"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"Health Connect ilovasi Android tizimi bilan integratsiya qilinmoqda.\n\nMaʼlumotlaringiz va ruxsatlaringiz uzatilishi biroz vaqt olishi mumkin."</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"Jarayon tugaganligi haqida bildirishnoma olmaguningizcha ilovani yopmang."</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"Health Connect integratsiyasi davom etmoqda"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"Yangilash zarur"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"Health Connect Android tizimi bilan integratsiya qilinmoqda, shuning uchun siz unga sozlamalaringiz orqali bevosita kirishingiz mumkin."</string>
     <string name="update_button" msgid="4544529019832009496">"Yangilash"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"Health Connect tizim sozlamalari bilan integratsiyani davom ettirishi uchun ushbu yangilanishni boshlang"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"Hoziroq yangilash"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"Tizimni yangilash zarur"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"Davom etishdan oldin telefon tizimingizni yangilang"</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"Agar telefoningiz tizimini allaqachon yangilagan boʻlsangiz, integratsiyani davom etish uchun telefoningizni qayta yoqing"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"Health Connect yangilanishi kerak"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"Davom etishdan oldin Health Connect ilovasini eng oxirgi versiyaga yangilang."</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"Xotirada koʻproq joy kerak"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"Health Connect ilovasini integratsiya qilish uchun unga telefoningizdagi xotiradan <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> joy kerak.\n\nTelefoningizda biroz joy oching, keyin qaytadan urining."</string>
     <string name="try_again_button" msgid="8745496819992160789">"Qayta urinish"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"Xotiradan joy ochish"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"Xotirada koʻproq joy kerak"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"Health Connect ilovasini integratsiya qilish uchun unga telefoningizdagi xotiradan <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> joy kerak."</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"Integratsiya pauza qilindi"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"Health Connect ilovasi Android tizimi bilan integratsiya qilinayotganda yopildi.\n\nIlovani qayta ochish hamda maʼlumotlar va ruxsatlarni uzatishda davom etish uchun “Davom etish” tugmasini bosing."</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"Health Connect maʼlumotlaringizni saqlab qolish uchun buni <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ichida tamomlashingiz kerak"</string>
@@ -1070,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"Health Connect ilovasini Android tizimi bilan integratsiya qilishni davom ettirish uchun bosing. Maʼlumotlaringizni saqlab qolish uchun buni <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ichida tamomlashingiz kerak"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"Health Connect ilovasini Android tizimi bilan integratsiya qilishni davom ettirish uchun bosing."</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"Davom etish"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"Health Connect integratsiyasini davom ettiring"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"Maʼlumotlaringizni saqlab qolish uchun buni <xliff:g id="TIME_NEEDED">%1$s</xliff:g> ichida tamomlashingiz kerak"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"Ilovani yangilash zarur"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"Health Connect bilan sinxronlashda davom etish uchun <xliff:g id="APP_NAME">%1$s</xliff:g> yangilanishi kerak. Yangilanishlar barcha ilovalar uchun chiqmasligi mumkin."</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"Health Connect bilan sinxronlashda davom etish uchun ayrim ilovalar yangilanishi kerak. Yangilanishlar barcha ilovalar uchun chiqmasligi mumkin."</string>
@@ -1089,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"Health Connect integratsiyasi tamomlanmadi"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"Qayta ishga tushirilganda sizga bildirishnoma yuboriladi."</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"OK"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"Health Connect integratsiyasi tamomlanmadi"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"Batafsil"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"Health Connect integratsiya tamomlandi"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"Ochish"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"Nima yangiliklar"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"Endi Health Connect ilovasidan bevosita sozlamalar orqali foydalanishingiz mumkin. Xotirada joy ochish uchun istalgan vaqt Health Connect ilovasini oʻchirib tashlash mumkin."</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"OK"</string>
@@ -1195,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Soatdagi barcha ilovalarga quyidagi axborotlardan foydalanish ruxsati yopilsinmi: <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Tanlov belgisi"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Xoch belgisi"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"Hozirda <xliff:g id="APP_NAME">%1$s</xliff:g> ilovasi salomatlik va fitnes maʼlumotlaridan <xliff:g id="ALLOW_MODE">%2$s</xliff:g> foydalanishi mumkin"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasiga har doim fitnes va salomatlik axborotidan foydalanishga ruxsat berilsinmi?"</string>
+    <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ilovasining bunga ruxsati bor: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Fitnes va salomatlik ruxsatlarini boshqarish"</string>
 </resources>
