--- a/apk/res/values-zh-rTW/strings.xml
+++ b/apk/res/values-zh-rTW/strings.xml
@@ -312,8 +312,7 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"皮膚溫度"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"讀取皮膚溫度"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"寫入皮膚溫度"</string>
-    <!-- no translation found for browse_health_records_intro (1611488691642390523) -->
-    <skip />
+    <string name="browse_health_records_intro" msgid="1611488691642390523">"這包括所有已同步和新增至「健康資料同步」的健康記錄。這可能不是完整病歷，也不包含健康記錄的醫療說明。"</string>
     <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"所有健康記錄"</string>
     <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"所有健康記錄"</string>
     <string name="all_medical_data_content_description" msgid="4846586780533295022">"寫入所有健康記錄"</string>
@@ -375,8 +374,7 @@
     <string name="medical_request_header_access_info_read_write" msgid="221400464566148357">"如果授予存取權，這個應用程式就能讀取及寫入過敏、檢驗結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_header_access_info_read" msgid="7817630833626125558">"如果授予存取權，這個應用程式就能讀取過敏、檢驗結果、疫苗接種等資料\n<xliff:g id="ABOUT_HEALTH_RECORDS_LINK">%1$s</xliff:g>"</string>
     <string name="medical_request_about_health_records" msgid="7204918218748362687">"關於健康記錄"</string>
-    <!-- no translation found for medical_request_data_to_share (6778034304921873317) -->
-    <skip />
+    <string name="medical_request_data_to_share" msgid="6778034304921873317">"共用的資料包括"</string>
     <string name="medical_request_summary" msgid="7281321524805015510">"如果允許，「<xliff:g id="APP_NAME">%1$s</xliff:g>」就可以將你的健康記錄提供給「健康資料同步」。"</string>
     <string name="medical_request_footer" msgid="6533749932770903089">"同步處理來自不同應用程式和來源的健康記錄，集中存放這些資料"</string>
     <string name="permissions_disconnect_dialog_title" msgid="7355211540619034695">"要移除所有權限嗎？"</string>
@@ -792,6 +790,10 @@
     <string name="mindfulness_type_music" msgid="7041364137895485917">"音樂"</string>
     <string name="mindfulness_type_other" msgid="793524328911038908">"其他"</string>
     <string name="mindfulness_type_unguided" msgid="2367259868577157922">"未引導"</string>
+    <!-- no translation found for activity_intensity_type_moderate (7974792315871109564) -->
+    <skip />
+    <!-- no translation found for activity_intensity_type_vigorous (5651020560923780330) -->
+    <skip />
     <string name="minute_duration" msgid="9035288227090160206">"<xliff:g id="MINUTE">%1$s</xliff:g> 分鐘"</string>
     <string name="hour_minute_duration_short" msgid="6862483734123680444">"<xliff:g id="HOUR">%1$s</xliff:g> 小時 <xliff:g id="MIN">%2$s</xliff:g> 分鐘"</string>
     <string name="hour_duration" msgid="3472489613837138711">"<xliff:g id="HOUR">%1$s</xliff:g> 小時"</string>
@@ -1044,23 +1046,18 @@
     <string name="migration_in_progress_screen_title" msgid="6564515269988205874">"整合中"</string>
     <string name="migration_in_progress_screen_integration_details" msgid="5916989113111973466">"「健康資料同步」正在與 Android 系統整合。\n\n系統轉移資料和權限時可能需要一些時間。"</string>
     <string name="migration_in_progress_screen_integration_dont_close" msgid="2095732208438772444">"收到程序完成的通知之前，請不要關閉應用程式。"</string>
-    <string name="migration_in_progress_notification_title" msgid="8873411008158407737">"「健康資料同步」整合中"</string>
     <string name="migration_update_needed_screen_title" msgid="3260466598312877429">"需要更新"</string>
     <string name="migration_update_needed_screen_details" msgid="7984745102006782603">"「健康資料同步」正在與 Android 系統整合，方便你直接從設定頁面存取。"</string>
     <string name="update_button" msgid="4544529019832009496">"更新"</string>
     <string name="migration_update_needed_notification_content" msgid="478899618719297517">"開始執行這項更新作業，讓「健康資料同步」能夠繼續與系統設定整合"</string>
-    <string name="migration_update_needed_notification_action" msgid="1219223694165492000">"立即更新"</string>
     <string name="migration_module_update_needed_notification_title" msgid="5428523284357105379">"需要完成系統更新"</string>
     <string name="migration_module_update_needed_action" msgid="7211167950758064289">"繼續操作前，請更新你的手機系統。"</string>
     <string name="migration_module_update_needed_restart" msgid="1246884613546321798">"如果你已更新手機系統，請嘗試重新啟動手機，繼續進行整合"</string>
-    <string name="migration_app_update_needed_notification_title" msgid="8971076370900025444">"「健康資料同步」需要更新"</string>
     <string name="migration_app_update_needed_action" msgid="3289432528592774601">"繼續操作前，請將「健康資料同步」應用程式更新到最新版本。"</string>
     <string name="migration_more_space_needed_screen_title" msgid="1535473230886051579">"需要更多空間"</string>
     <string name="migration_more_space_needed_screen_details" msgid="621140247825603412">"「健康資料同步」需要 <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> 的手機儲存空間才能繼續整合。\n\n請在手機上清出一些空間，然後再試一次。"</string>
     <string name="try_again_button" msgid="8745496819992160789">"再試一次"</string>
     <string name="free_up_space_button" msgid="4141013808635654695">"釋出空間"</string>
-    <string name="migration_more_space_needed_notification_title" msgid="8238155395120107672">"需要更多空間"</string>
-    <string name="migration_more_space_needed_notification_content" msgid="4034728181940567836">"「健康資料同步」需要 <xliff:g id="SPACE_NEEDED">%1$s</xliff:g> 的手機儲存空間才能繼續整合。"</string>
     <string name="migration_paused_screen_title" msgid="8041170155372429894">"已暫停整合"</string>
     <string name="migration_paused_screen_details" msgid="5898311710030340187">"「健康資料同步」應用程式在與 Android 系統整合時關閉了。\n\n請按一下「繼續」重新開啟應用程式，繼續轉移資料和權限。"</string>
     <string name="migration_paused_screen_details_timeout" msgid="353768000785837394">"為了保留你的「健康資料同步」資料，請在 <xliff:g id="TIME_NEEDED">%1$s</xliff:g>內完成這項操作"</string>
@@ -1071,8 +1068,6 @@
     <string name="resume_migration_banner_description" msgid="6236230413670826036">"輕觸一下即可繼續讓「健康資料同步」與 Android 系統整合。為了保留你的資料，請在 <xliff:g id="TIME_NEEDED">%1$s</xliff:g>內完成這項操作"</string>
     <string name="resume_migration_banner_description_fallback" msgid="6060444898839211883">"輕觸一下即可繼續讓「健康資料同步」與 Android 系統整合。"</string>
     <string name="resume_migration_banner_button" msgid="2112318760107756469">"繼續"</string>
-    <string name="resume_migration_notification_title" msgid="8859575633668908327">"繼續整合「健康資料同步」"</string>
-    <string name="resume_migration_notification_content" msgid="46172108837648715">"為了保留你的資料，請在 <xliff:g id="TIME_NEEDED">%1$s</xliff:g>內完成這項操作"</string>
     <string name="app_update_needed_banner_title" msgid="4724335956851853802">"應用程式需要更新"</string>
     <string name="app_update_needed_banner_description_single" msgid="8220676317438592573">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」需要更新，才能繼續與「健康資料同步」保持同步。部分應用程式可能無法更新。"</string>
     <string name="app_update_needed_banner_description_multiple" msgid="6021498912770754575">"部分應用程式需要更新，才能繼續與「健康資料同步」保持同步。部分應用程式可能無法更新。"</string>
@@ -1090,10 +1085,6 @@
     <string name="migration_not_complete_dialog_title" msgid="3725576338159027149">"「健康資料同步」未完成整合"</string>
     <string name="migration_not_complete_dialog_content" msgid="4992771587233088606">"你會在能夠再次整合時收到通知。"</string>
     <string name="migration_not_complete_dialog_button" msgid="3271842109680807482">"我知道了"</string>
-    <string name="migration_not_complete_notification_title" msgid="7392885522310227293">"「健康資料同步」未完成整合"</string>
-    <string name="migration_not_complete_notification_action" msgid="757041885992445657">"閱讀完整內容"</string>
-    <string name="migration_complete_notification_title" msgid="4988631739109332404">"「健康資料同步」整合完成"</string>
-    <string name="migration_complete_notification_action" msgid="5350322865206331186">"開啟"</string>
     <string name="migration_whats_new_dialog_title" msgid="2349465358457105228">"新功能"</string>
     <string name="migration_whats_new_dialog_content" msgid="1271560399054864488">"你現在可以直接從設定頁面存取「健康資料同步」，也可以隨時解除安裝「健康資料同步」應用程式，釋出儲存空間。"</string>
     <string name="migration_whats_new_dialog_button" msgid="642575552457587805">"我知道了"</string>
@@ -1196,12 +1187,8 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"要移除手錶上所有應用程式的<xliff:g id="DATA_TYPE">%s</xliff:g>存取權嗎？"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"勾號"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"叉號"</string>
-    <!-- no translation found for current_allow_mode (6716206063077569218) -->
-    <skip />
-    <!-- no translation found for allow_all_the_time_prompt (5625132426961157398) -->
-    <skip />
-    <!-- no translation found for current_access (1457167070428176139) -->
-    <skip />
-    <!-- no translation found for manage_fitness_and_wellness_permissions (6198936108436598267) -->
-    <skip />
+    <string name="current_allow_mode" msgid="6716206063077569218">"目前，「<xliff:g id="APP_NAME">%1$s</xliff:g>」可以存取健身與健康資料 <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」隨時存取健身與健康資料嗎？"</string>
+    <string name="current_access" msgid="1457167070428176139">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」可以存取<xliff:g id="DATA_TYPES">%2$s</xliff:g>。"</string>
+    <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"管理健身與健康權限"</string>
 </resources>
